@@ -1,22 +1,25 @@
 // Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.tools.build.bazel.jvmIncBuilder.impl.graph;
 
-import com.github.benmanes.caffeine.cache.Caffeine;
-import com.github.benmanes.caffeine.cache.LoadingCache;
-import it.unimi.dsi.fastutil.ints.Int2ObjectMap;
-import it.unimi.dsi.fastutil.ints.Int2ObjectOpenHashMap;
-import it.unimi.dsi.fastutil.objects.Object2IntMap;
-import it.unimi.dsi.fastutil.objects.Object2IntOpenHashMap;
+import org.h2.mvstore.FileStore;
 import org.h2.mvstore.MVMap;
 import org.h2.mvstore.MVStore;
 import org.h2.mvstore.WriteBuffer;
 import org.h2.mvstore.type.BasicDataType;
 import org.jetbrains.annotations.Nullable;
-import org.jetbrains.jps.dependency.*;
+import org.jetbrains.jps.dependency.ComparableTypeExternalizer;
+import org.jetbrains.jps.dependency.Enumerator;
+import org.jetbrains.jps.dependency.Maplet;
+import org.jetbrains.jps.dependency.MapletFactory;
+import org.jetbrains.jps.dependency.MultiMaplet;
+import org.jetbrains.jps.dependency.ReferenceID;
+import org.jetbrains.jps.dependency.Usage;
 import org.jetbrains.jps.dependency.impl.CachingMaplet;
 import org.jetbrains.jps.dependency.impl.CachingMultiMaplet;
 import org.jetbrains.jps.dependency.impl.GraphDataInputImpl;
 import org.jetbrains.jps.dependency.impl.GraphDataOutputImpl;
+import org.jetbrains.jps.dependency.impl.GraphElementInterner;
+import org.jetbrains.jps.dependency.impl.ObjectEnumerator;
 
 import java.io.Closeable;
 import java.io.Flushable;
@@ -29,20 +32,20 @@ import java.util.Map;
 import java.util.Set;
 import java.util.function.Function;
 
+import static org.jetbrains.jps.util.Iterators.map;
+
 // suitable for relatively small amounts of stored data
 public final class PersistentMVStoreMapletFactory implements MapletFactory, Closeable, Flushable {
   private static final int BASE_CACHE_SIZE = 512;
-  private static final int ALLOWED_STORE_COMPACTION_TIME_MS = -1; // -1 for full-compact, 0 to disable compaction
   private final MVSEnumerator myEnumerator;
   private final Function<Object, Object> myDataInterner;
-  private final LoadingCache<Object, Object> myInternerCache;
-  //private final LoadingCache<String, String> myStringsInternerCache;
   private final int myCacheSize;
   private final MVStore myStore;
 
+  private final long myInitialVersion;
+
   public PersistentMVStoreMapletFactory(String filePath, int maxBuilderThreads) throws IOException {
     Files.createDirectories(Path.of(filePath).getParent());
-    // todo: need transaction store for transactions?
     myStore = new MVStore.Builder()
       .fileName(filePath)
       .autoCommitDisabled() // all read-write operations are expected to be initiated via Graph APIs, otherwise deadlocks are possible because of incorrect lock acquisition sequence
@@ -51,15 +54,21 @@ public final class PersistentMVStoreMapletFactory implements MapletFactory, Clos
       .cacheConcurrency(getConcurrencyLevel(maxBuilderThreads))
       .open();
     myStore.setVersionsToKeep(0);
-
+    myInitialVersion = myStore.getCurrentVersion();
     // MVStore counter-based enumerator?
     myEnumerator = new MVSEnumerator(myStore);
     final int maxGb = (int) (Runtime.getRuntime().maxMemory() / 1_073_741_824L);
-    myCacheSize = BASE_CACHE_SIZE * Math.min(Math.max(1, maxGb), 5); // increase by BASE_CACHE_SIZE for every additional Gb
+    myCacheSize = BASE_CACHE_SIZE * Math.clamp(maxGb, 1, 5); // increase by BASE_CACHE_SIZE for every additional Gb
 
-    myInternerCache = Caffeine.newBuilder().maximumSize(myCacheSize).build(key -> key);
-    //myStringsInternerCache = Caffeine.newBuilder().maximumSize(myCacheSize).build(key -> key);
-    myDataInterner = elem -> elem instanceof Usage? myInternerCache.get(elem) : /*elem instanceof String? myStringsInternerCache.get((String) elem) :*/ elem;
+    myDataInterner = elem -> {
+      if (elem instanceof Usage) {
+        return GraphElementInterner.intern((Usage)elem);
+      }
+      if (elem instanceof ReferenceID) {
+        return GraphElementInterner.intern((ReferenceID)elem);
+      }
+      return elem;
+    };
   }
 
   private static int getConcurrencyLevel(int builderThreads) {
@@ -71,8 +80,12 @@ public final class PersistentMVStoreMapletFactory implements MapletFactory, Clos
     return result;
   }
 
+  public boolean hasUpdates() {
+    return myInitialVersion != myStore.getCurrentVersion();
+  }
+
   @Override
-  public <K, V> MultiMaplet<K, V> createSetMultiMaplet(String storageName, Externalizer<K> keyExternalizer, Externalizer<V> valueExternalizer) {
+  public <K, V> MultiMaplet<K, V> createSetMultiMaplet(String storageName, ComparableTypeExternalizer<K> keyExternalizer, ComparableTypeExternalizer<V> valueExternalizer) {
     PersistentMVStoreMultiMaplet<K, V, Set<V>> maplet = new PersistentMVStoreMultiMaplet<K, V, Set<V>>(
       myStore, storageName, new GraphDataType<>(keyExternalizer, myEnumerator, myDataInterner), new GraphDataType<>(valueExternalizer, myEnumerator, myDataInterner), HashSet::new, Set[]::new
     );
@@ -80,7 +93,7 @@ public final class PersistentMVStoreMapletFactory implements MapletFactory, Clos
   }
 
   @Override
-  public <K, V> Maplet<K, V> createMaplet(String storageName, Externalizer<K> keyExternalizer, Externalizer<V> valueExternalizer) {
+  public <K, V> Maplet<K, V> createMaplet(String storageName, ComparableTypeExternalizer<K> keyExternalizer, ComparableTypeExternalizer<V> valueExternalizer) {
     PersistentMVStoreMaplet<K, V> maplet = new PersistentMVStoreMaplet<>(
       myStore, storageName, new GraphDataType<>(keyExternalizer, myEnumerator, myDataInterner), new GraphDataType<>(valueExternalizer, myEnumerator, myDataInterner)
     );
@@ -89,14 +102,30 @@ public final class PersistentMVStoreMapletFactory implements MapletFactory, Clos
 
   @Override
   public void close() {
-    try {
-      myStore.commit();// first commit all open maps, that might use enumerator for serialization
-      myEnumerator.flush(); // save enumerator state
-      myStore.close(ALLOWED_STORE_COMPACTION_TIME_MS); // completely close the store commiting the rest of unsaved data
+    myStore.commit();// first commit all open maps, that might use enumerator for serialization
+    myEnumerator.flush(); // save enumerator state
+    myStore.close(getCompactionTimeMs()); // completely close the store commiting the rest of unsaved data
+  }
+
+  /*
+  Dynamically calculated max allowed compaction time based on storage fragmentation rate
+  special values: -1 for full-compact, 0 to disable compaction
+  */
+  private int getCompactionTimeMs() {
+    FileStore<?> fileStore = myStore.getFileStore();
+    int fileFillRate = fileStore.getFillRate();        // File space utilization
+    int chunkFillRate = fileStore.getChunksFillRate(); // Chunk packing efficiency
+
+    if (fileFillRate > 80 && chunkFillRate > 80) {
+      // File and chunks well utilized, no compaction
+      return 0;
     }
-    finally {
-      myInternerCache.invalidateAll();
+    if (fileFillRate > 60 && chunkFillRate > 60) {
+      // Moderate fragmentation
+      return 100;
     }
+    // High fragmentation
+    return 300;
   }
 
   @Override
@@ -110,11 +139,11 @@ public final class PersistentMVStoreMapletFactory implements MapletFactory, Clos
   }
 
   private static class GraphDataType<T> extends BasicDataType<T> {
-    private final Externalizer<T> myExternalizer;
+    private final ComparableTypeExternalizer<T> myExternalizer;
     private final @Nullable Enumerator myEnumerator;
     private final @Nullable Function<Object, Object> myObjectInterner;
 
-    GraphDataType(Externalizer<T> externalizer, @Nullable Enumerator enumerator, @Nullable Function<Object, Object> objectInterner) {
+    GraphDataType(ComparableTypeExternalizer<T> externalizer, @Nullable Enumerator enumerator, @Nullable Function<Object, Object> objectInterner) {
       myExternalizer = externalizer;
       myEnumerator = enumerator;
       myObjectInterner = objectInterner;
@@ -122,7 +151,7 @@ public final class PersistentMVStoreMapletFactory implements MapletFactory, Clos
 
     @Override
     public int compare(T a, T b) {
-      return a.toString().compareTo(b.toString());
+      return myExternalizer.compare(a, b);
     }
 
     @Override
@@ -162,49 +191,39 @@ public final class PersistentMVStoreMapletFactory implements MapletFactory, Clos
   }
 
   private static final class MVSEnumerator implements Enumerator {
-    private final Object2IntMap<String> myToIntMap = new Object2IntOpenHashMap<>();
-    private final Int2ObjectMap<String> myToStringMap = new Int2ObjectOpenHashMap<>();
-    private final MVMap<String, Integer> myStoreMap;
-    private Object2IntMap<String> myDelta = new Object2IntOpenHashMap<>();
+    private final ObjectEnumerator<String> myEnumerator;
+    // MVMap is a sorted map implementation using a B+ tree. Keys are sorted in their natural ordering.
+    private final MVMap<Integer, String> myStoreMap;
 
     MVSEnumerator(MVStore store) {
       myStoreMap = store.openMap("string-table");
-      for (Map.Entry<String, Integer> entry : myStoreMap.entrySet()) {
-        String str = entry.getKey();
-        int num = entry.getValue();
-        myToIntMap.put(str, num);
-        myToStringMap.put(num, str);
-      }
+      // expect sequential order in the myStoreMap
+      myEnumerator = new ObjectEnumerator<>(map(myStoreMap.entrySet(), Map.Entry::getValue), GraphElementInterner::intern);
     }
 
     @Override
-    public synchronized String toString(int num) {
-      return myToStringMap.get(num);
+    public synchronized String toString(int num) throws IOException {
+      String str = myEnumerator.lookup(num);
+      if (str == null) {
+        throw new IOException(
+          "Mapping for number " + num + " does not exist. Current string table size: " + myEnumerator.getTableSize() + " entries."
+        );
+      }
+      return str;
     }
 
     @Override
     public synchronized int toNumber(String str) {
-      int currentSize = myToIntMap.size();
-      int num = myToIntMap.getOrDefault(str, currentSize);
-      if (num == currentSize) { // not in map yet
-        myToIntMap.put(str, num);
-        myToStringMap.put(num, str);
-        myDelta.put(str, num);
-      }
-      return num;
+      return myEnumerator.toNumber(str);
     }
 
-    public boolean flush() {
-      Object2IntMap<String> delta;
-      synchronized (this) {
-        if (myDelta.isEmpty()) {
-          return false;
-        }
-        delta = myDelta;
-        myDelta = new Object2IntOpenHashMap<>();
+    public synchronized boolean flush() {
+      try {
+        return myEnumerator.drainUnsaved((key, value) -> myStoreMap.put(key, value));
       }
-      myStoreMap.putAll(delta);
-      return true;
+      catch (IOException e) {
+        throw new RuntimeException(e);
+      }
     }
   }
 }
