@@ -1,4 +1,4 @@
-// Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
+// Copyright 2000-2026 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.java.codeserver.core
 
 import com.intellij.openapi.module.Module
@@ -9,7 +9,12 @@ import com.intellij.openapi.roots.ProjectRootManager
 import com.intellij.openapi.vfs.VfsUtilCore
 import com.intellij.openapi.vfs.VirtualFile
 import com.intellij.pom.java.JavaFeature
-import com.intellij.psi.*
+import com.intellij.psi.JavaCompilerConfigurationProxy
+import com.intellij.psi.JavaPsiFacade
+import com.intellij.psi.PsiElement
+import com.intellij.psi.PsiFileSystemItem
+import com.intellij.psi.PsiJavaModule
+import com.intellij.psi.PsiNameHelper
 import com.intellij.psi.impl.light.LightJavaModule
 import com.intellij.psi.search.GlobalSearchScope
 import com.intellij.psi.util.JavaMultiReleaseUtil
@@ -304,5 +309,7 @@ data class JpmsModuleAccessInfo(val current: JpmsModuleInfo.CurrentModuleInfo, v
     const val ADD_EXPORTS_OPTION: String = "--add-exports"
     const val ADD_MODULES_OPTION: String = "--add-modules"
     const val ADD_READS_OPTION: String = "--add-reads"
+    const val ADD_OPENS_OPTION: String = "--add-opens"
+    const val PATCH_MODULE_OPTION: String = "--patch-module"
   }
 }
