@@ -1,11 +1,12 @@
-// Copyright 2000-2024 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
+// Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.ide.hierarchy.call;
 
 import com.intellij.codeInsight.highlighting.HighlightManager;
-import com.intellij.core.JavaPsiBundle;
 import com.intellij.ide.IdeBundle;
 import com.intellij.ide.hierarchy.HierarchyNodeDescriptor;
+import com.intellij.ide.hierarchy.JavaHierarchyNodeDescriptor;
 import com.intellij.ide.hierarchy.JavaHierarchyUtil;
+import com.intellij.ide.hierarchy.ReferenceAwareNodeDescriptor;
 import com.intellij.java.JavaBundle;
 import com.intellij.openapi.editor.Editor;
 import com.intellij.openapi.editor.colors.EditorColors;
@@ -15,19 +16,35 @@ import com.intellij.openapi.fileEditor.FileEditorManager;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.roots.ui.util.CompositeAppearance;
 import com.intellij.openapi.util.Comparing;
+import com.intellij.openapi.util.NlsSafe;
 import com.intellij.openapi.util.TextRange;
 import com.intellij.pom.Navigatable;
-import com.intellij.psi.*;
+import com.intellij.psi.PsiClass;
+import com.intellij.psi.PsiElement;
+import com.intellij.psi.PsiField;
+import com.intellij.psi.PsiFile;
+import com.intellij.psi.PsiMember;
+import com.intellij.psi.PsiMethod;
+import com.intellij.psi.PsiNameIdentifierOwner;
+import com.intellij.psi.PsiRecordComponent;
+import com.intellij.psi.PsiReference;
+import com.intellij.psi.PsiSubstitutor;
 import com.intellij.psi.presentation.java.ClassPresentationUtil;
-import com.intellij.psi.util.*;
+import com.intellij.psi.util.FileTypeUtils;
+import com.intellij.psi.util.JavaPsiRecordUtil;
+import com.intellij.psi.util.PsiEditorUtil;
+import com.intellij.psi.util.PsiFormatUtil;
+import com.intellij.psi.util.PsiFormatUtilBase;
+import com.intellij.psi.util.PsiTreeUtil;
+import com.intellij.psi.util.PsiUtilCore;
 import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
 
-import javax.swing.*;
-import java.awt.*;
+import javax.swing.Icon;
 import java.util.ArrayList;
 import java.util.List;
 
-public final class CallHierarchyNodeDescriptor extends HierarchyNodeDescriptor implements Navigatable {
+public final class CallHierarchyNodeDescriptor extends JavaHierarchyNodeDescriptor implements Navigatable, ReferenceAwareNodeDescriptor {
   private int myUsageCount = 1;
   private final List<PsiReference> myReferences = new ArrayList<>();
   private final boolean myNavigateToReference;
@@ -44,7 +61,8 @@ public final class CallHierarchyNodeDescriptor extends HierarchyNodeDescriptor i
   /**
    * @return PsiMethod or PsiClass or JspFile
    */
-  public PsiMember getEnclosingElement() {
+  @Override
+  public @Nullable PsiMember getEnclosingElement() {
     PsiElement element = getPsiElement();
     if (element instanceof PsiClass aClass && aClass.isRecord()) {
       return JavaPsiRecordUtil.findCanonicalConstructor(aClass);
@@ -86,56 +104,54 @@ public final class CallHierarchyNodeDescriptor extends HierarchyNodeDescriptor i
 
     installIcon(enclosingElement, changes);
 
-    myHighlightedText = new CompositeAppearance();
-    TextAttributes mainTextAttributes = null;
-    if (myColor != null) {
-      mainTextAttributes = new TextAttributes(myColor, null, null, null, Font.PLAIN);
-    }
-    if (enclosingElement instanceof PsiMethod || enclosingElement instanceof PsiField || enclosingElement instanceof PsiRecordComponent) {
-      if (FileTypeUtils.isInServerPageFile(enclosingElement)) {
-        PsiFile file = enclosingElement.getContainingFile();
-        String text = file != null ? file.getName() : JavaBundle.message("node.call.hierarchy.unknown.jsp");
-        myHighlightedText.getEnding().addText(text, mainTextAttributes);
-      }
-      else {
-        PsiClass containingClass = enclosingElement.getContainingClass();
-        String className = containingClass == null ? null : ClassPresentationUtil.getNameForClass(containingClass, false);
-        String methodName =
-          enclosingElement instanceof PsiMethod method
-          ? PsiFormatUtil.formatMethod(method, PsiSubstitutor.EMPTY, PsiFormatUtilBase.SHOW_NAME | PsiFormatUtilBase.SHOW_PARAMETERS,
-                                       PsiFormatUtilBase.SHOW_TYPE)
-          : enclosingElement.getName();
-
-        String fullMethodName = className == null ? methodName :
-                                containingClass.getContainingClass() == null ?
-                                className +"."+methodName :
-                                // in case of complex nested classes prefer "foo() in Inner in Outer" instead of confusing "Inner in Outer.foo()"
-                                JavaPsiBundle.message("class.context.display", methodName, className);
-
-        myHighlightedText.getEnding().addText(fullMethodName, mainTextAttributes);
-      }
-    }
-    else if (FileTypeUtils.isInServerPageFile(enclosingElement) && enclosingElement instanceof PsiFile) {
-      PsiFile file = PsiUtilCore.getTemplateLanguageFile(enclosingElement);
-      myHighlightedText.getEnding().addText(file.getName(), mainTextAttributes);
-    }
-    else {
-      myHighlightedText.getEnding().addText(ClassPresentationUtil.getNameForClass((PsiClass)enclosingElement, false), mainTextAttributes);
-    }
+    myHighlightedText = getEnclosingElementAppearance(enclosingElement, true);
     if (myUsageCount > 1) {
-      myHighlightedText.getEnding().addText(IdeBundle.message("node.call.hierarchy.N.usages", myUsageCount), getUsageCountPrefixAttributes());
+      String usagesText = IdeBundle.message("node.call.hierarchy.N.usages", myUsageCount);
+      myHighlightedText.getEnding().addText(usagesText, getUsageCountPrefixAttributes());
     }
     if (!(FileTypeUtils.isInServerPageFile(enclosingElement) && enclosingElement instanceof PsiFile)) {
-      PsiClass containingClass = enclosingElement.getContainingClass();
-      if (containingClass != null) {
-        String packageName = JavaHierarchyUtil.getPackageName(containingClass);
-        myHighlightedText.getEnding().addText("  (" + packageName + ")", getPackageNameAttributes());
-      }
+      appendLocationPath(myHighlightedText, enclosingElement);
     }
     myName = myHighlightedText.getText();
 
     changes |= !Comparing.equal(myHighlightedText, oldText) || !Comparing.equal(getIcon(), oldIcon);
     return changes;
+  }
+
+  private @NotNull CompositeAppearance getEnclosingElementAppearance(@NotNull PsiMember enclosingElement, boolean withAttributes) {
+    CompositeAppearance appearance = new CompositeAppearance();
+    TextAttributes mainTextAttributes = withAttributes ? baseColorAttributes() : null;
+    if (enclosingElement instanceof PsiMethod || enclosingElement instanceof PsiField || enclosingElement instanceof PsiRecordComponent) {
+      if (FileTypeUtils.isInServerPageFile(enclosingElement)) {
+        PsiFile file = enclosingElement.getContainingFile();
+        String text = file != null ? file.getName() : JavaBundle.message("node.call.hierarchy.unknown.jsp");
+        appearance.getEnding().addText(text, mainTextAttributes);
+      }
+      else {
+        String name =
+          enclosingElement instanceof PsiMethod method
+          ? PsiFormatUtil.formatMethod(method, PsiSubstitutor.EMPTY, PsiFormatUtilBase.SHOW_NAME | PsiFormatUtilBase.SHOW_PARAMETERS,
+                                       PsiFormatUtilBase.SHOW_TYPE)
+          : enclosingElement.getName();
+        appearance.getEnding().addText(name, withAttributes ? textAttributesFor(enclosingElement) : null);
+      }
+    }
+    else if (FileTypeUtils.isInServerPageFile(enclosingElement) && enclosingElement instanceof PsiFile) {
+      PsiFile file = PsiUtilCore.getTemplateLanguageFile(enclosingElement);
+      appearance.getEnding().addText(file.getName(), mainTextAttributes);
+    }
+    else {
+      String simpleName = ClassPresentationUtil.getSimpleNameForClass((PsiClass)enclosingElement);
+      appearance.getEnding().addText(simpleName, withAttributes ? textAttributesFor(enclosingElement) : null);
+    }
+    return appearance;
+  }
+
+  @Override
+  public @Nullable @NlsSafe String getPresentation() {
+    PsiMember enclosingElement = getEnclosingElement();
+    if (enclosingElement == null) return null;
+    return getEnclosingElementAppearance(enclosingElement, false).getText();
   }
 
   public void addReference(PsiReference reference) {
@@ -144,6 +160,14 @@ public final class CallHierarchyNodeDescriptor extends HierarchyNodeDescriptor i
 
   public boolean hasReference(PsiReference reference) {
     return myReferences.contains(reference);
+  }
+
+  /**
+   * @return all the references that are associated with the current element during the "Call Hierarchy" request.
+   */
+  @Override
+  public @NotNull List<PsiReference> getReferences() {
+    return myReferences;
   }
 
   @Override
@@ -156,9 +180,9 @@ public final class CallHierarchyNodeDescriptor extends HierarchyNodeDescriptor i
       return;
     }
 
-    PsiReference firstReference = myReferences.get(0);
+    PsiReference firstReference = myReferences.getFirst();
     PsiElement element = firstReference.getElement();
-    PsiElement callElement = element.getParent();
+    PsiElement callElement = (element instanceof PsiNameIdentifierOwner) ? element : element.getParent();
     if (callElement instanceof Navigatable navigatable && navigatable.canNavigate()) {
       navigatable.navigate(requestFocus);
     }
@@ -173,9 +197,10 @@ public final class CallHierarchyNodeDescriptor extends HierarchyNodeDescriptor i
     if (editor != null) {
       HighlightManager highlightManager = HighlightManager.getInstance(myProject);
       List<RangeHighlighter> highlighters = new ArrayList<>();
-      for (PsiReference psiReference : myReferences) {
-        PsiElement eachElement = psiReference.getElement();
-        PsiElement eachMethodCall = eachElement.getParent();
+      for (PsiReference ref : myReferences) {
+        PsiElement eachElement = ref.getElement();
+        PsiElement eachMethodCall = 
+          eachElement instanceof PsiNameIdentifierOwner owner ? owner.getNameIdentifier() : eachElement.getParent();
         if (eachMethodCall != null) {
           TextRange textRange = eachMethodCall.getTextRange();
           highlightManager.addRangeHighlight(editor, textRange.getStartOffset(), textRange.getEndOffset(), 
@@ -191,7 +216,7 @@ public final class CallHierarchyNodeDescriptor extends HierarchyNodeDescriptor i
       return getPsiElement() instanceof Navigatable navigatable && navigatable.canNavigate();
     }
     if (myReferences.isEmpty()) return false;
-    PsiReference firstReference = myReferences.get(0);
+    PsiReference firstReference = myReferences.getFirst();
     PsiElement callElement = firstReference.getElement().getParent();
     if (callElement == null || !callElement.isValid()) return false;
     if (!(callElement instanceof Navigatable navigatable) || !navigatable.canNavigate()) {
