@@ -1,7 +1,7 @@
-// Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
+// Copyright 2000-2026 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.refactoring;
 
-import com.intellij.codeInsight.CodeInsightUtil;
+import com.intellij.codeInsight.CodeInsightFrontbackUtil;
 import com.intellij.codeInsight.daemon.impl.quickfix.AddNewArrayExpressionFix;
 import com.intellij.codeInsight.intention.impl.TypeExpression;
 import com.intellij.codeInsight.intention.preview.IntentionPreviewUtils;
@@ -25,7 +25,49 @@ import com.intellij.openapi.util.NlsContexts;
 import com.intellij.openapi.util.TextRange;
 import com.intellij.openapi.util.registry.Registry;
 import com.intellij.openapi.util.text.StringUtil;
-import com.intellij.psi.*;
+import com.intellij.psi.JavaPsiFacade;
+import com.intellij.psi.JavaResolveResult;
+import com.intellij.psi.JavaTokenType;
+import com.intellij.psi.PsiArrayInitializerExpression;
+import com.intellij.psi.PsiArrayType;
+import com.intellij.psi.PsiCallExpression;
+import com.intellij.psi.PsiClass;
+import com.intellij.psi.PsiClassObjectAccessExpression;
+import com.intellij.psi.PsiCodeBlock;
+import com.intellij.psi.PsiComment;
+import com.intellij.psi.PsiDiamondType;
+import com.intellij.psi.PsiDiamondTypeImpl;
+import com.intellij.psi.PsiDocumentManager;
+import com.intellij.psi.PsiElement;
+import com.intellij.psi.PsiElementFactory;
+import com.intellij.psi.PsiEllipsisType;
+import com.intellij.psi.PsiErrorElement;
+import com.intellij.psi.PsiExpression;
+import com.intellij.psi.PsiExpressionList;
+import com.intellij.psi.PsiExpressionStatement;
+import com.intellij.psi.PsiField;
+import com.intellij.psi.PsiFile;
+import com.intellij.psi.PsiFunctionalExpression;
+import com.intellij.psi.PsiImplicitClass;
+import com.intellij.psi.PsiLambdaExpression;
+import com.intellij.psi.PsiLanguageInjectionHost;
+import com.intellij.psi.PsiLiteralExpression;
+import com.intellij.psi.PsiLocalVariable;
+import com.intellij.psi.PsiMethod;
+import com.intellij.psi.PsiNewExpression;
+import com.intellij.psi.PsiParameter;
+import com.intellij.psi.PsiPatternVariable;
+import com.intellij.psi.PsiReferenceExpression;
+import com.intellij.psi.PsiReturnStatement;
+import com.intellij.psi.PsiStatement;
+import com.intellij.psi.PsiSubstitutor;
+import com.intellij.psi.PsiSuperExpression;
+import com.intellij.psi.PsiSwitchStatement;
+import com.intellij.psi.PsiType;
+import com.intellij.psi.PsiTypeCastExpression;
+import com.intellij.psi.PsiTypeElement;
+import com.intellij.psi.PsiVariable;
+import com.intellij.psi.PsiWhiteSpace;
 import com.intellij.psi.impl.PsiDiamondTypeUtil;
 import com.intellij.psi.impl.source.tree.java.ReplaceExpressionUtil;
 import com.intellij.psi.util.PsiTreeUtil;
@@ -35,14 +77,17 @@ import com.intellij.refactoring.introduceField.ElementToWorkOn;
 import com.intellij.util.ArrayUtil;
 import com.intellij.util.CommonJavaRefactoringUtil;
 import com.intellij.util.IncorrectOperationException;
+import com.intellij.util.containers.ContainerUtil;
 import com.siyeh.ig.psiutils.CodeBlockSurrounder;
 import com.siyeh.ig.psiutils.CommentTracker;
 import com.siyeh.ig.psiutils.ExpressionUtils;
 import com.siyeh.ig.psiutils.VariableAccessUtils;
 import com.siyeh.ipp.psiutils.ErrorUtil;
 import org.jetbrains.annotations.NonNls;
+import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 
@@ -58,9 +103,7 @@ public final class IntroduceVariableUtil {
       range = ((PsiExpressionStatement)statementsInRange[0]).getExpression().getTextRange();
     }
 
-    return range.getStartOffset() > offset ||
-           range.getEndOffset() <= offset ||
-           isPreferStatements();
+    return range.getStartOffset() > offset || range.getEndOffset() <= offset || isPreferStatements();
   }
 
   public static int preferredSelection(PsiElement[] statementsInRange, List<? extends PsiExpression> expressions) {
@@ -70,13 +113,7 @@ public final class IntroduceVariableUtil {
         PsiUtilCore.hasErrorElementChild(statementsInRange[0])) {
       selection = expressions.indexOf(((PsiExpressionStatement)statementsInRange[0]).getExpression());
     } else {
-      PsiExpression expression = expressions.get(0);
-      if (expression instanceof PsiReferenceExpression && ((PsiReferenceExpression)expression).resolve() instanceof PsiLocalVariable) {
-        selection = 1;
-      }
-      else {
-        selection = -1;
-      }
+      selection = (expressions.getFirst() instanceof PsiReferenceExpression ref && ref.resolve() instanceof PsiLocalVariable) ? 1 : -1;
     }
     return selection;
   }
@@ -85,19 +122,106 @@ public final class IntroduceVariableUtil {
     return PropertiesComponent.getInstance().getBoolean(PREFER_STATEMENTS_OPTION) || Registry.is(PREFER_STATEMENTS_OPTION, false);
   }
 
-  public static PsiElement[] findStatementsAtOffset(final Editor editor, final PsiFile file, final int offset) {
+  /**
+   * @see IntroduceVariableUtil#getIntroduceVariableCandidates(Project, Document, PsiFile, int)
+   */
+  public static @NotNull IntroduceVariableCandidates getIntroduceVariableCandidates(
+    @NotNull Project project,
+    @NotNull Editor editor,
+    @NotNull PsiFile file,
+    int offset) {
+    return getIntroduceVariableCandidates(project, editor.getDocument(), file, offset);
+  }
+
+  /**
+   * @return the expressions that can be extracted into the variable near the given {@code offset}
+   * and the recommended {@link TextRange} to select the expression from (could be null).
+   * @see IntroduceVariableCandidates
+   */
+  public static @NotNull IntroduceVariableCandidates getIntroduceVariableCandidates(
+    @NotNull Project project,
+    @NotNull Document document,
+    @NotNull PsiFile file,
+    int offset) {
+    final PsiElement[] statementsInRange = findStatementsAtOffset(document, file, offset);
+    int line = document.getLineNumber(offset);
+    TextRange lineRange =
+      TextRange.create(document.getLineStartOffset(line), Math.min(document.getLineEndOffset(line) + 1, document.getTextLength()));
+
+    //try line selection
+    if (statementsInRange.length == 1 && selectLineAtCaret(offset, statementsInRange)) {
+      final PsiExpression expressionInRange =
+        findExpressionInRange(project, file, lineRange.getStartOffset(), lineRange.getEndOffset());
+      if (expressionInRange != null && getErrorMessage(expressionInRange) == null) {
+        return new IntroduceVariableCandidates(lineRange, Collections.singletonList(expressionInRange));
+      }
+    }
+
+    final List<PsiExpression> expressions = ContainerUtil
+      .filter(CommonJavaRefactoringUtil.collectExpressions(file, document, offset, false), expression ->
+        CommonJavaRefactoringUtil.getParentStatement(expression, false) != null ||
+        PsiTreeUtil.getParentOfType(expression, PsiField.class, true, PsiStatement.class) != null);
+    if (expressions.isEmpty()) {
+      return new IntroduceVariableCandidates(lineRange, Collections.emptyList());
+    }
+    else if (!isChooserNeeded(expressions)) {
+      return new IntroduceVariableCandidates(expressions.getFirst().getTextRange(), expressions);
+    }
+    else {
+      return new IntroduceVariableCandidates(null, expressions);
+    }
+  }
+
+
+  /**
+   * @return single expression that can be extracted into the variable.
+   */
+  public static PsiExpression findExpressionInRange(@NotNull Project project, @NotNull PsiFile file, int startOffset, int endOffset) {
+    PsiExpression tempExpr = CodeInsightFrontbackUtil.findExpressionInRange(file, startOffset, endOffset);
+    if (tempExpr == null) {
+      PsiElement[] statements = CodeInsightFrontbackUtil.findStatementsInRange(file, startOffset, endOffset);
+      if (statements.length == 1) {
+        PsiElement statement = statements[0];
+        if (statement instanceof PsiExpressionStatement expressionStatement) {
+          tempExpr = expressionStatement.getExpression();
+        }
+        else if (statement instanceof PsiReturnStatement returnStatement) {
+          tempExpr = returnStatement.getReturnValue();
+        }
+        else if (statement instanceof PsiSwitchStatement) {
+          PsiExpression expr = JavaPsiFacade.getElementFactory(project).createExpressionFromText(statement.getText(), statement);
+          TextRange range = statement.getTextRange();
+          final RangeMarker rangeMarker = file.getViewProvider().getDocument().createRangeMarker(range);
+          expr.putUserData(ElementToWorkOn.TEXT_RANGE, rangeMarker);
+          expr.putUserData(ElementToWorkOn.PARENT, statement);
+          return expr;
+        }
+      }
+    }
+
+    if (tempExpr == null) {
+      tempExpr = getSelectedExpression(project, file, startOffset, endOffset);
+    }
+    return CommonJavaRefactoringUtil.isExtractable(tempExpr) ? tempExpr : null;
+  }
+
+  public static PsiElement[] findStatementsAtOffset(@NotNull Editor editor, @NotNull PsiFile file, int offset) {
     final Document document = editor.getDocument();
+    return findStatementsAtOffset(document, file, offset);
+  }
+
+  private static PsiElement[] findStatementsAtOffset(@NotNull Document document, @NotNull PsiFile file, int offset) {
     final int lineNumber = document.getLineNumber(offset);
     final int lineStart = document.getLineStartOffset(lineNumber);
     final int lineEnd = document.getLineEndOffset(lineNumber);
 
-    return CodeInsightUtil.findStatementsInRange(file, lineStart, lineEnd);
+    return CodeInsightFrontbackUtil.findStatementsInRange(file, lineStart, lineEnd);
   }
 
   /**
    * @return can return NotNull value although extraction will fail: reason could be retrieved from {@link #getErrorMessage(PsiExpression)}
    */
-  public static PsiExpression getSelectedExpression(final Project project, PsiFile file, int startOffset, int endOffset) {
+  public static PsiExpression getSelectedExpression(Project project, PsiFile file, int startOffset, int endOffset) {
     final InjectedLanguageManager injectedLanguageManager = InjectedLanguageManager.getInstance(project);
     PsiElement elementAtStart = file.findElementAt(startOffset);
     if (elementAtStart != null && isStringLiteral(elementAtStart) && elementAtStart.getTextRange().getEndOffset() - 1 == startOffset) {
@@ -141,8 +265,8 @@ public final class IntroduceVariableUtil {
     if (endOffset <= startOffset) return null;
 
     PsiElement elementAt = PsiTreeUtil.findCommonParent(elementAtStart, elementAtEnd);
-    if (elementAt instanceof PsiExpressionStatement) {
-      return ((PsiExpressionStatement)elementAt).getExpression();
+    if (elementAt instanceof PsiExpressionStatement statement) {
+      return statement.getExpression();
     }
     final PsiExpression containingExpression = PsiTreeUtil.getParentOfType(elementAt, PsiExpression.class, false);
 
@@ -161,7 +285,6 @@ public final class IntroduceVariableUtil {
     final PsiLiteralExpression startLiteralExpression = PsiTreeUtil.getParentOfType(elementAtStart, PsiLiteralExpression.class);
     final PsiLiteralExpression endLiteralExpression = PsiTreeUtil.getParentOfType(file.findElementAt(endOffset), PsiLiteralExpression.class);
 
-    final PsiElementFactory elementFactory = JavaPsiFacade.getElementFactory(project);
     String text = null;
     PsiExpression tempExpr;
     try {
@@ -200,6 +323,7 @@ public final class IntroduceVariableUtil {
       if (TextRange.create(startOffset, endOffset).contains(context.getTextRange())){
         context = context.getParent();
       }
+      final PsiElementFactory elementFactory = JavaPsiFacade.getElementFactory(project);
       tempExpr = elementFactory.createExpressionFromText(text, context);
 
       if (ErrorUtil.containsDeepError(tempExpr)) return null;
@@ -215,9 +339,9 @@ public final class IntroduceVariableUtil {
         tempExpr.putUserData(ElementToWorkOn.PARENT, parent);
       }
       else {
-        PsiElement errorElement = elementAtStart instanceof PsiErrorElement
-                                       ? (PsiErrorElement)elementAtStart
-                                       : PsiTreeUtil.getNextSiblingOfType(elementAtStart, PsiErrorElement.class);
+        PsiElement errorElement = elementAtStart instanceof PsiErrorElement element
+                                  ? element
+                                  : PsiTreeUtil.getNextSiblingOfType(elementAtStart, PsiErrorElement.class);
         if (errorElement == null) {
           errorElement = PsiTreeUtil.getParentOfType(elementAtStart, PsiErrorElement.class);
         }
@@ -235,10 +359,11 @@ public final class IntroduceVariableUtil {
 
       final String fakeInitializer = "intellijidearulezzz";
       final int[] refIdx = new int[1];
-      final PsiElement toBeExpression = createReplacement(fakeInitializer, project, prefix, suffix, parent, TextRange.create(startOffset, endOffset), refIdx);
+      final PsiElement toBeExpression = 
+        createReplacement(fakeInitializer, project, prefix, suffix, parent, TextRange.create(startOffset, endOffset), refIdx);
       if (ErrorUtil.containsDeepError(toBeExpression)) return null;
-      if (literalExpression != null && toBeExpression instanceof PsiExpression) {
-        PsiType type = ((PsiExpression)toBeExpression).getType();
+      if (literalExpression != null && toBeExpression instanceof PsiExpression expression) {
+        PsiType type = expression.getType();
         if (type != null && !type.equals(literalExpression.getType())) {
           return null;
         }
@@ -252,7 +377,8 @@ public final class IntroduceVariableUtil {
         }
       }
 
-      final PsiReferenceExpression refExpr = PsiTreeUtil.getParentOfType(toBeExpression.findElementAt(refIdx[0]), PsiReferenceExpression.class);
+      final PsiReferenceExpression refExpr = 
+        PsiTreeUtil.getParentOfType(toBeExpression.findElementAt(refIdx[0]), PsiReferenceExpression.class);
       if (refExpr == null) return null;
       if (toBeExpression == refExpr && refIdx[0] > 0) {
         return null;
@@ -264,8 +390,9 @@ public final class IntroduceVariableUtil {
     }
     catch (IncorrectOperationException e) {
       if (elementAt instanceof PsiExpressionList) {
-        final PsiElement parent = elementAt.getParent();
-        return parent instanceof PsiCallExpression ? createArrayCreationExpression(text, startOffset, endOffset, (PsiCallExpression)parent) : null;
+        return elementAt.getParent() instanceof PsiCallExpression expression
+               ? createArrayCreationExpression(text, startOffset, endOffset, expression)
+               : null;
       }
       return null;
     }
@@ -283,9 +410,13 @@ public final class IntroduceVariableUtil {
 
   private static PsiExpression getSelectionFromInjectedHost(Project project,
                                                             PsiFile file,
-                                                            InjectedLanguageManager injectedLanguageManager, int startOffset, int endOffset) {
+                                                            InjectedLanguageManager injectedLanguageManager,
+                                                            int startOffset,
+                                                            int endOffset) {
     final PsiLanguageInjectionHost injectionHost = injectedLanguageManager.getInjectionHost(file);
-    return getSelectedExpression(project, injectionHost.getContainingFile(), injectedLanguageManager.injectedToHost(file, startOffset), injectedLanguageManager.injectedToHost(file, endOffset));
+    if (injectionHost == null) return null;
+    return getSelectedExpression(project, injectionHost.getContainingFile(), injectedLanguageManager.injectedToHost(file, startOffset),
+                                 injectedLanguageManager.injectedToHost(file, endOffset));
   }
 
   public static @NlsContexts.DialogMessage @Nullable String getErrorMessage(PsiExpression expr) {
@@ -370,10 +501,13 @@ public final class IntroduceVariableUtil {
     return null;
   }
 
-  private static PsiElement createReplacement(final @NonNls String refText, final Project project,
-                                             final String prefix,
-                                             final String suffix,
-                                             final PsiElement parent, final TextRange textRange, int[] refIdx) {
+  private static PsiElement createReplacement(@NonNls String refText,
+                                              Project project,
+                                              String prefix,
+                                              String suffix,
+                                              PsiElement parent,
+                                              TextRange textRange,
+                                              int[] refIdx) {
     String text = refText;
     if (parent != null) {
       final String allText = parent.getContainingFile().getText();
@@ -401,13 +535,13 @@ public final class IntroduceVariableUtil {
 
   public static boolean isChooserNeeded(List<? extends PsiExpression> expressions) {
     if (expressions.size() == 1) {
-      final PsiExpression expression = expressions.get(0);
-      return expression instanceof PsiNewExpression && ((PsiNewExpression)expression).getAnonymousClass() != null;
+      final PsiExpression expression = expressions.getFirst();
+      return expression instanceof PsiNewExpression newExpression && newExpression.getAnonymousClass() != null;
     }
     return true;
   }
 
-  public static Expression createExpression(final TypeExpression expression, final String defaultType) {
+  public static Expression createExpression(TypeExpression expression, String defaultType) {
     return new Expression() {
       @Override
       public Result calculateResult(ExpressionContext context) {
@@ -420,7 +554,7 @@ public final class IntroduceVariableUtil {
         if (elements != null) {
           LookupElement toBeSelected = null;
           for (LookupElement element : elements) {
-            if (element instanceof PsiTypeLookupItem && ((PsiTypeLookupItem)element).getType().getPresentableText().equals(defaultType)) {
+            if (element instanceof PsiTypeLookupItem item && item.getType().getPresentableText().equals(defaultType)) {
               toBeSelected = element;
               break;
             }
@@ -447,41 +581,42 @@ public final class IntroduceVariableUtil {
    */
   public static PsiElement expandDiamondsAndReplaceExplicitTypeWithVar(PsiTypeElement typeElement, PsiElement context) {
     PsiElement parent = typeElement.getParent();
-    if (parent instanceof PsiVariable) {
-      PsiExpression copyVariableInitializer = ((PsiVariable)parent).getInitializer();
-      if (copyVariableInitializer instanceof PsiNewExpression) {
+    if (parent instanceof PsiVariable var) {
+      PsiExpression initializer = var.getInitializer();
+      if (initializer instanceof PsiNewExpression expression) {
         final PsiDiamondType.DiamondInferenceResult diamondResolveResult =
-          PsiDiamondTypeImpl.resolveInferredTypesNoCheck((PsiNewExpression)copyVariableInitializer, copyVariableInitializer);
+          PsiDiamondTypeImpl.resolveInferredTypesNoCheck(expression, initializer);
         if (!diamondResolveResult.getInferredTypes().isEmpty()) {
-          PsiDiamondTypeUtil.expandTopLevelDiamondsInside(copyVariableInitializer);
+          PsiDiamondTypeUtil.expandTopLevelDiamondsInside(initializer);
         }
       }
-      else if (copyVariableInitializer instanceof PsiArrayInitializerExpression initializer) {
-        AddNewArrayExpressionFix.doFix(initializer);
+      else if (initializer instanceof PsiArrayInitializerExpression i) {
+        AddNewArrayExpressionFix.doFix(i);
       }
-      else if (copyVariableInitializer instanceof PsiFunctionalExpression) {
+      else if (initializer instanceof PsiFunctionalExpression) {
+        PsiElementFactory factory = JavaPsiFacade.getElementFactory(initializer.getProject());
         PsiTypeCastExpression castExpression =
-          (PsiTypeCastExpression)JavaPsiFacade.getElementFactory(copyVariableInitializer.getProject())
-            .createExpressionFromText("(" + typeElement.getText() + ")a", copyVariableInitializer);
-        Objects.requireNonNull(castExpression.getOperand()).replace(copyVariableInitializer);
-        copyVariableInitializer.replace(castExpression);
+          (PsiTypeCastExpression)factory.createExpressionFromText("(" + typeElement.getText() + ")a", initializer);
+        Objects.requireNonNull(castExpression.getOperand()).replace(initializer);
+        initializer.replace(castExpression);
       }
     }
 
-    return new CommentTracker().replaceAndRestoreComments(typeElement, JavaPsiFacade.getElementFactory(context.getProject()).createTypeElementFromText("var", context));
+    PsiTypeElement varTypeElement = JavaPsiFacade.getElementFactory(context.getProject()).createTypeElementFromText("var", context);
+    return new CommentTracker().replaceAndRestoreComments(typeElement, varTypeElement);
   }
 
-  public static PsiElement replace(final PsiExpression expr1, final PsiExpression ref, final Project project)
-    throws IncorrectOperationException {
-    final PsiExpression expr2;
-    if (expr1 instanceof PsiArrayInitializerExpression &&
-      expr1.getParent() instanceof PsiNewExpression) {
-      expr2 = (PsiNewExpression) expr1.getParent();
-    } else {
-      expr2 = CommonJavaRefactoringUtil.outermostParenthesizedExpression(expr1);
-    }
-    if (expr2.isPhysical() || expr1.getUserData(ElementToWorkOn.REPLACE_NON_PHYSICAL) != null || IntentionPreviewUtils.isPreviewElement(expr2)) {
-      return expr2.replace(ref);
+  public static PsiElement replace(PsiExpression expr1, PsiExpression ref, Project project) {
+    final PsiExpression expr2 = expr1 instanceof PsiArrayInitializerExpression && expr1.getParent() instanceof PsiNewExpression
+                                ? (PsiNewExpression)expr1.getParent()
+                                : CommonJavaRefactoringUtil.outermostParenthesizedExpression(expr1);
+    if (expr2.isPhysical() || expr1.getUserData(ElementToWorkOn.REPLACE_NON_PHYSICAL) != null
+        || IntentionPreviewUtils.isPreviewElement(expr2)) {
+      PsiElement replaced = expr2.replace(ref);
+      if (expr1.getUserData(ElementToWorkOn.REPLACE_NON_PHYSICAL) != null) {
+        ElementToWorkOn.REPLACE_NON_PHYSICAL.set(replaced, expr1.getUserData(ElementToWorkOn.REPLACE_NON_PHYSICAL));
+      }
+      return replaced;
     }
     else {
       final String prefix  = expr1.getUserData(ElementToWorkOn.PREFIX);
@@ -495,4 +630,13 @@ public final class IntroduceVariableUtil {
       return parent.replace(createReplacement(ref.getText(), project, prefix, suffix, parent, textRange, new int[1]));
     }
   }
+
+  /**
+   * Stores information about expressions that can be extracted into the variable near the cursor position.
+   * @param bestRangeToExtractFrom {@link TextRange} in which the most appropriate expression for extraction should be searched.
+   *                               It is null when there are multiple expressions to extract within the given selection.
+   *                               Also, it can be used as a range in the editor to highlight in case an error has been found.
+   * @param expressions list of expressions that can be extracted into variable.
+   */
+  public record IntroduceVariableCandidates(@Nullable TextRange bestRangeToExtractFrom, @NotNull List<@NotNull PsiExpression> expressions) {}
 }
