@@ -1,32 +1,39 @@
-// Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
-@file:Suppress("ReplacePutWithAssignment", "ReplaceGetOrSet")
+// Copyright 2000-2026 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
+@file:Suppress("ReplacePutWithAssignment", "ReplaceGetOrSet", "BlockingMethodInNonBlockingContext")
 
 package org.jetbrains.intellij.build.impl
 
+import com.intellij.ClassFinder
+import com.intellij.GroupBasedTestClassFilter
 import com.intellij.TestCaseLoader
 import com.intellij.execution.CommandLineWrapperUtil
+import com.intellij.idea.IJIgnore
+import com.intellij.openapi.application.ArchivedCompilationContextUtil
+import com.intellij.openapi.application.PathManager
 import com.intellij.openapi.util.Pair
 import com.intellij.openapi.util.SystemInfoRt
-import com.intellij.openapi.util.io.FileUtil
 import com.intellij.openapi.util.io.FileUtilRt
 import com.intellij.openapi.util.io.NioFiles
 import com.intellij.openapi.util.text.StringUtilRt
+import com.intellij.platform.bazel.runfiles.BazelRunfiles
 import com.intellij.platform.ijent.community.buildConstants.IJENT_BOOT_CLASSPATH_MODULE
 import com.intellij.platform.ijent.community.buildConstants.MULTI_ROUTING_FILE_SYSTEM_VMOPTIONS
+import com.intellij.platform.util.coroutines.filterConcurrent
+import com.intellij.testFramework.SkipInHeadlessEnvironment
 import com.intellij.util.io.awaitExit
 import com.intellij.util.lang.UrlClassLoader
-import io.opentelemetry.api.common.AttributeKey
+import io.opentelemetry.api.trace.Span
+import jetbrains.buildServer.messages.serviceMessages.BlockClosed
+import jetbrains.buildServer.messages.serviceMessages.BlockOpened
 import kotlinx.coroutines.CoroutineName
+import kotlinx.coroutines.CoroutineScope
 import kotlinx.coroutines.Dispatchers
-import kotlinx.coroutines.async
-import kotlinx.coroutines.coroutineScope
 import kotlinx.coroutines.withContext
 import org.jetbrains.intellij.build.BuildCancellationException
 import org.jetbrains.intellij.build.BuildMessages
 import org.jetbrains.intellij.build.BuildOptions
 import org.jetbrains.intellij.build.BuildPaths.Companion.ULTIMATE_HOME
 import org.jetbrains.intellij.build.CompilationContext
-import org.jetbrains.intellij.build.CompilationTasks
 import org.jetbrains.intellij.build.LibcImpl
 import org.jetbrains.intellij.build.LinuxLibcImpl
 import org.jetbrains.intellij.build.OsFamily
@@ -36,49 +43,56 @@ import org.jetbrains.intellij.build.causal.CausalProfilingOptions
 import org.jetbrains.intellij.build.dependencies.TeamCityHelper
 import org.jetbrains.intellij.build.impl.coverage.Coverage
 import org.jetbrains.intellij.build.impl.coverage.CoverageImpl
-import org.jetbrains.intellij.build.io.ZipEntryProcessorResult
-import org.jetbrains.intellij.build.io.readZipFile
 import org.jetbrains.intellij.build.io.runProcess
+import org.jetbrains.intellij.build.mapConcurrent
+import org.jetbrains.intellij.build.telemetry.TraceManager
 import org.jetbrains.intellij.build.telemetry.TraceManager.spanBuilder
-import org.jetbrains.intellij.build.telemetry.block
 import org.jetbrains.intellij.build.telemetry.use
-import org.jetbrains.jps.builders.java.JavaModuleBuildTargetType
-import org.jetbrains.jps.incremental.ModuleBuildTarget
 import org.jetbrains.jps.incremental.java.ModulePathSplitter
+import org.jetbrains.jps.model.java.JavaResourceRootType
 import org.jetbrains.jps.model.java.JpsJavaClasspathKind
 import org.jetbrains.jps.model.java.JpsJavaExtensionService
 import org.jetbrains.jps.model.java.JpsJavaSdkType
-import org.jetbrains.jps.model.library.JpsOrderRootType
+import org.jetbrains.jps.model.module.JpsModule
 import org.jetbrains.jps.util.JpsPathUtil
 import java.io.File
 import java.io.PrintStream
 import java.lang.reflect.Modifier
 import java.nio.charset.Charset
 import java.nio.file.AccessDeniedException
+import java.nio.file.FileSystems
 import java.nio.file.Files
 import java.nio.file.Path
-import java.util.regex.Pattern
 import kotlin.io.path.ExperimentalPathApi
 import kotlin.io.path.absolutePathString
 import kotlin.io.path.copyTo
+import kotlin.io.path.createDirectories
 import kotlin.io.path.deleteRecursively
 import kotlin.io.path.exists
-import kotlin.io.path.extension
 import kotlin.io.path.isRegularFile
 import kotlin.io.path.outputStream
-import kotlin.io.path.pathString
 import kotlin.io.path.readLines
 import kotlin.random.Random
 
+private const val EXIT_FAILURE = 41  // prevent ignoring any System.exit(1) as test failures
 private const val NO_TESTS_ERROR = 42
 
 internal class TestingTasksImpl(context: CompilationContext, private val options: TestingOptions) : TestingTasks {
   private val context: CompilationContext = if (options.useArchivedCompiledClasses) context.asArchived else context
+  private val testPatternSystemPropertyKey = "intellij.build.test.patterns"
+  private val testGroupSystemPropertyKey = "intellij.build.test.groups"
+  private val testIncludeTagsSystemPropertyKey = "intellij.build.test.tags"
+  private val testExcludeTagsSystemPropertyKey = "intellij.build.test.excluded.tags"
 
   override val coverage: Coverage by lazy {
     CoverageImpl(
       context = this.context,
-      coveredModuleNames = runConfigurations
+      coveredModuleNames = options.coveredModuleNames
+                             ?.splitToSequence(';')
+                             ?.map { it.trim() }
+                             ?.toList()
+                             ?.takeIf { it.any() }
+                           ?: runConfigurations
                              .map { it.moduleName }
                              .takeIf { it.any() }
                            ?: listOfNotNull(options.mainModule),
@@ -88,29 +102,11 @@ internal class TestingTasksImpl(context: CompilationContext, private val options
     )
   }
 
-  private fun loadRunConfigurations(name: String): List<JUnitRunConfigurationProperties> {
-    val projectHome = context.paths.projectHome
-    val file = RunConfigurationProperties.findRunConfiguration(projectHome, name)
-    val configuration = RunConfigurationProperties.getConfiguration(file)
-    return when (val type = RunConfigurationProperties.getConfigurationType(configuration)) {
-      JUnitRunConfigurationProperties.TYPE -> {
-        listOf(JUnitRunConfigurationProperties.loadRunConfiguration(file))
-      }
-      CompoundRunConfigurationProperties.TYPE -> {
-        val runConfiguration = CompoundRunConfigurationProperties.loadRunConfiguration(file)
-        runConfiguration.toRun.flatMap(::loadRunConfigurations)
-      }
-      else -> {
-        throw RuntimeException("Unsupported run configuration type '${type}' in run configuration '${name}' of project '${projectHome}'")
-      }
-    }
-  }
-
   private val runConfigurations: List<JUnitRunConfigurationProperties> by lazy {
     options.testConfigurations
       ?.splitToSequence(';')
       ?.filter(String::isNotEmpty)
-      ?.flatMap(::loadRunConfigurations)
+      ?.flatMap { loadRunConfigurations(name = it, projectHome = context.paths.projectHome) }
       ?.toList() ?: emptyList()
   }
 
@@ -191,32 +187,27 @@ internal class TestingTasksImpl(context: CompilationContext, private val options
 
     val systemProperties = LinkedHashMap<String, String>(additionalSystemProperties)
     try {
-      val compilationTasks = CompilationTasks.create(context)
-      options.beforeRunProjectArtifacts?.splitToSequence(';')?.filterNotTo(HashSet(), String::isEmpty)?.let {
-        compilationTasks.buildProjectArtifacts(it)
+      blockWithDefaultFlowId("compile modules") {
+        if (runConfigurations.any { it.buildProject }) {
+          context.messages.info(
+            "Building the entire project as requested by run configurations: " +
+            runConfigurations.filter { it.buildProject }.map { it.name }
+          )
+          context.compileModules(moduleNames = null, includingTestsInModules = null)
+        }
+        else if (runConfigurations.any()) {
+          context.compileModules(
+            moduleNames = listOf("intellij.tools.testsBootstrap"),
+            includingTestsInModules = listOf("intellij.platform.buildScripts") + runConfigurations.map { it.moduleName },
+          )
+        }
+        else {
+          context.compileModules(
+            moduleNames = listOf("intellij.tools.testsBootstrap"),
+            includingTestsInModules = listOfNotNull(mainModule, "intellij.platform.buildScripts"),
+          )
+        }
       }
-
-      if (runConfigurations.any { it.buildProject }) {
-        context.messages.info(
-          "Building the entire project as requested by run configurations: " +
-          runConfigurations.filter { it.buildProject }.map { it.name }
-        )
-        compilationTasks.compileAllModulesAndTests()
-      }
-      else if (runConfigurations.any()) {
-        compilationTasks.compileModules(
-          listOf("intellij.tools.testsBootstrap"),
-          listOf("intellij.platform.buildScripts") + runConfigurations.map { it.moduleName })
-        compilationTasks.buildProjectArtifacts(runConfigurations.flatMapTo(LinkedHashSet()) { it.requiredArtifacts })
-      }
-      else {
-        compilationTasks.compileModules(
-          listOf("intellij.tools.testsBootstrap"),
-          listOfNotNull(mainModule, "intellij.platform.buildScripts")
-        )
-      }
-      val runtimeModuleRepository = context.getOriginalModuleRepository()
-      systemProperties["intellij.platform.runtime.repository.path"] = runtimeModuleRepository.repositoryPath.pathString
     }
     catch (e: Exception) {
       if (options.isCancelBuildOnTestPreparationFailure) {
@@ -265,31 +256,61 @@ internal class TestingTasksImpl(context: CompilationContext, private val options
     if (options.testConfigurations != null) {
       val testConfigurationsOptionName = "intellij.build.test.configurations"
       if (options.testPatterns != null) {
-        warnOptionIgnored(testConfigurationsOptionName, "intellij.build.test.patterns")
+        errorOptionIgnored(testConfigurationsOptionName, testPatternSystemPropertyKey)
       }
-      if (options.testGroups != TestingOptions.ALL_EXCLUDE_DEFINED_GROUP) {
-        warnOptionIgnored(testConfigurationsOptionName, "intellij.build.test.groups")
+      if (options.testSimplePatterns != null) {
+        errorOptionIgnored(testConfigurationsOptionName, "intellij.build.test.simple.patterns")
+      }
+      if (options.testGroups != null) {
+        errorOptionIgnored(testConfigurationsOptionName, testGroupSystemPropertyKey)
       }
       if (mainModule != null && !options.validateMainModule) {
-        warnOptionIgnored(testConfigurationsOptionName, "intellij.build.test.main.module")
+        errorOptionIgnored(testConfigurationsOptionName, "intellij.build.test.main.module")
+      }
+      if (options.searchScope != JUnitRunConfigurationProperties.TestSearchScope.MODULE_WITH_DEPENDENCIES.serialized) {
+        errorOptionIgnored(testConfigurationsOptionName, "intellij.build.test.search.scope")
       }
     }
-    else if (options.testPatterns != null && options.testGroups != TestingOptions.ALL_EXCLUDE_DEFINED_GROUP) {
-      warnOptionIgnored("intellij.build.test.patterns", "intellij.build.test.groups")
+    else if (options.testPatterns != null) {
+      if (options.testSimplePatterns != null) {
+        errorOptionIgnored(testPatternSystemPropertyKey, "intellij.build.test.simple.patterns")
+      }
+      if (options.testGroups != null) {
+        errorOptionIgnored(testPatternSystemPropertyKey, testGroupSystemPropertyKey)
+      }
     }
-    if (options.batchTestIncludes != null && !isRunningInBatchMode) {
-      context.messages.warning(
-        "'intellij.build.test.batchTest.includes' option will be ignored as other tests matching options are specified."
-      )
+    else if (options.testSimplePatterns != null) {
+      if (TeamCityHelper.isUnderTeamCity) {
+        context.messages.logErrorAndThrow("'intellij.build.test.simple.patterns' option should be used only for local runs")
+      }
+      if (options.testGroups != null) {
+        errorOptionIgnored("intellij.build.test.simple.patterns", testGroupSystemPropertyKey)
+      }
+    }
+
+    if (options.testConfigurations == null && options.testPatterns == null && options.testSimplePatterns == null && options.testGroups == null) {
+      context.messages.logErrorAndThrow("'intellij.build.test.configurations', '$testPatternSystemPropertyKey', 'intellij.build.test.simple.patterns', or '$testGroupSystemPropertyKey' option should be set")
     }
 
     if (options.validateMainModule && mainModule.isNullOrEmpty()) {
       context.messages.logErrorAndThrow("'intellij.build.test.main.module.validate' option requires 'intellij.build.test.main.module' to be set")
     }
+
+    if (options.searchScope != JUnitRunConfigurationProperties.TestSearchScope.MODULE_WITH_DEPENDENCIES.serialized) {
+      if (options.searchScope != JUnitRunConfigurationProperties.TestSearchScope.SINGLE_MODULE.serialized) {
+        context.messages.logErrorAndThrow("Unsupported 'intellij.build.test.search.scope' value: ${options.searchScope}")
+      }
+    }
+    if (options.repeatCount < 1) {
+      context.messages.logErrorAndThrow("'intellij.build.test.repeat.count' option should be greater than 0, actual: ${options.repeatCount}")
+    }
+    if (options.repeatCount > 1 && options.attemptCount > 1) {
+      context.messages.logErrorAndThrow("'intellij.build.test.repeat.count' and 'intellij.build.test.attempt.count' options cannot be used together")
+    }
   }
 
-  private fun warnOptionIgnored(specifiedOption: String, ignoredOption: String) {
-    context.messages.warning("'${specifiedOption}' option is specified, so '${ignoredOption}' will be ignored.")
+  private fun errorOptionIgnored(specifiedOption: String, ignoredOption: String) {
+    context.messages.logErrorAndThrow("'${specifiedOption}' option is specified, so '${ignoredOption}' will be ignored.")
   }
 
   private suspend fun runTestsFromRunConfigurations(
@@ -298,7 +319,7 @@ internal class TestingTasksImpl(context: CompilationContext, private val options
     systemProperties: MutableMap<String, String>,
   ) {
     for (configuration in runConfigurations) {
-      spanBuilder("run '${configuration.name}' run configuration").use {
+      blockWithDefaultFlowId("run '${configuration.name}' run configuration") {
         runTestsFromRunConfiguration(runConfigurationProperties = configuration, additionalJvmOptions = additionalJvmOptions, systemProperties = systemProperties)
       }
     }
@@ -309,22 +330,19 @@ internal class TestingTasksImpl(context: CompilationContext, private val options
     additionalJvmOptions: List<String>,
     systemProperties: Map<String, String>,
   ) {
-    if (runConfigurationProperties.testSearchScope != JUnitRunConfigurationProperties.TestSearchScope.MODULE_WITH_DEPENDENCIES) {
-      context.messages.warning(
-        "Run configuration '${runConfigurationProperties.name}' uses test search scope '${runConfigurationProperties.testSearchScope.serialized}', " +
-        "while only '${JUnitRunConfigurationProperties.TestSearchScope.MODULE_WITH_DEPENDENCIES.serialized}' is supported. Scope will be ignored"
-      )
-    }
     try {
       runTestsProcess(
-        mainModule = runConfigurationProperties.moduleName,
+        mainModule = context.findRequiredModule(runConfigurationProperties.moduleName),
         testGroups = null,
         testPatterns = runConfigurationProperties.testClassPatterns.joinToString(separator = ";"),
-        jvmArgs = removeStandardJvmOptions(runConfigurationProperties.vmParameters) + additionalJvmOptions
-                  + "-Dintellij.build.run.configuration.name=${runConfigurationProperties.name}",
-        systemProperties = systemProperties,
+        jvmArgs = removeStandardJvmOptions(runConfigurationProperties.vmParameters) + additionalJvmOptions,
+        systemProperties = systemProperties + listOf(
+          "intellij.build.test.process.name" to runConfigurationProperties.name,
+        ),
         envVariables = runConfigurationProperties.envVariables,
         remoteDebugging = false,
+        searchForTestsAcrossModuleDependencies = runConfigurationProperties.testSearchScope == JUnitRunConfigurationProperties.TestSearchScope.MODULE_WITH_DEPENDENCIES,
+        rootExcludeCondition = null,
       )
     }
     catch (e: NoTestsFound) {
@@ -334,80 +352,142 @@ internal class TestingTasksImpl(context: CompilationContext, private val options
     }
   }
 
+  private suspend fun guessTestModulesForGroupsAndPatterns(
+    mainModule: JpsModule,
+    rootExcludeCondition: ((Path) -> Boolean)?,
+    systemProperties: Map<String, String>,
+  ): List<JpsModule> {
+    fun setPropertyFromPass(property: String) = System.getProperty("pass.$property")?.run {
+      if (System.getProperty(property, this) != this) {
+        context.messages.logErrorAndThrow("'$property' and 'pass.$property' mismatch: ${System.getProperty(property)} != $this")
+      }
+
+      System.setProperty(property, this)
+    }
+
+    // configure TestCaseLoader#isClassNameIncluded with the properties from the test process
+    "test.group.roots".let { systemProperties[it]?.run { System.setProperty(it, this) } }  // from systemProperties
+    testPatternSystemPropertyKey.let { options.testPatterns?.run { System.setProperty(it, this) } }  // from options, e.g. TestingTasksImpl#runTestsSkippedInHeadlessEnvironment
+    testGroupSystemPropertyKey.let { options.testGroups?.run { System.setProperty(it, this) } }  // from options, e.g. RunAnyTestTheSameWayTeamCityDoes#run
+    setPropertyFromPass(TestCaseLoader.INCLUDE_UNCONVENTIONALLY_NAMED_TESTS_FLAG)
+
+    // configure TestCaseLoader#matchesCurrentBucket with the properties from the test process
+    listOf(
+      "idea.bucketing.season",
+      "idea.bucketing.season.fallback",
+      TestCaseLoader.IS_TESTS_DURATION_BUCKETING_ENABLED_FLAG
+    ).forEach(::setPropertyFromPass)
+
+    return JpsJavaExtensionService.dependencies(mainModule).recursively().modules
+      .filterConcurrent {
+        if (rootExcludeCondition != null) {
+          val contentRoot = it.contentRootsList.urls.firstOrNull()?.let(JpsPathUtil::urlToNioPath)
+          if (contentRoot != null && rootExcludeCondition(contentRoot)) return@filterConcurrent false  // root excluded
+        }
+
+        for (outputRoot in context.outputProvider.getModuleOutputRoots(it, forTests = true)) {
+          val classNames = FileSystems.newFileSystem(outputRoot).use { fs ->
+            fs.rootDirectories.map(Files::walk).flatMap { stream ->
+              stream.filter { it.toString().endsWith(".class") }.map { classFile ->
+                classFile.toString().removePrefix("/").replace("/", ".").removeSuffix(".class")
+              }.toList()
+            }
+          }
+
+          // same as `com.intellij.tests.JUnit5TeamCityRunner.CommonTestClassesFilter` and `com.intellij.tests.JUnit5TeamCityRunner.BucketingClassNameFilter`
+          if (classNames.any { TestCaseLoader.isClassNameIncluded(it) && TestCaseLoader.matchesCurrentBucket(it) }) return@filterConcurrent true
+        }
+
+        false
+      }.sortedBy { it.name }
+  }
+
   private suspend fun runTestsFromGroupsAndPatterns(
     additionalJvmOptions: List<String>,
     mainModule: String,
     rootExcludeCondition: ((Path) -> Boolean)?,
     systemProperties: MutableMap<String, String>,
   ) {
-    if (rootExcludeCondition != null) {
-      val excludedRootPaths = ArrayList<Path>(context.project.modules.size * 2)
-      for (module in context.project.modules) {
-        val contentRoots = module.contentRootsList.urls
-        if (!contentRoots.isEmpty() && rootExcludeCondition(Path.of(JpsPathUtil.urlToPath(contentRoots.first())))) {
-          excludedRootPaths.addAll(context.getModuleOutputRoots(module))
-          excludedRootPaths.addAll(context.getModuleOutputRoots(module, forTests = true))
-        }
-      }
-      val excludedRoots = replaceWithArchivedIfNeededLP(excludedRootPaths).filter(Files::exists).map(Path::toString)
+    val mainModule = context.findRequiredModule(mainModule)
 
-      val excludedRootsFile = context.paths.tempDir.resolve("excluded.classpath")
-      Files.createDirectories(excludedRootsFile.parent)
-      Files.writeString(excludedRootsFile, excludedRoots.joinToString(separator = "\n"))
-      systemProperties.put("exclude.tests.roots.file", excludedRootsFile.toString())
+    if (options.testGroups != null) {
+      val testGroupRoots = let {
+        if (options.testGroups!!.contains(GroupBasedTestClassFilter.ALL_EXCLUDE_DEFINED)) context.project.modules
+        else JpsJavaExtensionService.dependencies(mainModule).recursively().modules.toList()
+      }.mapConcurrent {
+        it.sourceRoots
+          .filter { it.rootType is JavaResourceRootType }
+          .map { it.path.resolve(TestCaseLoader.COMMON_TEST_GROUPS_RESOURCE_NAME) }
+          .filter(Files::exists)
+      }.flatten().sorted()
+
+      systemProperties.put("test.group.roots", testGroupRoots.joinToString(File.pathSeparator, transform = Path::absolutePathString))
     }
 
-    try {
-      runTestsProcess(
-        mainModule = mainModule,
-        testGroups = options.testGroups,
-        testPatterns = options.testPatterns,
-        jvmArgs = additionalJvmOptions,
-        systemProperties = systemProperties,
-        remoteDebugging = false
-      )
+    val searchForTestsAcrossModuleDependencies = options.searchScope == JUnitRunConfigurationProperties.TestSearchScope.MODULE_WITH_DEPENDENCIES.serialized
+    val testModules = let {
+      if (searchForTestsAcrossModuleDependencies && System.getProperty("pass.jar.dependencies.to.tests") == null && options.testSimplePatterns == null) guessTestModulesForGroupsAndPatterns(mainModule, rootExcludeCondition, systemProperties)
+      else listOf(mainModule)
     }
-    catch (e: NoTestsFound) {
-      val msg = buildString {
-        append("No tests were found in '$mainModule' classpath ")
-        if (options.testPatterns != null) {
-          append("with test patterns '${options.testPatterns}'")
+
+    context.messages.info("Will run tests from simple patterns, patterns, or groups in ${testModules.size} modules: ${testModules.joinToString(", ") { it.name }}")
+    val suppressedExceptions = mutableListOf<Throwable>()
+    for (testModule in testModules) {
+      blockWithDefaultFlowId("run '${testModule.name}' module") {
+        try {
+          runTestsProcess(
+            mainModule = testModule,
+            runContextModule = mainModule,
+            testGroups = options.testGroups,
+            testPatterns = options.testPatterns,
+            testTags = options.testTags,
+            testExcludedTags = options.testExcludedTags,
+            jvmArgs = additionalJvmOptions,
+            systemProperties = systemProperties + listOf(
+              "intellij.build.test.process.name" to testModule.name,
+            ),
+            remoteDebugging = false,
+            searchForTestsAcrossModuleDependencies = false,
+            rootExcludeCondition = rootExcludeCondition,
+          )
         }
-        else {
-          append("for test groups '${options.testGroups}'")
+        catch (e: NoTestsFound) {
+          suppressedExceptions.add(RuntimeException("No tests were found in '${testModule.name}' module", e))
         }
       }
-      throw RuntimeException(msg).apply {
-        addSuppressed(e)
+    }
+
+    if (suppressedExceptions.size == testModules.size &&
+        // a bucket might be empty for run configurations with too few tests due to imperfect tests balancing
+        options.bucketsCount < 2) {
+      throw RuntimeException("No tests were found in '${mainModule.name}' module classpath w/ simple patterns '${options.testSimplePatterns}', patterns '${options.testPatterns}', or groups '${options.testGroups}'").apply {
+        suppressedExceptions.forEach(::addSuppressed)
       }
     }
   }
 
   private fun loadTestDiscovery(additionalJvmOptions: MutableList<String>, systemProperties: MutableMap<String, String>) {
     val testDiscovery = "intellij-test-discovery"
-    val library = context.projectModel.project.libraryCollection.findLibrary(testDiscovery)
-                  ?: throw RuntimeException("Can't find the $testDiscovery library, but test discovery capturing enabled.")
-
-    val agentJar = library.getPaths(JpsOrderRootType.COMPILED)
+    val agentJar = context.outputProvider.findLibraryRoots(testDiscovery, moduleLibraryModuleName = null)
                      .firstOrNull {
                        val name = it.fileName.toString()
                        name.startsWith("intellij-test-discovery") && name.endsWith(".jar")
                      } ?: throw RuntimeException("Can't find the agent in $testDiscovery library, but test discovery capturing enabled.")
 
-    additionalJvmOptions += "-javaagent:${agentJar}"
+    additionalJvmOptions.add("-javaagent:${agentJar}")
     val excludeRoots = context.projectModel.global.libraryCollection.getLibraries(JpsJavaSdkType.INSTANCE)
       .mapTo(LinkedHashSet()) { FileUtilRt.toSystemDependentName(it.properties.homePath) }
-    excludeRoots += context.paths.buildOutputDir.toString()
-    excludeRoots += context.paths.projectHome.resolve("out").toString()
+    excludeRoots.add(context.paths.buildOutputDir.toString())
+    excludeRoots.add(context.paths.projectHome.resolve("out").toString())
 
-    systemProperties["test.discovery.listener"] = "com.intellij.TestDiscoveryBasicListener"
-    systemProperties["test.discovery.data.listener"] = "com.intellij.rt.coverage.data.SingleTrFileDiscoveryProtocolDataListener"
-    systemProperties["org.jetbrains.instrumentation.trace.file"] = testDiscoveryTraceFilePath
+    systemProperties.put("test.discovery.listener", "com.intellij.TestDiscoveryBasicListener")
+    systemProperties.put("test.discovery.data.listener", "com.intellij.rt.coverage.data.SingleTrFileDiscoveryProtocolDataListener")
+    systemProperties.put("org.jetbrains.instrumentation.trace.file", testDiscoveryTraceFilePath)
 
-    options.testDiscoveryIncludePatterns?.let { systemProperties["test.discovery.include.class.patterns"] = it }
-    options.testDiscoveryExcludePatterns?.let { systemProperties["test.discovery.exclude.class.patterns"] = it }
+    options.testDiscoveryIncludePatterns?.let { systemProperties.put("test.discovery.include.class.patterns", it) }
+    options.testDiscoveryExcludePatterns?.let { systemProperties.put("test.discovery.exclude.class.patterns", it) }
 
-    systemProperties["test.discovery.excluded.roots"] = excludeRoots.joinToString(separator = ";")
+    systemProperties.put("test.discovery.excluded.roots", excludeRoots.joinToString(separator = ";"))
   }
 
   private val testDiscoveryTraceFilePath: String
@@ -440,98 +520,100 @@ internal class TestingTasksImpl(context: CompilationContext, private val options
       context.messages.logErrorAndThrow("Remote debugging supports debugging all test methods in a class for now, but target class isn't specified")
     }
     if (options.testPatterns != null) {
-      context.messages.warning("'intellij.build.test.patterns' option is ignored while debugging via TeamCity plugin")
+      context.messages.warning("'$testPatternSystemPropertyKey' option is ignored while debugging via TeamCity plugin")
     }
     if (options.testConfigurations != null) {
       context.messages.warning("'intellij.build.test.configurations' option is ignored while debugging via TeamCity plugin")
     }
     runTestsProcess(
-      mainModule = mainModule,
+      mainModule = context.findRequiredModule(mainModule),
       testGroups = null,
       testPatterns = junitClass,
       jvmArgs = removeStandardJvmOptions(StringUtilRt.splitHonorQuotes(remoteDebugJvmOptions, ' ')) + additionalJvmOptions,
       systemProperties = emptyMap(),
-      remoteDebugging = true
+      remoteDebugging = true,
+      searchForTestsAcrossModuleDependencies = true,
+      rootExcludeCondition = null,
     )
   }
 
   private suspend fun runTestsProcess(
-    mainModule: String,
+    mainModule: JpsModule,
+    runContextModule: JpsModule = mainModule,
     testGroups: String?,
     testPatterns: String?,
+    testTags: String? = null,
+    testExcludedTags: String? = null,
     jvmArgs: List<String>,
     systemProperties: Map<String, String>,
     envVariables: Map<String, String> = emptyMap(),
     remoteDebugging: Boolean,
+    searchForTestsAcrossModuleDependencies: Boolean,
+    rootExcludeCondition: ((Path) -> Boolean)?,
   ) {
-    val useKotlinK2 = !System.getProperty("idea.kotlin.plugin.use.k1", "false").toBoolean() ||
-                      jvmArgs.contains("-Didea.kotlin.plugin.use.k1=false")
-    val mainJpsModule = context.findRequiredModule(mainModule)
-    val testRoots = JpsJavaExtensionService.dependencies(mainJpsModule).recursively()
-      .withoutSdk()  // if the project requires different SDKs, they all shouldn't be added to the test classpath
-      .includedIn(JpsJavaClasspathKind.runtime(true))
-      .classes()
-      .roots
-      .filterTo(mutableListOf()) { useKotlinK2 || it.name != "kotlin.plugin.k2" }
+    val outputProvider = context.outputProvider
 
-    if (isBootstrapSuiteDefault && !isRunningInBatchMode) {
-      //module with "com.intellij.TestAll" which output should be found in `testClasspath + modulePath`
-      val testFrameworkCoreModule = context.findRequiredModule("intellij.platform.testFramework.core")
-      val testFrameworkCoreModuleOutputRoots = context
-        .getModuleOutputRoots(testFrameworkCoreModule)
-        .map(Path::toFile)
-      for (testFrameworkOutput in testFrameworkCoreModuleOutputRoots) {
-        if (!testRoots.contains(testFrameworkOutput)) {
-          testRoots.addAll(context.getModuleRuntimeClasspath(testFrameworkCoreModule, false).map(::File))
-        }
-      }
-    }
-
-    val testClasspath: List<String>
     val modulePath: List<String>?
+    var testClasspath = buildList {
+      addAll(context.getModuleRuntimeClasspath(runContextModule, forTests = true))
 
-    val moduleInfoFile = JpsJavaExtensionService.getInstance().getJavaModuleIndex(context.project).getModuleInfoFile(mainJpsModule, true)
-    val toExistingAbsolutePathConverter: (File) -> String? = { if (it.exists()) it.absolutePath else null }
+      //module with "com.intellij.TestCaseLoader" which output should be found in `testClasspath + modulePath`
+      val testFrameworkCoreModule = outputProvider.findRequiredModule("intellij.platform.testFramework.core")
+      addAll(context.getModuleRuntimeClasspath(testFrameworkCoreModule, false) )
+    }.distinct()
+
+    val moduleInfoFile = JpsJavaExtensionService.getInstance().getJavaModuleIndex(context.project).getModuleInfoFile(mainModule, true)
+    val toExistingAbsolutePathConverter: (Path) -> String = { require(Files.exists(it)); it.toAbsolutePath().normalize().toString() }
     if (moduleInfoFile != null) {
-      val outputDir = ModuleBuildTarget(mainJpsModule, JavaModuleBuildTargetType.TEST).outputDir
-      val pair = ModulePathSplitter().splitPath(moduleInfoFile, mutableSetOf(outputDir), HashSet(testRoots))
-      modulePath = replaceWithArchivedIfNeededLF(pair.first.path.toList()).mapNotNull(toExistingAbsolutePathConverter)
-      testClasspath = replaceWithArchivedIfNeededLF(pair.second.toList()).mapNotNull(toExistingAbsolutePathConverter)
+      val outputDir = outputProvider.getModuleOutputRoots(mainModule, forTests = true).single().let(Path::toFile)
+      val pair = ModulePathSplitter().splitPath(moduleInfoFile, mutableSetOf(outputDir), testClasspath.map {
+        @Suppress("IO_FILE_USAGE")
+        it.toFile()
+      })
+      modulePath = pair.first.path.map { it.toPath() }.map(toExistingAbsolutePathConverter)
+      testClasspath = pair.second.map { it.toPath() }
     }
     else {
       modulePath = null
-      testClasspath = replaceWithArchivedIfNeededLF(testRoots).mapNotNull(toExistingAbsolutePathConverter)
     }
 
-    val devBuildServerSettings = DevBuildServerSettings.readDevBuildServerSettingsFromIntellijYaml(mainModule)
-    val bootstrapClasspath = context.getModuleRuntimeClasspath(module = context.findRequiredModule("intellij.tools.testsBootstrap"), forTests = false).toMutableList()
-    val classpathFile = context.paths.tempDir.resolve("junit.classpath")
-    Files.createDirectories(classpathFile.parent)
-    // this is required to collect tests both on class and module paths
-    Files.writeString(classpathFile, replaceWithArchivedIfNeededLF(testRoots).mapNotNull(toExistingAbsolutePathConverter).joinToString(separator = "\n"))
+    val testRoots = let {
+      if (searchForTestsAcrossModuleDependencies) JpsJavaExtensionService.dependencies(mainModule).recursively().modules
+      else listOf(mainModule)
+    }.flatMap {
+      if (rootExcludeCondition != null) {
+        val contentRoot = it.contentRootsList.urls.firstOrNull()?.let(JpsPathUtil::urlToNioPath)
+        if (contentRoot != null && rootExcludeCondition(contentRoot)) return@flatMap emptyList()  // root excluded
+      }
+
+      context.outputProvider.getModuleOutputRoots(it, forTests = true)
+    }
+
+    val devBuildServerSettings = DevBuildServerSettings.readDevBuildServerSettingsFromIntellijYaml(mainModule.name)
+      .takeIf { runContextModule.name != "intellij.clion.main.tests" }  // TODO: remove this after fixing clion tests build types
+      .takeIf { runContextModule.name != "intellij.idea.community.main.tests" }
+    val bootstrapClasspath = context.getModuleRuntimeClasspath(module = outputProvider.findRequiredModule("intellij.tools.testsBootstrap"), forTests = false)
+      .mapTo(mutableListOf()) { it.toString() }
     @Suppress("NAME_SHADOWING")
     val systemProperties = systemProperties.toMutableMap()
     systemProperties.put("io.netty.allocator.type", "pooled")
-    systemProperties.putIfAbsent("classpath.file", classpathFile.toString())
-    testPatterns?.let { systemProperties.putIfAbsent("intellij.build.test.patterns", it) }
-    testGroups?.let { systemProperties.putIfAbsent("intellij.build.test.groups", it) }
-    systemProperties.putIfAbsent("intellij.build.test.sorter", System.getProperty("intellij.build.test.sorter"))
-    systemProperties.putIfAbsent(TestingTasks.BOOTSTRAP_TESTCASES_PROPERTY, "com.intellij.AllTests")
+    systemProperties.put("test.roots", testRoots.joinToString(File.pathSeparator, transform = toExistingAbsolutePathConverter))
+    testPatterns?.let { systemProperties.putIfAbsent(testPatternSystemPropertyKey, it) }
+    testGroups?.let { systemProperties.putIfAbsent(testGroupSystemPropertyKey, it) }
+    testTags?.let { systemProperties.putIfAbsent(testIncludeTagsSystemPropertyKey, it) }
+    testExcludedTags?.let { systemProperties.putIfAbsent(testExcludeTagsSystemPropertyKey, it) }
     systemProperties.putIfAbsent(TestingOptions.PERFORMANCE_TESTS_ONLY_FLAG, options.isPerformanceTestsOnly.toString())
     val allJvmArgs = ArrayList(jvmArgs)
-    prepareEnvForTestRun(allJvmArgs, systemProperties, bootstrapClasspath, remoteDebugging)
+    prepareEnvForTestRun(jvmArgs = allJvmArgs, systemProperties = systemProperties, classPath = bootstrapClasspath, remoteDebugging = remoteDebugging, cleanSystemDir = false)
     val messages = context.messages
-    if (isRunningInBatchMode) {
-      messages.info("Running tests from $mainModule matched by '${options.batchTestIncludes}' pattern.")
-    }
-    else if (!testPatterns.isNullOrEmpty()) {
-      messages.info("Starting tests from patterns '${testPatterns}' from classpath of module '${mainModule}'")
+    if (!testPatterns.isNullOrEmpty()) {
+      messages.info("Starting tests from patterns '${testPatterns}' from classpath of module '${mainModule.name}'")
     }
     else {
-      messages.info("Starting tests from groups '${testGroups}' from classpath of module '${mainModule}'")
+      messages.info("Starting tests from groups '${testGroups}' from classpath of module '${mainModule.name}'")
     }
     if (options.bucketsCount > 1) {
-      messages.info("Tests from bucket ${options.bucketIndex} of ${options.bucketsCount} will be executed")
+      messages.info("Tests from bucket ${options.bucketIndex + 1} of ${options.bucketsCount} will be executed")
     }
     spanBuilder("test classpath and runtime info").use {
       withContext(Dispatchers.IO) {
@@ -560,33 +642,50 @@ internal class TestingTasksImpl(context: CompilationContext, private val options
       }
     }
     runJUnit5Engine(
-      mainModule = mainModule,
+      mainModule = mainModule.name,
       systemProperties = systemProperties,
       jvmArgs = allJvmArgs,
       envVariables = envVariables,
       bootstrapClasspath = bootstrapClasspath,
       modulePath = modulePath,
-      testClasspath = testClasspath,
+      testClasspath = testClasspath.map(toExistingAbsolutePathConverter),
       devBuildServerSettings = devBuildServerSettings,
     )
     notifySnapshotBuilt(allJvmArgs)
   }
 
-  private suspend fun replaceWithArchivedIfNeededLF(files: List<File>, context: CompilationContext = this.context): List<File> {
-    return when (context) {
-      is BuildContextImpl -> replaceWithArchivedIfNeededLF(files, context.compilationContext)
-      is ArchivedCompilationContext -> context.replaceWithCompressedIfNeededLF(files)
-      is BazelCompilationContext -> context.replaceWithCompressedIfNeededLF(files)
-      else -> files
+  private fun BuildMessages.analyzeAndLogTags(includedTagsAsString: String?, excludedTagsAsString: String?) {
+    fun parseTagProperty(tagsAsString: String): Set<String> {
+      return tagsAsString.splitToSequence(";").map { it.trim() }.filter { it.isNotEmpty() }.toSet()
     }
-  }
 
-  private suspend fun replaceWithArchivedIfNeededLP(paths: List<Path>): List<Path> {
-    if (context is ArchivedCompilationContext) {
-      return context.replaceWithCompressedIfNeededLP(paths)
+    // Case when no tags were provided
+    if (includedTagsAsString == null && excludedTagsAsString == null) {
+      info("No INCLUDE or EXCLUDE tags were specified")
     }
-    else {
-      return paths
+    else if (includedTagsAsString != null && excludedTagsAsString == null) {
+      val values = parseTagProperty(includedTagsAsString)
+      info("INCLUDE tags that will be applied: $values")
+    }
+    else if (includedTagsAsString == null && excludedTagsAsString != null) {
+      val values = parseTagProperty(excludedTagsAsString)
+      info("EXCLUDE tags that will be applied: $values")
+    }
+    else if (includedTagsAsString != null && excludedTagsAsString != null){
+      // Both tags are present
+      // As of JUnit5 functionality, if same values present in both INCLUDE and EXCLUDE tags - actual tag value will be counted as EXCLUDED.
+      val includedTags = parseTagProperty(includedTagsAsString)
+      val excludedTags = parseTagProperty(excludedTagsAsString)
+
+      (includedTags intersect excludedTags)
+        .apply { check(this.isEmpty()) { "Configuration error: INCLUDE and EXCLUDE tags must be mutually exclusive. Found overlapping tag(s): $this" } }
+
+      info(
+        """
+        INCLUDE tags that will be applied: $includedTags
+        EXCLUDE tags that will be applied: $excludedTags
+      """.trimIndent()
+      )
     }
   }
 
@@ -639,12 +738,12 @@ internal class TestingTasksImpl(context: CompilationContext, private val options
     val customMemoryOptions = options.jvmMemoryOptions?.trim()?.split(Regex("\\s+"))?.takeIf { it.isNotEmpty() }
     jvmArgs.addAll(
       index = 0,
-      elements = VmOptionsGenerator.generate(
+      elements = generateVmOptions(
         isEAP = true,
-        bundledRuntime = context.bundledRuntime,
-        customVmMemoryOptions = if (customMemoryOptions == null) mapOf("-Xms" to "750m", "-Xmx" to "1024m") else emptyMap(),
+        customMemoryVmOptions = if (customMemoryOptions == null) mapOf("-Xms" to "750m", "-Xmx" to "1024m") else emptyMap(),
         additionalVmOptions = customMemoryOptions ?: emptyList(),
         platformPrefix = options.platformPrefix,
+        isHeadless = false,
       ),
     )
 
@@ -668,9 +767,10 @@ internal class TestingTasksImpl(context: CompilationContext, private val options
     @Suppress("SpellCheckingInspection")
     for ((k, v) in sequenceOf(
       "idea.platform.prefix" to options.platformPrefix,
-      "idea.home.path" to context.paths.projectHome.toString(),
-      "idea.config.path" to "$tempDir/config",
-      "idea.system.path" to "$ideaSystemPath",
+      PathManager.PROPERTY_HOME_PATH to context.paths.projectHome.toString(),
+      PathManager.PROPERTY_CONFIG_PATH to "$tempDir/config",
+      PathManager.PROPERTY_SYSTEM_PATH to "$ideaSystemPath",
+      PathManager.PROPERTY_LOG_PATH to "$ideaSystemPath/testlog",
       BuildOptions.PROJECT_CLASSES_OUTPUT_DIRECTORY_PROPERTY to "${context.classesOutputDirectory}",
       "idea.coverage.enabled.build" to System.getProperty("idea.coverage.enabled.build"),
       "teamcity.buildConfName" to System.getProperty("teamcity.buildConfName"),
@@ -696,11 +796,11 @@ internal class TestingTasksImpl(context: CompilationContext, private val options
     systemProperties[TestCaseLoader.TEST_RUNNER_INDEX_FLAG] = options.bucketIndex.toString()
     systemProperties[TestCaseLoader.TEST_RUNNERS_COUNT_FLAG] = options.bucketsCount.toString()
 
-    System.getProperties().forEach { (key, value) ->
+    for ((key, value) in System.getProperties()) {
       key as String
 
       if (key.startsWith("pass.")) {
-        systemProperties[key.substring("pass.".length)] = value as String
+        systemProperties.put(key.substring("pass.".length), value as String)
       }
 
       /**
@@ -733,7 +833,7 @@ internal class TestingTasksImpl(context: CompilationContext, private val options
 
     if (options.isEnableCausalProfiling) {
       val causalProfilingOptions = CausalProfilingOptions.IMPL
-      systemProperties.put("intellij.build.test.patterns", causalProfilingOptions.testClass.replace(".", "\\."))
+      systemProperties.put(testPatternSystemPropertyKey, causalProfilingOptions.testClass.replace(".", "\\."))
       jvmArgs.addAll(buildCausalProfilingAgentJvmArg(causalProfilingOptions, context))
     }
 
@@ -748,7 +848,7 @@ internal class TestingTasksImpl(context: CompilationContext, private val options
       )
     }
     if (systemProperties.get("java.system.class.loader") == UrlClassLoader::class.java.canonicalName) {
-      val utilModule = context.findRequiredModule("intellij.platform.util")
+      val utilModule = context.outputProvider.findRequiredModule("intellij.platform.util")
       val enumerator = JpsJavaExtensionService.dependencies(utilModule)
         .recursively()
         .withoutSdk()
@@ -769,13 +869,19 @@ internal class TestingTasksImpl(context: CompilationContext, private val options
         systemProperties.put("intellij.test.jars.mapping.file", file.absolutePathString())
       }
     }
+
+    if (BazelRunfiles.isRunningFromBazel) {
+      // tests.cmd doesn't call jps-to-bazel and there may be no build/bazel-targets.json file, use it from jps_to_bazel_targets_json rule
+      systemProperties.put(ArchivedCompilationContextUtil.BAZEL_TARGETS_JSON_FILE_PROPERTY, ArchivedCompilationContextUtil.getBazelTargetsJsonPath(context.paths.projectHome).absolutePathString())  // resolve against JAVA_RUNFILES or RUNFILES_MANIFEST_FILE
+    }
   }
 
   override suspend fun runTestsSkippedInHeadlessEnvironment() {
-    CompilationTasks.create(context).compileAllModulesAndTests()
+    context.compileModules(moduleNames = null, includingTestsInModules = null)
     val tests = spanBuilder("loading all tests annotated with @SkipInHeadlessEnvironment").use { loadTestsSkippedInHeadlessEnvironment() }
     for (it in tests) {
-      options.batchTestIncludes = it.getFirst()
+      options.searchScope = JUnitRunConfigurationProperties.TestSearchScope.SINGLE_MODULE.serialized
+      options.testPatterns = it.getFirst()
       options.mainModule = it.getSecond()
       runTests()
     }
@@ -785,171 +891,28 @@ internal class TestingTasksImpl(context: CompilationContext, private val options
     val classpath = context.project.modules
       .flatMap { context.getModuleRuntimeClasspath(module = it, forTests = true) }
       .distinct()
-      .map { Path.of(it) }
     val classloader = UrlClassLoader.build().files(classpath).get()
-    val testAnnotation = classloader.loadClass("com.intellij.testFramework.SkipInHeadlessEnvironment")
+    @Suppress("UNCHECKED_CAST") val testAnnotation = classloader.loadClass(SkipInHeadlessEnvironment::class.java.name) as Class<out Annotation>
+    @Suppress("UNCHECKED_CAST") val ignoreAnnotation = classloader.loadClass(IJIgnore::class.java.name) as Class<out Annotation>
 
-    return coroutineScope {
-      context.project.modules.map { module ->
-        async(CoroutineName("loading tests annotated with @SkipInHeadlessEnvironment from the module '${module.name}'")) {
-          val root = context.getModuleTestsOutputDir(module)
-          if (Files.exists(root)) {
-            Files.walk(root).use { stream ->
-              stream
-                .filter { it.toString().endsWith("Test.class") }
-                .map { root.relativize(it).toString() }
-                .filter {
-                  val className = FileUtilRt.getNameWithoutExtension(it).replace('/', '.')
-                  val testClass = classloader.loadClass(className)
-                  !Modifier.isAbstract(testClass.modifiers) &&
-                  testClass.annotations.any { annotation -> testAnnotation.isAssignableFrom(annotation.javaClass) }
-                }
-                .map { Pair(it, module.name) }
-                .toList()
-            }
+    return context.project.modules.mapConcurrent { module ->
+      withContext(CoroutineName("loading tests annotated with @SkipInHeadlessEnvironment from the module '${module.name}'")) {
+        val outputRoots = context.outputProvider.getModuleOutputRoots(module, forTests = true)
+        if (outputRoots.isEmpty()) return@withContext emptyList()
+        val root = requireNotNull(outputRoots.singleOrNull()) { "More than one output root for module '${module.name}': ${outputRoots.joinToString()}" }
+        ClassFinder(root, "", false).classes
+          .filter {
+            val testClass = classloader.loadClass(it)
+            !Modifier.isAbstract(testClass.modifiers) &&
+            !testClass.isAnnotationPresent(ignoreAnnotation) &&
+            testClass.isAnnotationPresent(testAnnotation)
           }
-          else {
-            emptyList()
-          }
-        }
+          .map { Pair(it, module.name) }
       }
-    }.flatMap { it.getCompleted() }
+    }.flatten()
   }
 
-  private suspend fun getTestClassesForModule(mainModule: String, filteringPattern: Pattern = Pattern.compile(".*\\.class")): List<String> {
-    val testClasses: List<String> = context.getModuleOutputRoots(context.findRequiredModule(mainModule), forTests = true).flatMap { root ->
-      if (root.isRegularFile() && root.extension == "jar") {
-        val classes = ArrayList<String>()
-        val regex = filteringPattern.toRegex()
-        readZipFile(root) { name, _ ->
-          if (FileUtilRt.toSystemIndependentName(name).matches(regex)) {
-            classes.add(name)
-          }
-          ZipEntryProcessorResult.CONTINUE
-        }
-        classes
-      }
-      else {
-        Files.walk(root).use { stream ->
-          stream.map { FileUtilRt.toSystemIndependentName(root.relativize(it).toString()) }.filter {
-            filteringPattern.matcher(it).matches()
-          }.toList()
-        } ?: listOf()
-      }
-    }
-
-    if (testClasses.isEmpty()) {
-      throw RuntimeException("No tests were found in module '$mainModule' with $filteringPattern")
-    }
-
-    return testClasses
-  }
-
-  private suspend fun runInBatchMode(
-    mainModule: String,
-    systemProperties: Map<String, String>,
-    jvmArgs: List<String>,
-    envVariables: Map<String, String>,
-    bootstrapClasspath: List<String>,
-    testClasspath: List<String>,
-    devBuildServerSettings: DevBuildServerSettings?,
-  ) {
-    val pattern = Pattern.compile(FileUtil.convertAntToRegexp(options.batchTestIncludes!!))
-    val testClasses = getTestClassesForModule(mainModule = mainModule, filteringPattern = pattern)
-
-    val files = testClasspath.map { Path.of(it) }
-    val loader = UrlClassLoader.build().files(files).get()
-
-    @Suppress("UNCHECKED_CAST")
-    val testAnnotation4 = loader.loadClass("org.junit.Test") as Class<Annotation>
-
-    @Suppress("UNCHECKED_CAST")
-    val testAnnotation5 = loader.loadClass("org.junit.jupiter.api.Test") as Class<Annotation>
-
-    @Suppress("UNCHECKED_CAST")
-    val testFactoryAnnotation5 = loader.loadClass("org.junit.jupiter.api.TestFactory") as Class<Annotation>
-
-    var noTestsInAllClasses = true
-    for (testClass in testClasses) {
-      val qName = FileUtilRt.getNameWithoutExtension(testClass).replace('/', '.')
-      try {
-        var noTests = true
-        val aClass = loader.loadClass(qName)
-
-        val jUnit4And5TestMethods = getAnnotatedTestMethods(aClass, testAnnotation4, testAnnotation5, testFactoryAnnotation5)
-
-        // Run JUnit 4 and 5 whole test classes separately
-        if (options.isDedicatedTestRuntime != "false" && jUnit4And5TestMethods.isNotEmpty()) {
-          val exitCode = runJUnit5Engine(
-            mainModule = mainModule,
-            systemProperties = systemProperties,
-            jvmArgs = jvmArgs,
-            envVariables = envVariables,
-            bootstrapClasspath = bootstrapClasspath,
-            modulePath = null,
-            testClasspath = testClasspath,
-            suiteName = qName,
-            methodName = null,
-            devBuildSettings = devBuildServerSettings,
-          )
-          noTests = exitCode == NO_TESTS_ERROR
-        }
-        // Run JUnit 4 and 5 test methods separately if any
-        else if (jUnit4And5TestMethods.isNotEmpty()) {
-          for (method in jUnit4And5TestMethods) {
-            val exitCode = runJUnit5Engine(
-              mainModule = mainModule,
-              systemProperties = systemProperties,
-              jvmArgs = jvmArgs,
-              envVariables = envVariables,
-              bootstrapClasspath = bootstrapClasspath,
-              modulePath = null,
-              testClasspath = testClasspath,
-              suiteName = qName,
-              methodName = method,
-              devBuildSettings = devBuildServerSettings,
-            )
-            noTests = noTests && exitCode == NO_TESTS_ERROR
-          }
-        }
-
-        // Fallback to running whole class (JUnit 3+4)
-        if (noTests) {
-          val exitCode = runJUnit5Engine(
-            mainModule = mainModule,
-            systemProperties = systemProperties,
-            jvmArgs = jvmArgs,
-            envVariables = envVariables,
-            bootstrapClasspath = bootstrapClasspath,
-            modulePath = null,
-            testClasspath = testClasspath,
-            suiteName = qName,
-            methodName = null,
-            devBuildSettings = devBuildServerSettings,
-          )
-          noTests = exitCode == NO_TESTS_ERROR
-        }
-        noTestsInAllClasses = noTestsInAllClasses && noTests
-      }
-      catch (e: Throwable) {
-        throw RuntimeException("Failed to process $qName", e)
-      }
-    }
-
-    if (noTestsInAllClasses) {
-      throw RuntimeException("No tests were found in $mainModule with $pattern")
-    }
-  }
-
-  private fun getAnnotatedTestMethods(aClass: Class<*>, vararg annotations: Class<Annotation>): List<String> {
-    return aClass.methods
-      .asSequence()
-      .filter { m -> Modifier.isPublic(m.modifiers) }
-      .filter { m -> annotations.any { a -> m.isAnnotationPresent(a) } }
-      .map { m -> m.name }
-      .toList()
-  }
-
+  @OptIn(ExperimentalPathApi::class)
   private suspend fun runJUnit5Engine(
     mainModule: String,
     systemProperties: Map<String, String>,
@@ -960,246 +923,257 @@ internal class TestingTasksImpl(context: CompilationContext, private val options
     testClasspath: List<String>,
     devBuildServerSettings: DevBuildServerSettings?,
   ) {
-    if (isRunningInBatchMode) {
-      spanBuilder("run tests in batch mode")
-        .setAttribute(AttributeKey.stringKey("pattern"), options.batchTestIncludes ?: "")
-        .use {
-          runInBatchMode(
-            mainModule = mainModule,
-            systemProperties = systemProperties,
-            jvmArgs = jvmArgs,
-            envVariables = envVariables,
-            bootstrapClasspath = bootstrapClasspath,
-            testClasspath = testClasspath,
-            devBuildServerSettings = devBuildServerSettings,
-          )
-        }
+    val messages = context.messages
+    messages.analyzeAndLogTags(systemProperties.get(testIncludeTagsSystemPropertyKey), systemProperties.get(testExcludeTagsSystemPropertyKey))
+    if (options.testSimplePatterns != null) {
+      val exitCode = blockWithDefaultFlowId("running tests w/ simple patterns") {
+        runJUnit5Engine(
+          mainModule = mainModule,
+          systemProperties = systemProperties,
+          jvmArgs = jvmArgs,
+          envVariables = envVariables,
+          bootstrapClasspath = bootstrapClasspath,
+          modulePath = modulePath,
+          testClasspath = testClasspath,
+          suiteName = "__class__",
+          methodName = options.testSimplePatterns,
+          devBuildSettings = devBuildServerSettings,
+        )
+      }
+
+      if (exitCode == EXIT_FAILURE) throw RuntimeException("Tests failed")
+      else if (exitCode == NO_TESTS_ERROR) throw NoTestsFound()
+      else if (exitCode != 0) throw RuntimeException("Unexpected exit code $exitCode when running tests w/ simple patterns")
     }
-    else {
-      val messages = context.messages
-      if (options.isDedicatedTestRuntime != "false") {
-        if (options.isDedicatedTestRuntime != "class" && options.isDedicatedTestRuntime != "package") {
-          messages.logErrorAndThrow("Unsupported 'intellij.build.test.dedicated.runtime' value: ${options.isDedicatedTestRuntime}. Expected 'class', 'package' or 'false'")
-        }
-        messages.info("Will run tests in dedicated runtimes ('${options.isDedicatedTestRuntime}')")
-        // First, collect all tests for both JUnit5 and JUnit3+4
-        val testClassesJUnit5 = spanBuilder("collect junit 5 tests").use {
-          if (options.shouldSkipJUnit5Tests) {
-            messages.warning("JUnit 5 tests collections is skipped")
-            return@use emptyList()
+    else if (options.isDedicatedTestRuntime != "false") {
+      if (options.isDedicatedTestRuntime != "class" && options.isDedicatedTestRuntime != "package") {
+        messages.logErrorAndThrow("Unsupported 'intellij.build.test.dedicated.runtime' value: ${options.isDedicatedTestRuntime}. Expected 'class', 'package' or 'false'")
+      }
+      messages.info("Will run tests in dedicated runtimes ('${options.isDedicatedTestRuntime}')")
+      // First, collect all tests for both JUnit5 and JUnit3+4
+      val testClasses = blockWithDefaultFlowId("collect tests") {
+        val testClassesListFile = Files.createTempFile("tests-to-run-", ".list").apply { Files.delete(this) }
+        runJUnit5Engine(
+          mainModule = mainModule,
+          systemProperties = systemProperties + listOf(
+            "intellij.build.test.list.classes" to testClassesListFile.absolutePathString(),
+            "intellij.build.test.ignoreFirstAndLastTests" to "true",
+          ),
+          jvmArgs = jvmArgs,
+          envVariables = envVariables,
+          bootstrapClasspath = bootstrapClasspath,
+          modulePath = modulePath,
+          testClasspath = testClasspath,
+          suiteName = "__classpathroot__",
+          methodName = null,
+          devBuildSettings = null,
+        )
+        testClassesListFile.let { if (Files.exists(it)) it.readLines() else emptyList() }
+      }
+
+      if (testClasses.isEmpty() &&
+          // a bucket might be empty for run configurations with too few tests due to imperfect tests balancing
+          options.bucketsCount < 2) {
+        throw NoTestsFound()
+      }
+
+      if (options.isDedicatedTestRuntime == "class") {
+        var hasFailures = false
+
+        suspend fun runOneClass(testClassName: String) {
+          val exitCode = blockWithDefaultFlowId("running test class '$testClassName'") {
+            runJUnit5Engine(
+              mainModule = mainModule,
+              systemProperties = systemProperties,
+              jvmArgs = jvmArgs,
+              envVariables = envVariables,
+              bootstrapClasspath = bootstrapClasspath,
+              modulePath = modulePath,
+              testClasspath = testClasspath,
+              suiteName = testClassName,
+              methodName = null,
+              devBuildSettings = devBuildServerSettings,
+            )
           }
-
-          val testClassesListFile = Files.createTempFile("tests-to-run-", ".list").apply { Files.delete(this) }
-          runJUnit5Engine(
-            mainModule = mainModule,
-            systemProperties = systemProperties + ("intellij.build.test.list.classes" to testClassesListFile.absolutePathString()),
-            jvmArgs = jvmArgs,
-            envVariables = envVariables,
-            bootstrapClasspath = bootstrapClasspath,
-            modulePath = modulePath,
-            testClasspath = testClasspath,
-            suiteName = null,
-            methodName = null,
-            devBuildSettings = null,
-          )
-          testClassesListFile.let { if (Files.exists(it)) it.readLines() else emptyList() }
-        }
-
-        val testClassesJUnit34 = block("collect junit 3+4 tests") {
-          if (options.shouldSkipJUnit34Tests) {
-            messages.warning("JUnit 3+4 tests collections is skipped")
-            return@block emptyList()
-          }
-
-          val testClassesListFile = Files.createTempFile("tests-to-run-", ".list").apply { Files.delete(this) }
-          runJUnit5Engine(
-            mainModule = mainModule,
-            systemProperties = systemProperties + ("intellij.build.test.list.classes" to testClassesListFile.absolutePathString()),
-            jvmArgs = jvmArgs,
-            envVariables = envVariables,
-            bootstrapClasspath = bootstrapClasspath,
-            modulePath = modulePath,
-            testClasspath = testClasspath,
-            suiteName = options.bootstrapSuite,
-            methodName = null,
-            devBuildSettings = null,
-          )
-          return@block testClassesListFile.let { if (Files.exists(it)) it.readLines() else emptyList() }
-        }
-
-        if (testClassesJUnit5.isEmpty() && testClassesJUnit34.isEmpty() &&
-            // a bucket might be empty for run configurations with too few tests due to imperfect tests balancing
-            options.bucketsCount < 2) {
-          throw NoTestsFound()
+          if (exitCode == EXIT_FAILURE) hasFailures = true  // reported as test failure or assertNoUnhandledExceptions if exception
+          else if (exitCode == NO_TESTS_ERROR) throw NoTestsFound()
+          else if (exitCode != 0) throw RuntimeException("Unexpected exit code $exitCode when running tests in dedicated runtime (class mode)")
         }
 
-        if (options.isDedicatedTestRuntime == "class") {
-          suspend fun runOneClass(testClassName: String) {
-            val exitCode = block("running test class '$testClassName'") {
-              runJUnit5Engine(
-                mainModule = mainModule,
-                systemProperties = systemProperties + ("idea.performance.tests.discovery.filter" to "true"),
-                jvmArgs = jvmArgs,
-                envVariables = envVariables,
-                bootstrapClasspath = bootstrapClasspath,
-                modulePath = modulePath,
-                testClasspath = testClasspath,
-                suiteName = testClassName,
-                methodName = null,
-                devBuildSettings = devBuildServerSettings,
-              )
-            }
-            if (exitCode == NO_TESTS_ERROR) throw NoTestsFound()
-          }
-
-          if (testClassesJUnit5.isNotEmpty()) {
-            messages.info("Will run JUnit 5 tests:\n${testClassesJUnit5.joinToString("\n")}")
-            for (s in testClassesJUnit5) {
-              runOneClass(s)
-            }
-          }
-          if (testClassesJUnit34.isNotEmpty()) {
-            messages.info("Will run JUnit 3+4 tests:\n${testClassesJUnit34.joinToString("\n")}")
-            for (s in testClassesJUnit34) {
-              runOneClass(s)
-            }
+        if (testClasses.isNotEmpty()) {
+          messages.info("Will run test classes:\n${testClasses.joinToString("\n")}")
+          for (s in testClasses) {
+            runOneClass(s)
           }
         }
-        else if (options.isDedicatedTestRuntime == "package") {
-          fun groupByPackages(tests: List<String>): Map<String, List<String>> {
-            return tests.groupBy {
-              val i = it.lastIndexOf('.')
-              if (i != -1) it.substring(0, i) else ""
-            }
-          }
 
-          suspend fun runOnePackage(entry: Map.Entry<String, List<String>>) {
-            val packageName = entry.key
-            val classes = entry.value
-
-            val exitCode = block("running tests in package '$packageName'") {
-              runJUnit5Engine(
-                mainModule = mainModule,
-                systemProperties = systemProperties + ("idea.performance.tests.discovery.filter" to "true"),
-                jvmArgs = jvmArgs,
-                envVariables = envVariables,
-                bootstrapClasspath = bootstrapClasspath,
-                modulePath = modulePath,
-                testClasspath = testClasspath,
-                suiteName = "__classes__",
-                methodName = classes.joinToString(";"),
-                devBuildSettings = devBuildServerSettings,
-              )
-            }
-            if (exitCode == NO_TESTS_ERROR) throw NoTestsFound()
-          }
-
-          if (testClassesJUnit5.isNotEmpty()) {
-            val packages = groupByPackages(testClassesJUnit5)
-            messages.info(packages.entries.joinToString(prefix = "Will run JUnit 5 packages:\n", separator = "\n") { e ->
-              e.value.joinToString(prefix = "${e.key}\n  ", separator = "\n  ")
-            })
-            for (entry in packages) {
-              runOnePackage(entry)
-            }
-          }
-          if (testClassesJUnit34.isNotEmpty()) {
-            val packages = groupByPackages(testClassesJUnit34)
-            messages.info(packages.entries.joinToString(prefix = "Will run JUnit 3+4 packages:\n", separator = "\n") { e ->
-              e.value.joinToString(prefix = "${e.key}\n  ", separator = "\n  ")
-            })
-            for (entry in packages) {
-              runOnePackage(entry)
-            }
-          }
+        // On TeamCity test failures themselves control the build status, no need to report them as additional errors
+        if (hasFailures && !TeamCityHelper.isUnderTeamCity) {
+          throw RuntimeException("Tests failed in dedicated runtime (class mode)")
         }
       }
-      else {
-        val failedClassesJUnit5List = Files.createTempFile("failed-classes-junit5-", ".list").apply { Files.delete(this) }
-        val failedClassesJUnit34List = Files.createTempFile("failed-classes-junit34-", ".list").apply { Files.delete(this) }
-        val additionalPropertiesJUnit5: Map<String, String> = failedClassesJUnit5List.let {
-          if (options.attemptCount > 1) mapOf("intellij.build.test.retries.failedClasses.file" to "$it", "intellij.build.test.list.file" to "$it")
-          else emptyMap()
+      else if (options.isDedicatedTestRuntime == "package") {
+        var hasFailures = false
+
+        fun groupByPackages(tests: List<String>): Map<String, List<String>> {
+          return tests.groupBy {
+            val i = it.lastIndexOf('.')
+            if (i != -1) it.substring(0, i) else ""
+          }
         }
-        val additionalPropertiesJUnit34: Map<String, String> = failedClassesJUnit34List.let {
-          if (options.attemptCount > 1) mapOf("intellij.build.test.retries.failedClasses.file" to "$it", "intellij.build.test.list.file" to "$it")
-          else emptyMap()
+
+        suspend fun runOnePackage(entry: Map.Entry<String, List<String>>) {
+          val packageName = entry.key
+          val classes = entry.value
+
+          val exitCode = blockWithDefaultFlowId("running tests in package '$packageName'") {
+            runJUnit5Engine(
+              mainModule = mainModule,
+              systemProperties = systemProperties,
+              jvmArgs = jvmArgs,
+              envVariables = envVariables,
+              bootstrapClasspath = bootstrapClasspath,
+              modulePath = modulePath,
+              testClasspath = testClasspath,
+              suiteName = "__class__",
+              methodName = classes.joinToString(";"),
+              devBuildSettings = devBuildServerSettings,
+            )
+          }
+          if (exitCode == EXIT_FAILURE) hasFailures = true  // reported as test failure or assertNoUnhandledExceptions if exception
+          else if (exitCode == NO_TESTS_ERROR) throw NoTestsFound()
+          else if (exitCode != 0) throw RuntimeException("Unexpected exit code $exitCode when running tests in dedicated runtime (package mode)")
         }
-        var runJUnit5 = !options.shouldSkipJUnit5Tests
-        var runJUnit34 = !options.shouldSkipJUnit34Tests
+
+        if (testClasses.isNotEmpty()) {
+          val packages = groupByPackages(testClasses)
+          messages.info(packages.entries.joinToString(prefix = "Will run tests in packages:\n", separator = "\n") { e ->
+            e.value.joinToString(prefix = "${e.key}\n  ", separator = "\n  ")
+          })
+          for (entry in packages) {
+            runOnePackage(entry)
+          }
+        }
+
+        // On TeamCity test failures themselves control the build status, no need to report them as additional errors
+        if (hasFailures && !TeamCityHelper.isUnderTeamCity) {
+          throw RuntimeException("Tests failed in dedicated runtime (package mode)")
+        }
+      }
+    }
+    else {
+      if (options.repeatCount > 1) {
+        messages.info("Will run selected tests ${options.repeatCount} times")
+      }
+      var hadAnyFailures = false
+
+      for (runNumber in 1..options.repeatCount) {
+        val additionalProperties = mutableMapOf<String, String>()
+
+        // save failed tests to retry
+        val failedClassesListFile = if (options.attemptCount > 1) Files.createTempFile("failed-classes-", ".list").apply { Files.delete(this) } else null
+        failedClassesListFile?.let { additionalProperties["intellij.build.test.retries.failedClasses.file"] = it.absolutePathString() }
+        var failedClasses: List<String>? = null
+
+        // use separate config, system, and log directories per test process
+        val ideaLogPath = let {
+          val old = Path.of(systemProperties[PathManager.PROPERTY_LOG_PATH] ?: error("'${PathManager.PROPERTY_LOG_PATH}' is not set"))
+
+          old.createDirectories()
+          val testProcessName = systemProperties["intellij.build.test.process.name"] ?: error("'intellij.build.test.process.name' is not set")
+          Files.createTempDirectory(old, "junit-$testProcessName-")
+        }
+        val ideaConfigPath = Path.of(systemProperties[PathManager.PROPERTY_CONFIG_PATH] ?: error("'${PathManager.PROPERTY_CONFIG_PATH}' is not set")).resolve(ideaLogPath.fileName)  // reuse the same junit-* name
+        ideaConfigPath.deleteRecursively()
+        val ideaSystemPath = Path.of(systemProperties[PathManager.PROPERTY_SYSTEM_PATH] ?: error("'${PathManager.PROPERTY_SYSTEM_PATH}' is not set")).resolve(ideaLogPath.fileName)
+        ideaSystemPath.deleteRecursively()
+        additionalProperties.putAll(listOf(
+          PathManager.PROPERTY_CONFIG_PATH to ideaConfigPath.absolutePathString(),
+          PathManager.PROPERTY_SYSTEM_PATH to ideaSystemPath.absolutePathString(),
+          PathManager.PROPERTY_LOG_PATH to ideaLogPath.absolutePathString(),
+        ))
+        context.messages.info("Test process log directory: $ideaLogPath")
+
+        var exitCode = 0
+
         for (attempt in 1..options.attemptCount) {
-          if (!runJUnit5 && !runJUnit34) break
-          val spanNameSuffix = if (options.attemptCount > 1) " (attempt $attempt)" else ""
-          val additionalProperties: Map<String, String> = if (attempt > 1) mapOf("intellij.build.test.ignoreFirstAndLastTests" to "true") else emptyMap()
-
-          val exitCode5: Int = if (runJUnit5) {
-            block("run junit 5 tests${spanNameSuffix}") {
-              runJUnit5Engine(
-                mainModule = mainModule,
-                systemProperties = systemProperties + additionalProperties + additionalPropertiesJUnit5,
-                jvmArgs = jvmArgs,
-                envVariables = envVariables,
-                bootstrapClasspath = bootstrapClasspath,
-                modulePath = modulePath,
-                testClasspath = testClasspath,
-                suiteName = null,
-                methodName = null,
-                devBuildSettings = devBuildServerSettings,
-              )
+          val spanNameSuffix = buildString {
+            if (options.repeatCount > 1) {
+              append(" (run $runNumber/${options.repeatCount})")
+            }
+            if (options.attemptCount > 1) {
+              append(" (attempt $attempt)")
             }
           }
-          else {
-            0
+
+          if (attempt > 1) {
+            additionalProperties["intellij.build.test.ignoreFirstAndLastTests"] = "true"
+            check(!failedClasses.isNullOrEmpty())  // already checked in the previous attempt
+            additionalProperties[testPatternSystemPropertyKey] = failedClasses.joinToString(";")
           }
 
-          val exitCode34: Int = if (runJUnit34) {
-            block("run junit 3+4 tests${spanNameSuffix}") {
-              runJUnit5Engine(
-                mainModule = mainModule,
-                systemProperties = systemProperties + additionalProperties + additionalPropertiesJUnit34,
-                jvmArgs = jvmArgs,
-                envVariables = envVariables,
-                bootstrapClasspath = bootstrapClasspath,
-                modulePath = modulePath,
-                testClasspath = testClasspath,
-                suiteName = options.bootstrapSuite,
-                methodName = null,
-                devBuildSettings = devBuildServerSettings,
-              )
-            }
-          }
-          else {
-            0
+          blockWithDefaultFlowId("run tests${spanNameSuffix}") {
+            exitCode = runJUnit5Engine(
+              mainModule = mainModule,
+              systemProperties = systemProperties + additionalProperties,
+              jvmArgs = jvmArgs,
+              envVariables = envVariables,
+              bootstrapClasspath = bootstrapClasspath,
+              modulePath = modulePath,
+              testClasspath = testClasspath,
+              suiteName = "__classpathroot__",
+              methodName = null,
+              devBuildSettings = devBuildServerSettings,
+            )
+            failedClasses = failedClassesListFile?.let { if (Files.exists(it)) it.readLines() else emptyList() }
+            if (failedClassesListFile != null) Files.deleteIfExists(failedClassesListFile)
           }
 
-          if (exitCode5 == NO_TESTS_ERROR && exitCode34 == NO_TESTS_ERROR &&
-              // only check on the first (full) attempt
+          if (exitCode == NO_TESTS_ERROR &&
+              // only check on the first full run
               attempt == 1 &&
+              runNumber == 1 &&
               // a bucket might be empty for run configurations with too few tests due to imperfect tests balancing
               options.bucketsCount < 2) {
             throw NoTestsFound()
           }
-
-          if (runJUnit5) {
-            val failedClassesJUnit5 = failedClassesJUnit5List.let { if (Files.exists(it)) it.readLines() else emptyList() }
-            if (failedClassesJUnit5.isNotEmpty()) {
-              messages.info("Will rerun JUnit 5 tests: $failedClassesJUnit5")
-            }
-            else {
-              runJUnit5 = false
-            }
+          if (exitCode != 0 && exitCode != EXIT_FAILURE && exitCode != NO_TESTS_ERROR) {
+            throw RuntimeException("Unexpected exit code $exitCode when running tests")
           }
 
-          if (runJUnit34) {
-            val failedClassesJUnit34 = failedClassesJUnit34List.let { if (Files.exists(it)) it.readLines() else emptyList() }
-            if (failedClassesJUnit34.isNotEmpty()) {
-              messages.info("Will rerun JUnit 3+4 tests: $failedClassesJUnit34")
+          if (options.attemptCount > 1) {
+            if (failedClasses!!.isNotEmpty()) {
+              if (exitCode != EXIT_FAILURE) throw RuntimeException("Unexpected exit code $exitCode when running tests but found failed tests to retry")
+              messages.warning("Will rerun tests: $failedClasses")
             }
             else {
-              runJUnit34 = false
+              // Besides ordinary test failures, there might be non-test errors such as 'JUnit5TeamCityRunner.assertNoUnhandledExceptions'
+              messages.warning("Got exit code $exitCode when running tests but no failed tests to retry found. A test framework failure?")
+              break // All tests passed or no tests were found; no further attempts needed.
             }
           }
         }
+
+        // clean up, don't remove the test process logs
+        try {
+          ideaConfigPath.deleteRecursively()
+          ideaSystemPath.deleteRecursively()
+        } catch (e: java.nio.file.FileSystemException) {
+          messages.warning("Can't delete config or system path: ${e.stackTraceToString()}")
+        }
+
+        val hadRunFailures = exitCode == EXIT_FAILURE
+        hadAnyFailures = hadAnyFailures || hadRunFailures
+
+        // On TeamCity test failures themselves control the build status, no need to report them as additional errors
+        if (hadRunFailures && !TeamCityHelper.isUnderTeamCity) {
+          val runSuffix = if (options.repeatCount > 1) " on run $runNumber/${options.repeatCount}" else ""
+          throw RuntimeException("Tests failed$runSuffix (exit code: $exitCode, $NO_TESTS_ERROR means no tests found)")
+        }
+      }
+
+      if (!TeamCityHelper.isUnderTeamCity && !hadAnyFailures) {
+        println("*** All tests passed ***")
       }
     }
   }
@@ -1245,15 +1219,16 @@ internal class TestingTasksImpl(context: CompilationContext, private val options
     bootstrapClasspath: List<String>,
     modulePath: List<String>?,
     testClasspath: List<String>,
-    suiteName: String?,
+    suiteName: String,
     methodName: String?,
     devBuildSettings: DevBuildServerSettings?,
   ): Int {
     val useDevMode = devBuildSettings != null && devBuildSettings.mainClass.isNotEmpty()
     if (useDevMode) {
-      val bootClasspath = context.getModuleRuntimeClasspath(module = context.findRequiredModule(IJENT_BOOT_CLASSPATH_MODULE), forTests = false)
-      val classpath = context.getModuleRuntimeClasspath(module = context.findRequiredModule(devBuildSettings.mainClassModule), forTests = false)
+      val bootClasspath = context.getModuleRuntimeClasspath(module = context.outputProvider.findRequiredModule(IJENT_BOOT_CLASSPATH_MODULE), forTests = false)
+      val classpath = context.getModuleRuntimeClasspath(module = context.outputProvider.findRequiredModule(devBuildSettings.mainClassModule), forTests = false)
         .filter { !bootClasspath.contains(it) }
+        .map { it.toString() }
 
       val messages = context.messages
       messages.info("Effective main module: $mainModule")
@@ -1282,7 +1257,7 @@ internal class TestingTasksImpl(context: CompilationContext, private val options
         appendJUnitStarter(classpath, context)
       }
 
-      if (!isBootstrapSuiteDefault || isRunningInBatchMode || options.isDedicatedTestRuntime != "false" || suiteName == null) {
+      if (options.isDedicatedTestRuntime != "false" || suiteName == null || suiteName == "__class__" || suiteName == "__classpathroot__") {
         classpath.addAll(testClasspath)
       }
 
@@ -1307,13 +1282,22 @@ internal class TestingTasksImpl(context: CompilationContext, private val options
     envVariables: Map<String, String>,
     modulePath: List<String>?,
     classpath: List<String>,
-    suiteName: String?,
+    suiteName: String,
     methodName: String?,
     devBuildModeSettings: DevBuildServerSettings?,
   ): Int {
     val args = ArrayList<String>()
     args.add("-classpath")
     args.add(classpath.joinToString(separator = File.pathSeparator))
+
+    /*
+    TODO it's better to load byte buddy beforehand and prohibit dynamic agent loading
+    WARNING: A Java agent has been loaded dynamically (/var/folders/y2/wzcbjbb16rz5l119wsct9vwc0000gn/T/byteBuddyAgent3573542851707188859.jar)
+    WARNING: If a serviceability tool is in use, please run with -XX:+EnableDynamicAgentLoading to hide this warning
+    WARNING: If a serviceability tool is not in use, please run with -Djdk.instrument.traceUsage for more information
+    WARNING: Dynamic loading of agents will be disallowed by default in a future release
+     */
+    args.add("-XX:+EnableDynamicAgentLoading")
 
     if (modulePath != null) {
       args.add("--module-path")
@@ -1339,7 +1323,7 @@ internal class TestingTasksImpl(context: CompilationContext, private val options
 
     val environment: MutableMap<String, String> = HashMap(envVariables)
 
-    val mainClass = if (suiteName == null) "com.intellij.tests.JUnit5TeamCityRunnerForTestsOnClasspath" else "com.intellij.tests.JUnit5TeamCityRunnerForTestAllSuite"
+    val mainClass = "com.intellij.tests.JUnit5TeamCityRunner"
     if (devBuildModeSettings == null) {
       args.add(mainClass)
     }
@@ -1347,9 +1331,7 @@ internal class TestingTasksImpl(context: CompilationContext, private val options
       devBuildModeSettings.apply(mainClass, mainModule, args, environment)
     }
 
-    if (suiteName != null) {
-      args.add(suiteName)
-    }
+    args.add(suiteName)
 
     if (methodName != null) {
       args.add(methodName)
@@ -1359,7 +1341,9 @@ internal class TestingTasksImpl(context: CompilationContext, private val options
     val runtime = getRuntimeExecutablePath().toString()
 
     context.messages.info("Starting tests on runtime $runtime")
-    val builder = ProcessBuilder(runtime, "@" + argFile.absolutePath)
+    val builder = ProcessBuilder(runtime, "@" + argFile.absolutePath).apply {
+      removeBazelEnvironmentVariables(environment())  // to prevent treating the test process as BazelRunfiles#isRunningFromBazel
+    }
     builder.environment().putAll(environment)
     builder.inheritIO()
     val exitCode = builder.start().awaitExit()
@@ -1368,23 +1352,17 @@ internal class TestingTasksImpl(context: CompilationContext, private val options
     }
     return exitCode
   }
-
-  private val isBootstrapSuiteDefault: Boolean
-    get() = options.bootstrapSuite == TestingOptions.BOOTSTRAP_SUITE_DEFAULT
-
-  private val isRunningInBatchMode: Boolean
-    get() {
-      return options.batchTestIncludes != null &&
-             options.testPatterns == null &&
-             options.testConfigurations == null &&
-             options.testGroups == TestingOptions.ALL_EXCLUDE_DEFINED_GROUP
-    }
 }
 
-private fun appendJUnitStarter(path: MutableList<String>, context: CompilationContext) {
-  for (libName in listOf("JUnit5", "JUnit5Launcher", "JUnit5Vintage", "JUnit5Jupiter")) {
-    for (library in context.projectModel.project.libraryCollection.findLibrary(libName)!!.getFiles(JpsOrderRootType.COMPILED)) {
-      path.add(library.absolutePath)
+private fun appendJUnitStarter(classPath: MutableList<String>, context: CompilationContext) {
+  for ((libName, moduleName) in arrayOf(
+    "JUnit5" to null,
+    "JUnit5Launcher" to "intellij.libraries.junit5.launcher",
+    "JUnit5Vintage" to "intellij.libraries.junit5.vintage",
+    "JUnit5Jupiter" to "intellij.libraries.junit5.jupiter",
+  )) {
+    for (library in context.outputProvider.findLibraryRoots(libName, moduleName)) {
+      classPath.add(library.toString())
     }
   }
 }
@@ -1416,11 +1394,47 @@ private val ignoredPrefixes = listOf(
   "-ea", "-XX:+HeapDumpOnOutOfMemoryError", "-Xbootclasspath", "-Xmx", "-Xms",
   // ReservedCodeCacheSize is critical - if not configured, maybe error `Out of space in CodeCache for adapters`
   "-XX:ReservedCodeCacheSize",
-  "-Didea.system.path=", "-Didea.config.path=", "-Didea.home.path="
+  "-D${PathManager.PROPERTY_HOME_PATH}=",
+  "-D${PathManager.PROPERTY_CONFIG_PATH}=",
+  "-D${PathManager.PROPERTY_SYSTEM_PATH}=",
+  "-D${PathManager.PROPERTY_LOG_PATH}=",
 )
 
 private fun removeStandardJvmOptions(vmOptions: List<String>): List<String> {
   return vmOptions.filter { option -> ignoredPrefixes.none(option::startsWith) }
+}
+
+private fun removeBazelEnvironmentVariables(environment: MutableMap<String, String>) = listOf(
+  "BUILD_WORKING_DIRECTORY",
+  "BUILD_WORKSPACE_DIRECTORY",
+  "JAVA_RUNFILES",
+  "RUNFILES_DIR",
+  "RUNFILES_MANIFEST_FILE",
+  "RUNFILES_MANIFEST_ONLY",
+  "SELF_LOCATION",
+  "TEST_SRCDIR",
+  "TEST_TMPDIR",
+).forEach { environment.remove(it) }
+
+private suspend inline fun <T> blockWithDefaultFlowId(
+  name: String,
+  crossinline operation: suspend CoroutineScope.(Span) -> T,
+): T {
+  // the test process inherits I/O from the current process and writes to stdout/stderr w/o flowId, start a new block in the root flow to capture it
+  if (TeamCityHelper.isUnderTeamCity) {
+    TraceManager.flush()  // before BlockOpened
+    println(BlockOpened(name))
+  }
+  try {
+    // SpanAwareServiceMessage uses SpanContext#getSpanId as flowId, don't use SpanKt#block to preserve the default flow ID
+    return spanBuilder(name).use(operation = operation)
+  }
+  finally {
+    if (TeamCityHelper.isUnderTeamCity) {
+      TraceManager.flush()  // before BlockClosed
+      println(BlockClosed(name))
+    }
+  }
 }
 
 private suspend fun publishTestDiscovery(messages: BuildMessages, file: String?) {
