@@ -1,33 +1,40 @@
-// Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
+// Copyright 2000-2026 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.codeInsight.daemon.impl;
 
-import com.intellij.codeHighlighting.*;
+import com.intellij.codeHighlighting.BackgroundEditorHighlighter;
+import com.intellij.codeHighlighting.HighlightingPass;
 import com.intellij.codeHighlighting.Pass;
+import com.intellij.codeHighlighting.TextEditorHighlightingPass;
+import com.intellij.codeHighlighting.TextEditorHighlightingPassRegistrar;
 import com.intellij.codeInsight.daemon.DaemonCodeAnalyzerSettings;
 import com.intellij.codeInsight.daemon.LineMarkerInfo;
 import com.intellij.codeInsight.daemon.ReferenceImporter;
 import com.intellij.codeInsight.hint.HintManager;
 import com.intellij.codeInsight.intention.impl.FileLevelIntentionComponent;
 import com.intellij.codeInsight.intention.impl.IntentionHintComponent;
-import com.intellij.codeInsight.multiverse.*;
+import com.intellij.codeInsight.multiverse.CodeInsightContext;
+import com.intellij.codeInsight.multiverse.CodeInsightContextHighlightingUtil;
+import com.intellij.codeInsight.multiverse.CodeInsightContextManager;
+import com.intellij.codeInsight.multiverse.CodeInsightContextUtil;
+import com.intellij.codeInsight.multiverse.CodeInsightContexts;
+import com.intellij.codeInsight.multiverse.EditorContextManager;
 import com.intellij.codeInsight.quickfix.LazyQuickFixUpdater;
 import com.intellij.codeInspection.ex.GlobalInspectionContextBase;
 import com.intellij.codeWithMe.ClientId;
 import com.intellij.concurrency.JobLauncher;
 import com.intellij.concurrency.ThreadContext;
-import com.intellij.diagnostic.ThreadDumper;
 import com.intellij.ide.PowerSaveMode;
 import com.intellij.ide.impl.ProjectUtil;
-import com.intellij.ide.lightEdit.LightEdit;
-import com.intellij.lang.FileASTNode;
 import com.intellij.lang.annotation.HighlightSeverity;
 import com.intellij.notebook.editor.BackedVirtualFile;
 import com.intellij.notebook.editor.BackedVirtualFileProvider;
 import com.intellij.openapi.Disposable;
-import com.intellij.openapi.application.*;
+import com.intellij.openapi.application.AccessToken;
+import com.intellij.openapi.application.Application;
+import com.intellij.openapi.application.ApplicationManager;
+import com.intellij.openapi.application.ModalityState;
+import com.intellij.openapi.application.ReadAction;
 import com.intellij.openapi.application.ex.ApplicationManagerEx;
-import com.intellij.openapi.application.impl.NonBlockingReadActionImpl;
-import com.intellij.openapi.application.impl.TestOnlyThreading;
 import com.intellij.openapi.components.PersistentStateComponent;
 import com.intellij.openapi.components.State;
 import com.intellij.openapi.components.Storage;
@@ -44,92 +51,118 @@ import com.intellij.openapi.editor.impl.DocumentMarkupModel;
 import com.intellij.openapi.editor.impl.EditorMarkupModelImpl;
 import com.intellij.openapi.editor.markup.MarkupModel;
 import com.intellij.openapi.editor.markup.RangeHighlighter;
-import com.intellij.openapi.fileEditor.*;
+import com.intellij.openapi.fileEditor.ClientFileEditorManager;
+import com.intellij.openapi.fileEditor.FileDocumentManager;
+import com.intellij.openapi.fileEditor.FileEditor;
+import com.intellij.openapi.fileEditor.FileEditorManager;
+import com.intellij.openapi.fileEditor.FileEditorWithTextEditors;
+import com.intellij.openapi.fileEditor.TextEditor;
 import com.intellij.openapi.fileEditor.impl.text.TextEditorProvider;
 import com.intellij.openapi.fileTypes.FileType;
-import com.intellij.openapi.fileTypes.FileTypeManager;
-import com.intellij.openapi.fileTypes.impl.FileTypeManagerImpl;
 import com.intellij.openapi.progress.ProcessCanceledException;
 import com.intellij.openapi.progress.ProgressIndicator;
 import com.intellij.openapi.progress.ProgressManager;
-import com.intellij.openapi.progress.impl.CoreProgressManager;
-import com.intellij.openapi.project.*;
-import com.intellij.openapi.util.*;
+import com.intellij.openapi.project.DumbAware;
+import com.intellij.openapi.project.DumbService;
+import com.intellij.openapi.project.DumbServiceImpl;
+import com.intellij.openapi.project.Project;
+import com.intellij.openapi.project.ProjectManager;
+import com.intellij.openapi.util.Disposer;
+import com.intellij.openapi.util.Key;
+import com.intellij.openapi.util.Pair;
+import com.intellij.openapi.util.ProperTextRange;
+import com.intellij.openapi.util.TextRange;
 import com.intellij.openapi.util.registry.Registry;
 import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.openapi.vfs.VirtualFile;
 import com.intellij.openapi.vfs.VirtualFileManager;
-import com.intellij.openapi.vfs.newvfs.RefreshQueueImpl;
 import com.intellij.packageDependencies.DependencyValidationManager;
 import com.intellij.psi.PsiCompiledElement;
 import com.intellij.psi.PsiDocumentManager;
 import com.intellij.psi.PsiFile;
-import com.intellij.psi.impl.source.PsiConsistencyAssertions;
 import com.intellij.psi.util.PsiEditorUtil;
-import com.intellij.psi.util.PsiModificationTracker;
 import com.intellij.psi.util.PsiUtilBase;
 import com.intellij.psi.util.PsiUtilCore;
-import com.intellij.util.*;
-import com.intellij.util.concurrency.AppExecutorUtil;
+import com.intellij.util.ArrayUtil;
+import com.intellij.util.ConcurrencyUtil;
+import com.intellij.util.ExceptionUtil;
+import com.intellij.util.Processor;
+import com.intellij.util.Processors;
+import com.intellij.util.SmartList;
 import com.intellij.util.concurrency.EdtExecutorService;
 import com.intellij.util.concurrency.ThreadingAssertions;
 import com.intellij.util.concurrency.annotations.RequiresBackgroundThread;
 import com.intellij.util.concurrency.annotations.RequiresEdt;
+import com.intellij.util.concurrency.annotations.RequiresReadLock;
 import com.intellij.util.containers.ContainerUtil;
-import com.intellij.util.gist.GistManager;
-import com.intellij.util.gist.GistManagerImpl;
 import com.intellij.util.io.storage.HeavyProcessLatch;
-import com.intellij.util.ui.EDT;
 import io.opentelemetry.context.Context;
-import kotlin.Unit;
 import kotlinx.coroutines.CoroutineScope;
 import org.jdom.Element;
-import org.jetbrains.annotations.*;
+import org.jetbrains.annotations.ApiStatus;
+import org.jetbrains.annotations.NonNls;
+import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
+import org.jetbrains.annotations.TestOnly;
+import org.jetbrains.annotations.Unmodifiable;
+import org.jetbrains.annotations.VisibleForTesting;
 
-import javax.swing.*;
-import java.awt.*;
+import javax.swing.SwingUtilities;
+import java.awt.Window;
 import java.lang.ref.Reference;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.Comparator;
+import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
-import java.util.concurrent.*;
-import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.Map;
+import java.util.Set;
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.ForkJoinPool;
+import java.util.concurrent.Future;
+import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicLong;
+import java.util.function.Consumer;
 
 import static com.intellij.codeInsight.daemon.impl.FileLevelComponentUtil.doAddFileLevelInfoComponent;
 import static com.intellij.codeInsight.daemon.impl.FileLevelComponentUtil.doRemoveFileLevelInfoComponent;
+import static com.intellij.openapi.wm.ex.ProjectFrameCapabilitiesKt.isBackgroundActivitiesSuppressedSync;
 
 @State(name = "DaemonCodeAnalyzer", storages = @Storage(StoragePathMacros.PRODUCT_WORKSPACE_FILE))
 @ApiStatus.Internal
 public final class DaemonCodeAnalyzerImpl extends DaemonCodeAnalyzerEx
-  implements PersistentStateComponent<Element>, Disposable, DaemonCodeAnalysisStatus {
+  implements PersistentStateComponent<Element>, Disposable, DaemonCodeAnalysisStatus, Runnable {
 
-  private static final Logger LOG = Logger.getInstance(DaemonCodeAnalyzerImpl.class);
+  static final Logger LOG = Logger.getInstance(DaemonCodeAnalyzerImpl.class);
 
   private static final Key<List<HighlightInfo>> FILE_LEVEL_HIGHLIGHTS = Key.create("FILE_LEVEL_HIGHLIGHTS");
   private static final @NotNull Key<Boolean> COMPLETE_ESSENTIAL_HIGHLIGHTING_KEY = Key.create("COMPLETE_ESSENTIAL_HIGHLIGHTING");
-  @NotNull
-  private final Project myProject;
+  @NotNull private final Project myProject;
   private final DaemonCodeAnalyzerSettings mySettings;
-  private final DaemonListeners myListeners;
+  final DaemonListeners myListeners;
   private PsiDocumentManager psiDocumentManager;
   private FileEditorManager fileEditorManager;
   private final Map<FileEditor, DaemonProgressIndicator> myUpdateProgress = new HashMap<>(); // guarded by `this` lock
 
-  private final UpdateRunnable myUpdateRunnable;
+  private final UpdateRunnable myUpdateRunnable = new UpdateRunnable(this);
   private volatile @NotNull Future<?> myUpdateRunnableFuture = CompletableFuture.completedFuture(null);
-  private boolean myUpdateByTimerEnabled = true; // guarded by this
+  private volatile boolean myUpdateByTimerEnabled = true; // guarded by this
   private final Collection<VirtualFile> myDisabledHintsFiles = new HashSet<>();
   private final Collection<VirtualFile> myDisabledHighlightingFiles = new HashSet<>();
 
   private final FileStatusMap myFileStatusMap;
 
-  private volatile boolean myDisposed;     // the only possible transition: false -> true
+  volatile boolean myDisposed;     // the only possible transition: false -> true
 
   private static final @NonNls String DISABLE_HINTS_TAG = "disable_hints";
   private static final @NonNls String FILE_TAG = "file";
   private static final @NonNls String URL_ATT = "url";
-  private final PassExecutorService myPassExecutorService;
+  final PassExecutorService myPassExecutorService;
   /**
    * Timestamp of {@link #myUpdateRunnable} which it's necessary to start (in System.nanoTime() sense)
    * May be later than the actual ScheduledFuture sitting in the {@link EdtExecutorService} queue.
@@ -141,6 +174,7 @@ public final class DaemonCodeAnalyzerImpl extends DaemonCodeAnalyzerEx
   private final DaemonListener myDaemonListenerPublisher;
 
   private final DaemonCodeAnalyzerRepaintIconHelper repaintIconHelper;
+  volatile Future<?> renewInBackgroundAndRestart = CompletableFuture.completedFuture(null); // accessed in EDT only
 
   public DaemonCodeAnalyzerImpl(@NotNull Project project, @NotNull CoroutineScope coroutineScope) {
     // DependencyValidationManagerImpl adds scope listener, so we need to force service creation
@@ -158,7 +192,6 @@ public final class DaemonCodeAnalyzerImpl extends DaemonCodeAnalyzerEx
 
     myDisposed = false;
     myFileStatusMap.markAllFilesDirty("DaemonCodeAnalyzer init");
-    myUpdateRunnable = new UpdateRunnable(this);
     Disposer.register(this, () -> {
       assert !myDisposed : "Double dispose";
       myUpdateRunnable.clearFieldsOnDispose();
@@ -192,12 +225,12 @@ public final class DaemonCodeAnalyzerImpl extends DaemonCodeAnalyzerEx
   }
 
   @Override
-  public synchronized void dispose() {
+  public void dispose() {
     clearReferences();
   }
 
-  private synchronized void clearReferences() {
-    processIndicators(indicator -> {indicator.cancel(); return true;});
+  synchronized void clearReferences() {
+    processIndicators(indicator -> {indicator.cancel("DCA.clearReferences"); return true;});
     // avoid leak of highlight session via user data
     myUpdateProgress.clear();
     myUpdateRunnableFuture.cancel(true);
@@ -218,6 +251,7 @@ public final class DaemonCodeAnalyzerImpl extends DaemonCodeAnalyzerEx
   }
 
   @TestOnly
+  @RequiresReadLock
   public static @NotNull List<HighlightInfo> getHighlights(@NotNull Document document,
                                                            @Nullable HighlightSeverity minSeverity,
                                                            @NotNull Project project) {
@@ -240,7 +274,7 @@ public final class DaemonCodeAnalyzerImpl extends DaemonCodeAnalyzerEx
     return list;
   }
 
-  private void assertFileFromMyProject(@NotNull Project project, @NotNull PsiFile psiFile) {
+  void assertFileFromMyProject(@NotNull Project project, @NotNull PsiFile psiFile) {
     if (project != myProject) {
       throw new IllegalStateException("my project is " + myProject + " but I was called with " + project);
     }
@@ -259,9 +293,10 @@ public final class DaemonCodeAnalyzerImpl extends DaemonCodeAnalyzerEx
     }
   }
 
+  @RequiresReadLock
   @Override
   public boolean hasFileLevelHighlights(int group, @NotNull PsiFile psiFile) {
-    ApplicationManager.getApplication().assertReadAccessAllowed();
+    ThreadingAssertions.assertReadAccess();
     assertFileFromMyProject(psiFile.getProject(), psiFile);
     VirtualFile vFile = BackedVirtualFile.getOriginFileIfBacked(psiFile.getViewProvider().getVirtualFile());
     for (FileEditor fileEditor : getFileEditorManager().getAllEditorList(vFile)) {
@@ -348,21 +383,9 @@ public final class DaemonCodeAnalyzerImpl extends DaemonCodeAnalyzerEx
         List<HighlightInfo> fileLevelInfos = getOrCreateFileLevelHighlights(fileEditor);
         if (!ContainerUtil.exists(fileLevelInfos, existing -> existing.equalsByActualOffset(info))) {
           Document document = textEditor.getEditor().getDocument();
-          MarkupModel markupModel = DocumentMarkupModel.forDocument(document, myProject, true);
+          MarkupModelEx markupModel = (MarkupModelEx)DocumentMarkupModel.forDocument(document, myProject, true);
           // todo do we need to create a new highlighter if toReuse is not-null?
-          RangeHighlighterEx highlighter = HighlightInfoUpdaterImpl.createOrReuseFakeFileLevelHighlighter(group,
-                                                                                                          info,
-                                                                                                          (RangeHighlighterEx)toReuse,
-                                                                                                          markupModel,
-                                                                                                          myProject,
-                                                                                                          context);
-          // for the condition `existing.equalsByActualOffset(info)` above work correctly,
-          // create a fake whole-file highlighter which will track the document size changes
-          // and which will make possible to calculate correct `info.getActualEndOffset()`
-          if (toReuse == null) {
-            // assign only newly created highlighter here; otherwise the reused highlighter was already set, no need (and can't) to overwrite
-            info.setHighlighter(highlighter);
-          }
+          HighlightInfoUpdaterImpl.createOrReuseFakeFileLevelHighlighter(group, info, (RangeHighlighterEx)toReuse, markupModel, myProject, context);
           fileLevelInfos.add(info);
           addFileLevelInfoComponentToEditor(info, psiFile, textEditor);
           if (LOG.isDebugEnabled()) {
@@ -399,7 +422,7 @@ public final class DaemonCodeAnalyzerImpl extends DaemonCodeAnalyzerEx
           return true;
         });
         Document document = textEditor.getEditor().getDocument();
-        MarkupModel markupModel = DocumentMarkupModel.forDocument(document, myProject, true);
+        MarkupModelEx markupModel = (MarkupModelEx)DocumentMarkupModel.forDocument(document, myProject, true);
         if (toReuse == null) {
           HighlightInfoUpdaterImpl.createOrReuseFakeFileLevelHighlighter(newInfo.getGroup(), newInfo, null, markupModel, myProject, context);
         }
@@ -461,7 +484,7 @@ public final class DaemonCodeAnalyzerImpl extends DaemonCodeAnalyzerEx
   @Override
   @RequiresBackgroundThread
   public @NotNull List<HighlightInfo> runMainPasses(@NotNull PsiFile psiFile, @NotNull Document document, @NotNull ProgressIndicator progress) {
-    ApplicationManager.getApplication().assertIsNonDispatchThread();
+    ThreadingAssertions.assertBackgroundThread();
     assertFileFromMyProject(psiFile.getProject(), psiFile);
 
     GlobalInspectionContextBase.assertUnderDaemonProgress();
@@ -479,10 +502,12 @@ public final class DaemonCodeAnalyzerImpl extends DaemonCodeAnalyzerEx
           List<TextEditorHighlightingPass> mainPasses = TextEditorHighlightingPassRegistrarEx.getInstanceEx(myProject)
             .instantiateMainPasses(psiFile, document, HighlightInfoProcessor.getEmpty());
 
-          JobLauncher.getInstance().invokeConcurrentlyUnderProgress(mainPasses, progress, pass -> ReadAction.compute(() -> {
-            pass.doCollectInformation(progress);
-            return true;
-          }));
+          JobLauncher.getInstance()
+            .invokeConcurrentlyUnderProgress(mainPasses, progress, pass -> ReadAction.computeBlocking(() -> {
+              pass.doCollectInformation(progress);
+              return true;
+            }));
+
           return mainPasses;
         });
 
@@ -506,269 +531,6 @@ public final class DaemonCodeAnalyzerImpl extends DaemonCodeAnalyzerEx
     return result;
   }
 
-  private volatile boolean mustWaitForSmartMode = true;
-  @TestOnly
-  public void mustWaitForSmartMode(boolean mustWait, @NotNull Disposable parent) {
-    assert ApplicationManager.getApplication().isUnitTestMode();
-    boolean old = mustWaitForSmartMode;
-    mustWaitForSmartMode = mustWait;
-    Disposer.register(parent, () -> mustWaitForSmartMode = old);
-  }
-
-  /**
-   * do not run in production since it differs slightly from the {@link #runUpdate()}
-   */
-  @TestOnly
-  @ApiStatus.Internal
-  public void runPasses(@NotNull PsiFile psiFile,
-                        @NotNull Document document,
-                        @NotNull TextEditor textEditor,
-                        int @NotNull [] passesToIgnore,
-                        boolean canChangeDocument,
-                        @Nullable Runnable callbackWhileWaiting) throws Exception {
-    ThreadingAssertions.assertEventDispatchThread();
-    assert !myDisposed;
-    PsiUtilCore.ensureValid(psiFile);
-    assertFileFromMyProject(psiFile.getProject(), psiFile);
-    Editor editor = textEditor.getEditor();
-    assert editor.getDocument() == document : "Expected document " + document +
-                                              " but the passed TextEditor points to a different document: " + editor.getDocument();
-    Document associatedDocument = PsiDocumentManager.getInstance(myProject).getDocument(psiFile);
-    assert associatedDocument == document : "Expected document " + document + " but the passed PsiFile points to a different document: " + associatedDocument;
-    Application application = ApplicationManager.getApplication();
-    if (application.isWriteAccessAllowed()) {
-      throw new IllegalStateException("Must not start highlighting from within write action, or deadlock is imminent");
-    }
-    assert application.isUnitTestMode();
-    boolean isDebugMode = !ApplicationManagerEx.isInStressTest();
-    ((FileTypeManagerImpl)FileTypeManager.getInstance()).drainReDetectQueue();
-    do {
-      TestOnlyThreading.releaseTheAcquiredWriteIntentLockThenExecuteActionAndTakeWriteIntentLockBack(() -> {
-        EDT.dispatchAllInvocationEvents();
-        return Unit.INSTANCE;
-      });
-      // refresh will fire write actions interfering with highlighting
-      // heavy ops are bad, but VFS refresh is ok
-    }
-    while (RefreshQueueImpl.isRefreshInProgress() || heavyProcessIsRunning());
-    long dStart = System.currentTimeMillis();
-    while (mustWaitForSmartMode && DumbService.getInstance(myProject).isDumb()) {
-      if (System.currentTimeMillis() > dStart + 100_000) {
-        throw new IllegalStateException("Timeout waiting for smart mode. If you absolutely want to be dumb, please use DaemonCodeAnalyzerImpl.mustWaitForSmartMode(false).");
-      }
-      TestOnlyThreading.releaseTheAcquiredWriteIntentLockThenExecuteActionAndTakeWriteIntentLockBack(() -> {
-        EDT.dispatchAllInvocationEvents();
-        return Unit.INSTANCE;
-      });
-    }
-    ((GistManagerImpl)GistManager.getInstance()).clearQueueInTests();
-    TestOnlyThreading.releaseTheAcquiredWriteIntentLockThenExecuteActionAndTakeWriteIntentLockBack(() -> {
-      EDT.dispatchAllInvocationEvents();
-      return Unit.INSTANCE;
-    });
-    NonBlockingReadActionImpl.waitForAsyncTaskCompletion(); // wait for async editor loading
-
-    clearReferences();
-
-    // previous passes can be canceled but still in flight. wait for them to avoid interference
-    myPassExecutorService.cancelAll(false, "DaemonCodeAnalyzerImpl.runPasses");
-
-    CodeInsightContext context = CodeInsightContextUtil.getCodeInsightContext(psiFile);
-
-    waitForUpdateFileStatusBackgroundQueueInTests(); // update the file status map before prohibiting its modifications
-    PsiDocumentManager.getInstance(myProject).commitAllDocuments();
-    PsiConsistencyAssertions.assertNoFileTextMismatch(psiFile, editor.getDocument(), null);
-    FileStatusMap fileStatusMap = getFileStatusMap();
-    fileStatusMap.runAllowingDirt(canChangeDocument, () -> {
-      for (int ignoreId : passesToIgnore) {
-        fileStatusMap.markFileUpToDate(document, context, ignoreId, null);
-      }
-      ThrowableRunnable<Exception> doRunPasses = () -> doRunPasses(textEditor, passesToIgnore, canChangeDocument, callbackWhileWaiting);
-      if (isDebugMode) {
-        DaemonProgressIndicator.runInDebugMode(doRunPasses);
-      }
-      else {
-        doRunPasses.run();
-      }
-    });
-  }
-
-  @TestOnly
-  private void doRunPasses(@NotNull TextEditor textEditor,
-                           int @NotNull [] passesToIgnore,
-                           boolean canChangeDocument,
-                           @Nullable Runnable callbackWhileWaiting) throws Exception {
-    ThreadingAssertions.assertEventDispatchThread();
-    ((CoreProgressManager)ProgressManager.getInstance()).suppressAllDeprioritizationsDuringLongTestsExecutionIn(() -> {
-      VirtualFile virtualFile = textEditor.getFile();
-      Document document = FileDocumentManager.getInstance().getDocument(virtualFile);
-      assert document != null : "Document is null for " + virtualFile + "; file type=" + virtualFile.getFileType();
-
-      Editor editor = textEditor.getEditor();
-      CodeInsightContext context = EditorContextManager.getEditorContext(editor, myProject);
-      PsiFile psiFile = TextEditorBackgroundHighlighter.renewFile(myProject, document, context);
-      FileASTNode fileNode = psiFile.getNode();
-      HighlightingSession session = queuePassesCreation(textEditor, virtualFile, passesToIgnore, new ConcurrentHashMap<>());
-      if (session == null) {
-        LOG.error("Can't create session for " + textEditor + " (" + textEditor.getClass() + ")," +
-                  " fileEditor.getBackgroundHighlighter()=" + textEditor.getBackgroundHighlighter() +
-                  "; virtualFile=" + virtualFile);
-        throw new ProcessCanceledException();
-      }
-      ProgressIndicator progress = session.getProgressIndicator();
-      // there can be PCE in FJP during queuePassesCreation; "no PCE" guarantees that session is not null
-      progress.checkCanceled();
-      //noinspection IncorrectCancellationExceptionHandling
-      try {
-        long start = System.currentTimeMillis();
-        waitInOtherThread(600_000, canChangeDocument, () -> {
-          NonBlockingReadActionImpl.waitForAsyncTaskCompletion();//auto-imports use non-blocking read actions
-          NonBlockingReadActionImpl.waitForAsyncTaskCompletion();
-          progress.checkCanceled();
-          if (callbackWhileWaiting != null) {
-            callbackWhileWaiting.run();
-          }
-          // give other threads a chance to do smth useful
-          if (System.currentTimeMillis() > start + 50) {
-            TimeoutUtil.sleep(10);
-          }
-          TestOnlyThreading.releaseTheAcquiredWriteIntentLockThenExecuteActionAndTakeWriteIntentLockBack(() -> {
-            EDT.dispatchAllInvocationEvents();
-            return Unit.INSTANCE;
-          });
-          progress.checkCanceled();
-          return progress.isRunning();
-        });
-        if (progress.isRunning() && !progress.isCanceled()) {
-          @SuppressWarnings("resource")
-          ForkJoinPool pool = ForkJoinPool.commonPool();
-
-          throw new RuntimeException("Highlighting still running after " +
-             (System.currentTimeMillis() - start) / 1000 + " seconds. Still submitted passes: " +
-                                     myPassExecutorService.getAllSubmittedPasses() +
-                                     " ForkJoinPool.commonPool(): " + pool + "\n" +
-                                     ", ForkJoinPool.commonPool() active thread count: " + pool.getActiveThreadCount() +
-                                     ", ForkJoinPool.commonPool() has queued submissions: " + pool.hasQueuedSubmissions() + "\n" +
-                                     ThreadDumper.dumpThreadsToString());
-        }
-
-        ((HighlightingSessionImpl)session).applyFileLevelHighlightsRequests();
-        EDT.dispatchAllInvocationEvents();
-        EDT.dispatchAllInvocationEvents();
-        NonBlockingReadActionImpl.waitForAsyncTaskCompletion();//auto-imports use non-blocking read actions
-        NonBlockingReadActionImpl.waitForAsyncTaskCompletion();
-        assert progress.isCanceled();
-      }
-      catch (Throwable e) {
-        Throwable unwrapped = ExceptionUtilRt.unwrapException(e, ExecutionException.class);
-        if (LOG.isDebugEnabled()) {
-          LOG.debug("doRunPasses() thrown " + ExceptionUtil.getThrowableText(unwrapped));
-        }
-        if (unwrapped instanceof ProcessCanceledException) {
-          Throwable savedException = ((DaemonProgressIndicator)progress).getCancellationTrace();
-          if (savedException != null) {
-            if (DaemonProgressIndicator.CANCEL_WAS_CALLED_REASON.equals(savedException.getMessage())) {
-              throw (ProcessCanceledException)unwrapped;
-            }
-            unwrapped = savedException;
-          }
-        }
-        if (progress.isCanceled() && progress.isRunning()) {
-          unwrapped.addSuppressed(new RuntimeException("Daemon progress was canceled unexpectedly: " + progress));
-          ExceptionUtil.rethrow(unwrapped);
-        }
-        if (!progress.isCanceled()) {
-          ExceptionUtil.rethrow(unwrapped);
-        }
-      }
-      finally {
-        if (!progress.isCanceled()) {
-          ((DaemonProgressIndicator)progress).cancel("Cancel after highlighting. threads:\n"+ThreadDumper.dumpThreadsToString());
-        }
-        waitForTermination();
-      }
-      Reference.reachabilityFence(psiFile); // PsiFile must be cached to start the highlighting
-      Reference.reachabilityFence(fileNode); // perf: keep AST from gc
-      return null;
-    });
-  }
-
-  @TestOnly
-  private void waitInOtherThread(int millis, boolean canChangeDocument, @NotNull ThrowableComputable<Boolean, Throwable> runWhile) throws Throwable {
-    ThreadingAssertions.assertEventDispatchThread();
-    Disposable disposable = Disposer.newDisposable();
-    AtomicBoolean assertOnModification = new AtomicBoolean();
-    // last hope protection against PsiModificationTrackerImpl.incCounter() craziness (yes, Kotlin)
-    myProject.getMessageBus().connect(disposable).subscribe(PsiModificationTracker.TOPIC,
-      () -> {
-        if (assertOnModification.get()) {
-          throw new IllegalStateException("You must not perform PSI modifications from inside highlighting");
-        }
-      });
-    if (!canChangeDocument) {
-      myProject.getMessageBus().connect(disposable).subscribe(DAEMON_EVENT_TOPIC, new DaemonListener() {
-        @Override
-        public void daemonCancelEventOccurred(@NotNull String reason) {
-          if (assertOnModification.get()) {
-            throw new IllegalStateException("You must not cancel daemon inside highlighting test: "+reason);
-          }
-        }
-      });
-    }
-
-    long deadline = System.currentTimeMillis() + millis;
-    try {
-      Future<?> passesFuture = ApplicationManager.getApplication().executeOnPooledThread(() -> myPassExecutorService.waitFor(System.currentTimeMillis() - deadline));
-      do {
-        assertOnModification.set(true);
-        try {
-          passesFuture.get(50, TimeUnit.MILLISECONDS);
-        }
-        catch (TimeoutException ignored) {
-        }
-        finally {
-          assertOnModification.set(false); //do not assert during dispatchAllEvents() because that's where all quick fixes happen
-        }
-      } while (runWhile.compute() && System.currentTimeMillis() < deadline);
-      // it will wait for the async spawned processes
-      Future<?> externalPassFuture = ApplicationManager.getApplication().executeOnPooledThread(() -> {
-        ExternalAnnotatorManager.getInstance().waitForAllExecuted(deadline-System.currentTimeMillis(), TimeUnit.MILLISECONDS);
-        return null;
-      });
-      externalPassFuture.get(1_000+deadline-System.currentTimeMillis(), TimeUnit.MILLISECONDS);
-    }
-    catch (InterruptedException ignored) {
-    }
-    finally {
-      Disposer.dispose(disposable);
-    }
-  }
-
-  @TestOnly
-  public void prepareForTest() throws InterruptedException, ExecutionException {
-    assert ApplicationManager.getApplication().isUnitTestMode();
-    setUpdateByTimerEnabled(false);
-    waitForTermination();
-    clearReferences();
-  }
-
-  @TestOnly
-  public void cleanupAfterTest() throws InterruptedException, ExecutionException {
-    assert ApplicationManager.getApplication().isUnitTestMode();
-    if (myProject.isOpen()) {
-      prepareForTest();
-    }
-  }
-
-  @TestOnly
-  public void waitForTermination() throws InterruptedException, ExecutionException {
-    assert ApplicationManager.getApplication().isUnitTestMode();
-    AppExecutorUtil.getAppExecutorService().submit(() -> {
-      // wait outside EDT to avoid stealing work from FJP
-      myPassExecutorService.cancelAll(true, "DaemonCodeAnalyzerImpl.waitForTermination");
-    }).get();
-  }
-
   @Override
   public void settingsChanged() {
     //noinspection SpellCheckingInspection
@@ -778,6 +540,9 @@ public final class DaemonCodeAnalyzerImpl extends DaemonCodeAnalyzerEx
   @Override
   public synchronized void setUpdateByTimerEnabled(boolean value) {
     myUpdateByTimerEnabled = value;
+    if (LOG.isTraceEnabled()) {
+      LOG.debug("setUpdateByTimerEnabled(" + value + ")", new Error());
+    }
     stopProcess(value, "Update by timer change");
   }
 
@@ -796,7 +561,8 @@ public final class DaemonCodeAnalyzerImpl extends DaemonCodeAnalyzerEx
     });
   }
 
-  synchronized boolean isUpdateByTimerEnabled() {
+  @ApiStatus.Internal
+  public boolean isUpdateByTimerEnabled() {
     return myUpdateByTimerEnabled;
   }
 
@@ -860,7 +626,9 @@ public final class DaemonCodeAnalyzerImpl extends DaemonCodeAnalyzerEx
 
   @Override
   public boolean isAutohintsAvailable(@NotNull PsiFile psiFile) {
-    return isHighlightingAvailable(psiFile) && !(psiFile instanceof PsiCompiledElement);
+    return isHighlightingAvailable(psiFile)
+           && !(psiFile instanceof PsiCompiledElement)
+           && !AutoHintsSuppressor.Companion.areAutoHintsSuppressedFor(psiFile);
   }
 
   @NotNull
@@ -911,11 +679,35 @@ public final class DaemonCodeAnalyzerImpl extends DaemonCodeAnalyzerEx
     }
     assertFileFromMyProject(psiFile.getProject(), psiFile);
     Document document = psiFile.getViewProvider().getDocument();
-    CodeInsightContext context = CodeInsightContextUtil.getCodeInsightContext(psiFile);
     return document != null &&
            PsiDocumentManager.getInstance(myProject).isCommitted(document) &&
            document.getModificationStamp() == psiFile.getViewProvider().getModificationStamp() &&
-           myFileStatusMap.allDirtyScopesAreNull(document, context);
+           myFileStatusMap.allDirtyScopesAreNullFor(document);
+  }
+
+  @ApiStatus.Internal
+  @VisibleForTesting
+  @RequiresEdt
+  public boolean isAllAnalysisFinished() {
+    ThreadingAssertions.assertEventDispatchThread();
+    if (myDisposed) {
+      return false;
+    }
+    boolean updateCompleted;
+    synchronized (this) {
+      updateCompleted = myUpdateRunnableFuture.isDone();
+    }
+    List<Document> documents = ContainerUtil.mapNotNull(getSelectedEditors(), fe -> {
+      Editor editor = fe instanceof TextEditor te ? te.getEditor() : null;
+      VirtualFile virtualFile = getVirtualFile(fe);
+      return editor == null
+             ? virtualFile == null ? null : FileDocumentManager.getInstance().getCachedDocument(virtualFile)
+             : editor.getDocument();
+    });
+    return
+      !PsiDocumentManager.getInstance(myProject).hasUncommitedDocuments() &&
+      ContainerUtil.all(documents, document -> myFileStatusMap.allDirtyScopesAreNullFor(document)) &&
+      updateCompleted;
   }
 
   @Override
@@ -949,14 +741,18 @@ public final class DaemonCodeAnalyzerImpl extends DaemonCodeAnalyzerEx
     return isRunning() || !myUpdateRunnableFuture.isDone() || GeneralHighlightingPass.isRestartPending();
   }
 
-  synchronized void stopProcess(boolean toRestartAlarm, @NotNull @NonNls String reason) {
-    cancelAllUpdateProgresses(toRestartAlarm, reason);
-    boolean restart = toRestartAlarm && !myDisposed;
+  synchronized void stopProcess(boolean toRestart, @NotNull @NonNls String reason) {
+    cancelAllUpdateProgresses(toRestart, reason);
+    boolean restart = toRestart && !myDisposed;
     if (LOG.isDebugEnabled()) {
-      LOG.debug("Stopping process: toRestart:", toRestartAlarm, "; myDisposed:", myDisposed, "; reason: '", reason, "'");
+      Map<FileEditor, DaemonProgressIndicator> progresses = Map.copyOf(myUpdateProgress);
+      LOG.debug("Stopping process: toRestart:"+toRestart+(myDisposed? "; disposed" : "")+"; reason: '"+ reason +"'"+(progresses.isEmpty()?"":"; progresses:"+progresses), new Throwable());
     }
     if (restart) {
       scheduleIfNotRunning();
+    }
+    else {
+      myUpdateRunnableFuture.cancel(false);
     }
   }
 
@@ -1012,18 +808,15 @@ public final class DaemonCodeAnalyzerImpl extends DaemonCodeAnalyzerEx
     // optimization: this check is to avoid too many re-schedules in case of thousands of event spikes
     boolean isDone = myUpdateRunnableFuture.isDone();
     if (LOG.isDebugEnabled()) {
-      LOG.debug("Rescheduling highlighting: isDone: ", isDone);
+      LOG.debug("Rescheduling highlighting: isDone: ", isDone+"; delta="+Long.toHexString(getDelta()));
     }
-    if (incrementQueuedRequests()) {
-      scheduleUpdateRunnable(autoReparseDelayNanos);
+    if (incrementQueuedRequests() || isDone) {
+      scheduleUpdateRunnable();
     }
   }
 
-  private synchronized void scheduleUpdateRunnable(long delayNanos) {
+  private synchronized void scheduleUpdateRunnable() {
     Future<?> oldFuture = myUpdateRunnableFuture;
-    if (LOG.isTraceEnabled()) {
-      LOG.trace("scheduleUpdateRunnable("+TimeUnit.NANOSECONDS.toMillis(delayNanos)+"ms); oldFuture="+oldFuture+"; isDone="+oldFuture.isDone());
-    }
     Application application = ApplicationManager.getApplication();
     if (application == null || application.isDisposed()) {
       return;
@@ -1035,16 +828,37 @@ public final class DaemonCodeAnalyzerImpl extends DaemonCodeAnalyzerEx
     else {
       oldFuture.cancel(false); // do not have too many requests sit in the EdtExecutorService queue
     }
+    if (myListeners == null) {
+      run();
+    }
+    else {
+      myListeners.runAfterUpdateFileStatusQueue(this);
+    }
+  }
+
+  /**
+  * do not use: it's technical private override,
+   * to make the runnable we pass to `myListeners.runAfterUpdateFileStatusQueue(this);` (in {@link #scheduleUpdateRunnable}) stable,
+   * to allow for its canceling via {@link com.intellij.util.Alarm#cancelRequest},
+   * see {@link PsiChangeHandler#runAfterUpdateFileStatusQueue}
+  */
+  @ApiStatus.Internal
+  @Override
+  public synchronized void run() {
+    long delayNanos = myScheduledUpdateTimestamp - System.nanoTime();
+    if (LOG.isTraceEnabled()) {
+      LOG.trace("scheduleUpdateRunnable(" + TimeUnit.NANOSECONDS.toMillis(delayNanos) + "ms); oldFuture=" + myUpdateRunnableFuture + "; isDone=" + myUpdateRunnableFuture.isDone());
+    }
     myUpdateRunnableFuture = EdtExecutorService.getScheduledExecutorInstance().schedule(myUpdateRunnable, delayNanos, TimeUnit.NANOSECONDS);
   }
 
   // return true if the progress really was canceled
-  synchronized void cancelAllUpdateProgresses(boolean toRestartAlarm, @NotNull @NonNls String reason) {
-    if (myDisposed || myProject.isDisposed() || myProject.getMessageBus().isDisposed()) {
+  synchronized void cancelAllUpdateProgresses(boolean toRestart, @NotNull @NonNls String reason) {
+    if (myDisposed || myProject.isDefault() || myProject.isDisposed() || myProject.getMessageBus().isDisposed()) {
       return;
     }
     processIndicators(indicator -> {
-      cancelIndicator(indicator, toRestartAlarm, null, reason);
+      cancelIndicator(indicator, toRestart, null, reason);
       return true;
     });
     myUpdateProgress.clear();
@@ -1053,11 +867,11 @@ public final class DaemonCodeAnalyzerImpl extends DaemonCodeAnalyzerEx
   }
 
   private static void cancelIndicator(@NotNull DaemonProgressIndicator indicator,
-                                      boolean toRestartAlarm,
+                                      boolean toRestart,
                                       @Nullable Throwable cause,
                                       @NonNls @NotNull String reason) {
     if (!indicator.isCanceled()) {
-      PassExecutorService.log(indicator, null, "Cancel (reason:'", reason, "')", toRestartAlarm);
+      PassExecutorService.log(indicator, null, "Cancel (reason: '", reason, "'), restart:", toRestart);
       if (cause == null) {
         indicator.cancel(reason);
       }
@@ -1157,16 +971,16 @@ public final class DaemonCodeAnalyzerImpl extends DaemonCodeAnalyzerEx
 
   @ApiStatus.Internal
   @ApiStatus.Experimental
-  public static void waitForLazyQuickFixesUnderCaret(@NotNull PsiFile psiFile, @NotNull Editor editor) {
-    ApplicationManager.getApplication().assertIsNonDispatchThread();
+  @RequiresBackgroundThread
+  public static void waitForLazyQuickFixesUnderCaret(@NotNull Project project, @NotNull Editor editor) {
+    ThreadingAssertions.assertBackgroundThread();
     ThreadingAssertions.assertNoOwnReadAccess();
     List<HighlightInfo> relevantInfos = new ArrayList<>();
-    Project project = psiFile.getProject();
-    ReadAction.run(() -> {
+    Document document = editor.getDocument();
+    ReadAction.runBlocking(() -> {
       PsiUtilBase.assertEditorAndProjectConsistent(project, editor);
       CaretModel caretModel = editor.getCaretModel();
       int offset = caretModel.getOffset();
-      Document document = editor.getDocument();
       int logicalLine = caretModel.getLogicalPosition().line;
       processHighlights(document, project, null, 0, document.getTextLength(), info -> {
         if (!info.hasLazyQuickFixes()) {
@@ -1185,7 +999,7 @@ public final class DaemonCodeAnalyzerImpl extends DaemonCodeAnalyzerEx
       });
     });
     for (HighlightInfo info : relevantInfos) {
-      LazyQuickFixUpdater.getInstance(project).waitQuickFixesSynchronously(psiFile, editor, info);
+      LazyQuickFixUpdater.getInstance(project).waitQuickFixesSynchronously(info, project, document);
     }
   }
 
@@ -1213,7 +1027,7 @@ public final class DaemonCodeAnalyzerImpl extends DaemonCodeAnalyzerEx
       }
 
       if (!foundInfoList.isEmpty() && highestPriorityOnly) {
-        HighlightInfo foundInfo = foundInfoList.get(0);
+        HighlightInfo foundInfo = foundInfoList.getFirst();
         int compare = foundInfo.getSeverity().compareTo(info.getSeverity());
         if (compare < 0) {
           foundInfoList.clear();
@@ -1222,10 +1036,10 @@ public final class DaemonCodeAnalyzerImpl extends DaemonCodeAnalyzerEx
           return true;
         }
       }
-      if (info.getHighlighter() != null && !CodeInsightContextHighlightingUtil.acceptRangeHighlighter(highlightingContext, info.getHighlighter())) {
-        return true;
+      RangeHighlighterEx highlighter = info.getHighlighter();
+      if (highlighter == null || CodeInsightContextHighlightingUtil.acceptRangeHighlighter(highlightingContext, highlighter)) {
+        foundInfoList.add(info);
       }
-      foundInfoList.add(info);
       return true;
     }
 
@@ -1235,7 +1049,7 @@ public final class DaemonCodeAnalyzerImpl extends DaemonCodeAnalyzerEx
         return null;
       }
       if (foundInfoList.size() == 1) {
-        return foundInfoList.get(0);
+        return foundInfoList.getFirst();
       }
       foundInfoList.sort(Comparator.comparing(HighlightInfo::getSeverity).reversed());
       return HighlightInfo.createComposite(foundInfoList, myProject);
@@ -1323,6 +1137,9 @@ public final class DaemonCodeAnalyzerImpl extends DaemonCodeAnalyzerEx
     }
     @Override
     public void run() {
+      ThreadingAssertions.assertEventDispatchThread();
+      LOG.trace("UpdateRunnable.run()");
+
       DaemonCodeAnalyzerImpl analyzer = myAnalyzer;
       if (analyzer == null) {
         return; // disposed
@@ -1331,7 +1148,7 @@ public final class DaemonCodeAnalyzerImpl extends DaemonCodeAnalyzerEx
       // take a number of queued requests to update and pretend we execute them all (they are all the same, so one is enough)
       long requestDelta = analyzer.getDelta();
       try {
-        if (!project.isDefault() && project.isInitialized() && !LightEdit.owns(project)) {
+        if (!project.isDefault() && project.isInitialized() && !isBackgroundActivitiesSuppressedSync(project)) {
           String result = analyzer.runUpdate();
           if (LOG.isDebugEnabled()) {
             LOG.debug("runUpdate result: " + result+"; requestDelta:"+requestDelta);
@@ -1344,20 +1161,24 @@ public final class DaemonCodeAnalyzerImpl extends DaemonCodeAnalyzerEx
           if (LOG.isDebugEnabled()) {
             LOG.debug("runUpdate newDelta="+newDelta);
           }
-          analyzer.scheduleUpdateRunnable(0);
+          synchronized (analyzer) {
+            analyzer.myScheduledUpdateTimestamp = System.nanoTime();
+            analyzer.scheduleUpdateRunnable();
+          }
         }
       }
     }
   }
 
   // return update outcome for debug
+  @RequiresEdt
   private @NotNull @NonNls String runUpdate() {
     ThreadingAssertions.assertEventDispatchThread();
     synchronized (this) {
       long actualDelay = myScheduledUpdateTimestamp - System.nanoTime();
       if (actualDelay > 0) {
         // started too soon (there must've been some typings after we'd scheduled this; need to re-schedule)
-        scheduleUpdateRunnable(actualDelay);
+        scheduleUpdateRunnable();
         return "wasn't run because called too soon: rescheduled in "+TimeUnit.NANOSECONDS.toMillis(actualDelay)+"ms";
       }
     }
@@ -1386,17 +1207,16 @@ public final class DaemonCodeAnalyzerImpl extends DaemonCodeAnalyzerEx
     if (documentManager.hasEventSystemEnabledUncommittedDocuments()) {
       // restart when everything committed
       documentManager.performLaterWhenAllCommitted(() -> {
-        synchronized (this) {
-          if (LOG.isDebugEnabled()) {
-            LOG.debug("Rescheduled after commit");
-          }
-          scheduleIfNotRunning();
+        if (LOG.isDebugEnabled()) {
+          LOG.debug("Rescheduled after commit");
         }
+        scheduleIfNotRunning();
       });
       return "wasn't run because uncommitted docs found: "+Arrays.toString(documentManager.getUncommittedDocuments())+"; delayed until commit";
     }
 
     boolean submitted = false;
+    boolean shouldRestart = true;
     ProcessCanceledException pce = null;
     // have to store created indicators because myUpdateProgress removes the canceled indicator immediately
     List<ProgressIndicator> createdIndicators = new ArrayList<>();
@@ -1407,6 +1227,17 @@ public final class DaemonCodeAnalyzerImpl extends DaemonCodeAnalyzerEx
         LOG.debug("runUpdate activeEditors: ("+activeEditors.size()+"): "+ContainerUtil.map(activeEditors, e->e+"("+e.getClass()+") for file "+e.getFile()));
       }
       for (FileEditor fileEditor : activeEditors) {
+        DaemonProgressIndicator existingProgress;
+        synchronized (this) {
+          existingProgress = myUpdateProgress.get(fileEditor);
+          if (existingProgress != null && !existingProgress.isCanceled()) {
+            if (PassExecutorService.LOG.isDebugEnabled()) {
+              PassExecutorService.log(existingProgress, null, "found already running progress, will continue running it ", fileEditor);
+            }
+            submitted = true; // there's existing running progress already; since nobody's canceled it, it can continue. Let's pretend we submitted stuff successfully
+            continue;
+          }
+        }
         if (fileEditor instanceof TextEditor textEditor && !textEditor.isEditorLoaded()) {
           // make sure the highlighting is restarted when the editor is finally loaded, because otherwise some crazy things happen,
           // for instance, `FileEditor.getBackgroundHighlighter()` returning null, essentially stopping highlighting silently
@@ -1414,22 +1245,23 @@ public final class DaemonCodeAnalyzerImpl extends DaemonCodeAnalyzerEx
             PassExecutorService.log(null, null, "runUpdate for ", fileEditor, " rescheduled because the editor was not loaded yet");
           }
           result.add("didn't submit " + fileEditor + " because it's not loaded");
-          // AsyncEditorLoader will restart
+          // do not restart immediately, because it will be futile; AsyncEditorLoader will restart when the editor is loaded
+          shouldRestart = false;
         }
         else {
           VirtualFile virtualFile = getVirtualFile(fileEditor);
-          HighlightingSession session;
+          ProgressIndicator progressIndicator;
           if (virtualFile == null || !virtualFile.isValid()) {
-            session = null;
+            progressIndicator = null;
           }
           else {
-            session = queuePassesCreation(fileEditor, virtualFile, ArrayUtil.EMPTY_INT_ARRAY, mainDocumentPasses);
+            progressIndicator = queuePassesCreation(fileEditor, virtualFile, ArrayUtil.EMPTY_INT_ARRAY, mainDocumentPasses);
           }
-          submitted |= session != null;
-          if (session != null) {
-            createdIndicators.add(session.getProgressIndicator());
+          submitted |= progressIndicator != null;
+          if (progressIndicator != null) {
+            createdIndicators.add(progressIndicator);
           }
-          result.add("submit fileEditor: "+fileEditor+" submitted="+submitted+(session==null? "" : " under "+session.getProgressIndicator()));
+          result.add("submit fileEditor: "+fileEditor+" submitted="+submitted+(progressIndicator==null? "" : " under "+progressIndicator));
         }
       }
       if (LOG.isDebugEnabled()) {
@@ -1442,14 +1274,18 @@ public final class DaemonCodeAnalyzerImpl extends DaemonCodeAnalyzerEx
     }
     finally {
       boolean wasCanceledDuringSubmit = ContainerUtil.exists(createdIndicators, p -> p.isCanceled());
-      if (!submitted || wasCanceledDuringSubmit) {
+      if ((!submitted || wasCanceledDuringSubmit) && shouldRestart) {
         // happens e.g., when we are trying to open a directory and there's a FileEditor supporting this
         // invokeLater is required because we can't stop daemon from inside UpdateRunnable, since its future hasn't been scheduled yet
         // or when PCE happened in queuePassesCreation
         String reason = "Couldn't create session for " + activeEditors
                         + (pce == null ? "" : "; PCE was thrown: " + pce)
                         + (wasCanceledDuringSubmit ? "; was canceled during queuePassesCreation(): "+createdIndicators : "");
-        ApplicationManager.getApplication().invokeLater(() -> stopProcess(false, reason), __->myDisposed);
+        ApplicationManager.getApplication().invokeLater(() -> {
+          if (!isRunningOrPending()) {
+            stopProcess(true, reason);
+          }
+        }, _->myDisposed);
       }
     }
     return StringUtil.join(result, "; ");
@@ -1466,12 +1302,13 @@ public final class DaemonCodeAnalyzerImpl extends DaemonCodeAnalyzerEx
    * return null if the session wasn't created because highlighter/document/psiFile wasn't found or
    * throw PCE if it really wasn't an appropriate moment to ask
    */
-  private HighlightingSession queuePassesCreation(@NotNull FileEditor fileEditor,
-                                                  @NotNull VirtualFile virtualFile,
-                                                  int @NotNull [] passesToIgnore,
-                                                  @NotNull Map<? super Pair<Document, Class<? extends ProgressableTextEditorHighlightingPass>>, ProgressableTextEditorHighlightingPass> mainDocumentPasses) {
+  @RequiresEdt
+  ProgressIndicator queuePassesCreation(@NotNull FileEditor fileEditor,
+                                        @NotNull VirtualFile virtualFile,
+                                        int @NotNull [] passesToIgnore,
+                                        @NotNull Map<? super Pair<Document, Class<? extends ProgressableTextEditorHighlightingPass>>, ProgressableTextEditorHighlightingPass> mainDocumentPasses) {
     ThreadingAssertions.assertEventDispatchThread();
-    BackgroundEditorHighlighter highlighter;
+    BackgroundEditorHighlighter backgroundHighlighter;
 
     // since we are running on EDT under write-intent lock, write action can be either absent or pending (if it was invoked on a background thread)
     // in this case, the progress indicator needs to be canceled.
@@ -1481,26 +1318,26 @@ public final class DaemonCodeAnalyzerImpl extends DaemonCodeAnalyzerEx
     }
 
     try (AccessToken ignored = ClientId.withExplicitClientId(ClientFileEditorManager.getClientId(fileEditor))) {
-      highlighter = fileEditor.getBackgroundHighlighter();
+      backgroundHighlighter = fileEditor.getBackgroundHighlighter();
     }
     TextEditor textEditor = fileEditor instanceof TextEditor t ? t : null;
     Editor editor = textEditor == null ? null : textEditor.getEditor();
-    if (highlighter == null) {
+    if (backgroundHighlighter == null) {
       if (PassExecutorService.LOG.isDebugEnabled()) {
-        PassExecutorService.log(null, null, "couldn't highlight", virtualFile, "because getBackgroundHighlighter() returned null. fileEditor=",
-          fileEditor, fileEditor.getClass(),
-          textEditor == null ? "editor is null" : "editor loaded:" + textEditor.isEditorLoaded()
+        PassExecutorService.log(null, null, "couldn't highlight " + virtualFile + " because getBackgroundHighlighter() returned null. fileEditor="+
+          fileEditor+"("+ fileEditor.getClass()+")"+ (textEditor == null ? "editor is null" : "editor loaded:" + textEditor.isEditorLoaded())
         );
       }
       return null;
     }
-    DaemonProgressIndicator progress = createUpdateProgress(fileEditor);
-    // pre-create HighlightingSession in EDT to make visible range available in a background thread
     if (editor != null && editor.getDocument().isInBulkUpdate()) {
       // avoid restarts until the bulk mode is finished and daemon restarted in DaemonListeners
-      stopProcess(false, editor.getDocument() +" is in bulk state");
-      throw new ProcessCanceledException();
+      if (PassExecutorService.LOG.isDebugEnabled()) {
+        PassExecutorService.log(null, null, editor.getDocument() +" is in bulk state");
+      }
+      return null;
     }
+    DaemonProgressIndicator progress;
     HighlightingSessionImpl session;
     try (AccessToken ignored = ClientId.withExplicitClientId(ClientFileEditorManager.getClientId(fileEditor))) {
       Document document = editor == null ? FileDocumentManager.getInstance().getCachedDocument(virtualFile) : editor.getDocument();
@@ -1510,25 +1347,24 @@ public final class DaemonCodeAnalyzerImpl extends DaemonCodeAnalyzerEx
       PsiFile psiFileToSubmit = TextEditorBackgroundHighlighter.getCachedFileToHighlight(myProject, virtualFile, context);
       if (psiFileToSubmit == null || document == null) {
         String reason = document == null ? "queuePassesCreation: couldn't submit" +  virtualFile + " because document is null: fileEditor="+ fileEditor+" ("+ fileEditor.getClass()+")"
-                        : "queuePassesCreation: psiFile is null for "+virtualFile;
+                        : "queuePassesCreation: psiFile is null for "+virtualFile+"; context:"+context+"; cachedContext:"+cachedContext;
         if (PassExecutorService.LOG.isDebugEnabled()) {
-          PassExecutorService.log(progress, null, reason);
+          PassExecutorService.log(null, null, reason);
         }
-        ForkJoinPool.commonPool().execute(() -> {
+        renewInBackgroundAndRestart.cancel(false);
+        renewInBackgroundAndRestart = ForkJoinPool.commonPool().submit(() -> {
           ApplicationManagerEx.getApplicationEx().tryRunReadAction(() -> {
             if (!myProject.isDisposed()) {
               // refresh the current file and cache it (in background) so that FileDocumentManager.getCachedDocument above could retrieve it later
               Document renewedDocument = editor == null ? FileDocumentManager.getInstance().getDocument(virtualFile) : editor.getDocument();
-              CodeInsightContext renewedContext = editor != null
-                                                  ? EditorContextManager.getEditorContext(editor, myProject)
-                                                  : CodeInsightContexts.anyContext();
               if (renewedDocument != null) {
+                CodeInsightContext renewedContext = editor == null ? CodeInsightContexts.anyContext() : EditorContextManager.getEditorContext(editor, myProject);
                 PsiFile psiFile = TextEditorBackgroundHighlighter.renewFile(myProject, renewedDocument, renewedContext);
-                if (psiFile != null) {
+                if (psiFile != null && !isRunning()) {
                   // if for some reason the TextEditorBackgroundHighlighter.getCachedFileToHighlight() returned null,
-                  // but the full refresh and get PSI returned not-null PSI, restart the daemon
+                  // but the full refresh and get PSI returned not-null PSI, restart the daemon (if not already restarted)
                   // (but only in this case; all other cases e.g., the file out of project roots should not lead to endless restarts)
-                  stopAndRestartMyProcess(progress, null, reason);
+                  stopProcess(true, reason);
                 }
               }
             }
@@ -1536,16 +1372,18 @@ public final class DaemonCodeAnalyzerImpl extends DaemonCodeAnalyzerEx
         });
         return null;
       }
-      session = HighlightingSessionImpl.createHighlightingSession(psiFileToSubmit, context, editor, scheme, progress, daemonCancelEventCount);
+      progress = createUpdateProgress(fileEditor);
+      // pre-create HighlightingSession in EDT to make visible range available in a background thread
+      session = HighlightingSessionImpl.createHighlightingSession(psiFileToSubmit, editor, scheme, progress, daemonCancelEventCount);
       JobLauncher.getInstance().submitToJobThread(ThreadContext.captureThreadContext(Context.current().wrap(() ->
-            submitInBackground(fileEditor, document, virtualFile, psiFileToSubmit, highlighter, passesToIgnore, progress, session, mainDocumentPasses))),
+            submitInBackground(fileEditor, document, virtualFile, psiFileToSubmit, backgroundHighlighter, passesToIgnore, progress, session, mainDocumentPasses))),
             // manifest exceptions in EDT to avoid storing them in the Future and abandoning
             task -> ApplicationManager.getApplication().invokeLater(() -> ConcurrencyUtil.manifestExceptionsIn(task)));
     }
     if (PassExecutorService.LOG.isDebugEnabled()) {
       PassExecutorService.log(progress, null, "queuePassesCreation completed. session=", session, "; fileStatusMap:",  (editor == null ? null : myFileStatusMap.toString(editor.getDocument())));
     }
-    return session;
+    return progress;
   }
 
   @RequiresBackgroundThread
@@ -1556,18 +1394,32 @@ public final class DaemonCodeAnalyzerImpl extends DaemonCodeAnalyzerEx
                                   @NotNull BackgroundEditorHighlighter backgroundEditorHighlighter,
                                   int @NotNull [] passesToIgnore,
                                   @NotNull DaemonProgressIndicator progress,
-                                  @NotNull HighlightingSessionImpl session,
+                                  @NotNull HighlightingSessionImpl initialSession,
                                   @NotNull Map<? super Pair<Document, Class<? extends ProgressableTextEditorHighlightingPass>>, ProgressableTextEditorHighlightingPass> mainDocumentPasses) {
-    ApplicationManager.getApplication().assertIsNonDispatchThread();
+    ThreadingAssertions.assertBackgroundThread();
+    if (LOG.isTraceEnabled()) {
+      LOG.trace("submitInBackground: " + virtualFile + "; viewProvider.hashCode()={"+psiFile.getViewProvider().hashCode()+"}");
+    }
     try {
       ProgressManager.getInstance().executeProcessUnderProgress(Context.current().wrap(() -> {
-        HighlightingPass[] passes = ReadAction.compute(() -> {
+        HighlightingPass[] passes = ReadAction.computeBlocking(() -> {
+          CodeInsightContext context = fileEditor instanceof TextEditor te ?
+                                       EditorContextManager.getEditorContext(te.getEditor(), myProject) :
+                                       CodeInsightContextManager.getInstance(myProject).getCodeInsightContext(psiFile.getViewProvider());
+          PsiFile renewedPsiFile = TextEditorBackgroundHighlighter.renewFile(myProject, document, context);
+          if (renewedPsiFile == null) {
+            return HighlightingPass.EMPTY_ARRAY;
+          }
+          HighlightingSessionImpl resultSession = renewedPsiFile == psiFile ? initialSession : initialSession.recreateWithRenewedPsiFile(renewedPsiFile, progress);
           if (progress.isCanceled() ||
               myProject.isDisposed() ||
               getPsiDocumentManager().hasEventSystemEnabledUncommittedDocuments() ||
               !fileEditor.isValid() ||
               !psiFile.isValid()) {
-            String reason = (myProject.isDisposed() ? "project isDisposed" : "")
+            Throwable cancelTrace = progress.getCancellationTrace();
+            String reason =
+              (progress.isCanceled() ? "indicator canceled during submitInBackground(): "+progress +"; "+(cancelTrace == null ? progress.getTraceableDisposableStackTrace() : ExceptionUtil.getThrowableText(cancelTrace)) : "")
+              + (myProject.isDisposed() ? "project isDisposed" : "")
               + (getPsiDocumentManager().hasEventSystemEnabledUncommittedDocuments() ? " hasUncommitted documents: " + Arrays.toString(getPsiDocumentManager().getUncommittedDocuments()) : "")
               + (fileEditor.isValid() ? "" : " file editor "+fileEditor+" is invalid")
               + (psiFile.isValid() ? "" : " psiFile "+psiFile+" is invalid")
@@ -1575,13 +1427,13 @@ public final class DaemonCodeAnalyzerImpl extends DaemonCodeAnalyzerEx
             stopAndRestartMyProcess(progress, null, reason);
             return HighlightingPass.EMPTY_ARRAY;
           }
-          if (session.isCanceled()) {
+          if (resultSession.isCanceled()) {
             // editor or something was changed between commit document notification in EDT and this point in the FJP thread
-            stopAndRestartMyProcess(progress, null, session + " is canceled");
+            stopAndRestartMyProcess(progress, null, resultSession + " is canceled");
             throw new ProcessCanceledException();
           }
           myListeners.flushUpdateFileStatusQueue(); // finish updating FileStatusMap on PSI changes
-          session.additionalSetupFromBackground(psiFile);
+          resultSession.additionalSetupFromBackground(psiFile);
           try (AccessToken ignored = ClientId.withExplicitClientId(ClientFileEditorManager.getClientId(fileEditor))) {
             HighlightingPass[] r = backgroundEditorHighlighter.createPassesForEditor();
             if (passesToIgnore.length != 0) {
@@ -1621,8 +1473,9 @@ public final class DaemonCodeAnalyzerImpl extends DaemonCodeAnalyzerEx
         }
         // synchronize on TextEditorHighlightingPassRegistrarImpl instance to avoid concurrent modification of TextEditorHighlightingPassRegistrarImpl.nextAvailableId
         synchronized (TextEditorHighlightingPassRegistrar.getInstance(myProject)) {
-          myPassExecutorService.submitPasses(document, session.getCodeInsightContext(), virtualFile, psiFile, fileEditor, passes, progress);
+          myPassExecutorService.submitPasses(document, virtualFile, psiFile, fileEditor, passes, progress);
         }
+        //clearObsoleteRangeHighlightersManagedToSneakInAllTheSame(document, myProject);
         ProgressManager.checkCanceled();
       }), progress);
     }
@@ -1636,10 +1489,36 @@ public final class DaemonCodeAnalyzerImpl extends DaemonCodeAnalyzerEx
       stopAndRestartMyProcess(progress, e, reason);
       throw e;
     }
+    // do not let gc to collect PsiFile causing TextEditorBackgroundHighlighter.renewFile to return new instance,
+    // and thus HighlightingSessionImpl.getFromCurrentIndicator(psiFile) returning null
+    Reference.reachabilityFence(psiFile);
+  }
+
+  @RequiresBackgroundThread
+  private static void clearObsoleteRangeHighlightersManagedToSneakInAllTheSame(@NotNull Document document, @NotNull Project project) {
+    // this (rather expensive) processing can be done in BGT at leisure pace because RangeHighlighter has a fixed state transition: null HInfo -> valid HInfo -> invalid HInfo(?)
+    // after HighlightInfo.fromRangeHighlighter(h) returned invalid info (WTF though? it should not ever), it will stay the same forever because recyclers ignore these RangeHighlighters (see check in ManagedHighlighterRecycler.recycleHighlighter)
+    MarkupModel markupModel = DocumentMarkupModel.forDocument(document, project, true);
+    List<RangeHighlighter> invalid = ContainerUtil.filter(markupModel.getAllHighlighters(), h -> {
+      HighlightInfo info = HighlightInfo.fromRangeHighlighter(h);
+      if (info == null || !h.isValid()) {
+        return false;
+      }
+      RangeHighlighterEx fromInfo = info.getHighlighter();
+      // found strange highlighter that have attached HighlightInfo but it's the wrong one
+      return fromInfo != null && fromInfo != h;
+    });
+
+    for (RangeHighlighter highlighter : invalid) {
+      if (LOG.isTraceEnabled()) {
+        LOG.trace("clearObsoleteRangeHighlightersManagedToSneakInAllTheSame(" + document + "): " + highlighter);
+      }
+      highlighter.dispose();
+    }
   }
 
   // return true if a heavy operation is running
-  private static boolean heavyProcessIsRunning() {
+  static boolean heavyProcessIsRunning() {
     if (DumbServiceImpl.ALWAYS_SMART) {
       return false;
     }
@@ -1657,10 +1536,10 @@ public final class DaemonCodeAnalyzerImpl extends DaemonCodeAnalyzerEx
     }
     DaemonProgressIndicator oldProgress = myUpdateProgress.put(fileEditor, progress);
     if (oldProgress != null && !oldProgress.isCanceled()) {
-      oldProgress.cancel(new Throwable(), "Old indicator: " + oldProgress);
+      cancelIndicator(oldProgress, true, new Throwable(), "daemon restarted for existing indicator: " + fileEditor);
     }
     if (PassExecutorService.LOG.isDebugEnabled()) {
-      PassExecutorService.log(progress, null, "createUpdateProgress(" + fileEditor + "); oldProgress=" + oldProgress);
+      PassExecutorService.log(progress, null, "createUpdateProgress(", fileEditor, "); oldProgress=" + oldProgress);
     }
     myDaemonListenerPublisher.daemonStarting(List.of(fileEditor));
     return progress;
@@ -1702,6 +1581,7 @@ public final class DaemonCodeAnalyzerImpl extends DaemonCodeAnalyzerEx
     return Map.copyOf(myUpdateProgress);
   }
 
+  @RequiresEdt
   private @NotNull Collection<? extends FileEditor> getSelectedEditors() {
     ThreadingAssertions.assertEventDispatchThread();
     // editors in modal context
@@ -1727,8 +1607,9 @@ public final class DaemonCodeAnalyzerImpl extends DaemonCodeAnalyzerEx
     }
 
     // tests usually care about just one explicitly configured editor
-    if (!ApplicationManager.getApplication().isUnitTestMode()) {
-      for (FileEditor tabEditor : getFileEditorManager().getSelectedEditorWithRemotes()) {
+    if (!ApplicationManager.getApplication().isUnitTestMode() || activeTextEditors.isEmpty()) {
+      Collection<FileEditor> selectedEditors = getFileEditorManager().getSelectedEditorWithRemotes();
+      for (FileEditor tabEditor : selectedEditors) {
         if (!isValidEditor(tabEditor)) continue;
 
         if (tabEditor instanceof FileEditorWithTextEditors delegate) {
@@ -1789,8 +1670,10 @@ public final class DaemonCodeAnalyzerImpl extends DaemonCodeAnalyzerEx
    *             Injected fragments {@link InjectedGeneralHighlightingPass} highlighting and Inspections run after
    *             completion of Syntax analysis {@link GeneralHighlightingPass}.
    *             if {@code false} (default behavior) code insight passes are running in parallel
+   * @deprecated do not use, because it could slow down highlighting
    */
   @ApiStatus.Internal
+  @Deprecated
   public void serializeCodeInsightPasses(boolean flag) {
     ThreadingAssertions.assertEventDispatchThread();
     setUpdateByTimerEnabled(false);
@@ -1813,11 +1696,6 @@ public final class DaemonCodeAnalyzerImpl extends DaemonCodeAnalyzerEx
   public boolean isRestartToCompleteEssentialHighlightingRequested() {
     return completeEssentialHighlightingRequested;
   }
-  @TestOnly
-  public void waitForUpdateFileStatusBackgroundQueueInTests() {
-    assert ApplicationManager.getApplication().isUnitTestMode();
-    myListeners.waitForUpdateFileStatusQueue();
-  }
 
   @Override
   @RequiresBackgroundThread
@@ -1832,7 +1710,21 @@ public final class DaemonCodeAnalyzerImpl extends DaemonCodeAnalyzerEx
       ApplicationManager.getApplication().invokeLater(() -> {
         DaemonProgressIndicator sessionIndicator = new DaemonProgressIndicator();
         ProgressManager.getInstance().executeProcessUnderProgress(() -> showAutoImportPass.doApplyInformationToEditor(), sessionIndicator);
-      }, __ -> editor.isDisposed() || psiFile.getProject().isDisposed());
+      }, _ -> editor.isDisposed() || psiFile.getProject().isDisposed());
     }
+  }
+
+  @Override
+  public HighlightingSession getHighlightSessionFromCurrentIndicator(@NotNull PsiFile psiFile) {
+    return HighlightingSessionImpl.getFromCurrentIndicator(psiFile);
+  }
+
+  @Override
+  public void runInsideAdditionalHighlightingSession(@NotNull PsiFile psiFile,
+                                                     @Nullable EditorColorsScheme editorColorsScheme,
+                                                     @NotNull ProperTextRange visibleRange,
+                                                     boolean canChangeFileSilently,
+                                                     @NotNull Consumer<? super @NotNull HighlightingSession> runnable) {
+    HighlightingSessionImpl.runInsideAdditionalHighlightingSession(psiFile, editorColorsScheme, visibleRange, canChangeFileSilently, runnable);
   }
 }
