@@ -1,4 +1,4 @@
-// Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
+// Copyright 2000-2026 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.openapi.vfs.newvfs;
 
 import com.intellij.openapi.application.ApplicationManager;
@@ -9,16 +9,26 @@ import com.intellij.openapi.progress.Cancellation;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.project.ProjectManager;
 import com.intellij.openapi.project.ex.ProjectManagerEx;
-import com.intellij.openapi.roots.ProjectFileIndex;
 import com.intellij.openapi.util.Pair;
 import com.intellij.openapi.util.SystemInfoRt;
 import com.intellij.openapi.util.io.FileAttributes;
 import com.intellij.openapi.util.io.FileUtilRt;
 import com.intellij.openapi.util.registry.Registry;
 import com.intellij.openapi.util.text.StringUtilRt;
-import com.intellij.openapi.vfs.*;
-import com.intellij.openapi.vfs.impl.local.LocalFileSystemImpl;
-import com.intellij.openapi.vfs.newvfs.events.*;
+import com.intellij.openapi.vfs.DiskQueryRelay;
+import com.intellij.openapi.vfs.InvalidVirtualFileAccessException;
+import com.intellij.openapi.vfs.LocalFileSystem;
+import com.intellij.openapi.vfs.VFileProperty;
+import com.intellij.openapi.vfs.VfsUtil;
+import com.intellij.openapi.vfs.VirtualFile;
+import com.intellij.openapi.vfs.VirtualFileManager;
+import com.intellij.openapi.vfs.VirtualFileSystem;
+import com.intellij.openapi.vfs.newvfs.events.ChildInfo;
+import com.intellij.openapi.vfs.newvfs.events.VFileContentChangeEvent;
+import com.intellij.openapi.vfs.newvfs.events.VFileCreateEvent;
+import com.intellij.openapi.vfs.newvfs.events.VFileDeleteEvent;
+import com.intellij.openapi.vfs.newvfs.events.VFileEvent;
+import com.intellij.openapi.vfs.newvfs.events.VFilePropertyChangeEvent;
 import com.intellij.openapi.vfs.newvfs.impl.FakeVirtualFile;
 import com.intellij.openapi.vfs.newvfs.impl.VirtualDirectoryImpl;
 import com.intellij.openapi.vfs.newvfs.impl.VirtualFileSystemEntry;
@@ -27,12 +37,23 @@ import com.intellij.openapi.vfs.newvfs.persistent.BatchingFileSystem;
 import com.intellij.openapi.vfs.newvfs.persistent.FSRecordsImpl;
 import com.intellij.openapi.vfs.newvfs.persistent.PersistentFS;
 import com.intellij.openapi.vfs.newvfs.persistent.PersistentFSImpl;
+import com.intellij.platform.backend.workspace.WorkspaceModel;
+import com.intellij.platform.workspace.storage.impl.url.VirtualFileUrlManagerImpl;
 import com.intellij.util.MathUtil;
 import com.intellij.util.SmartList;
 import com.intellij.util.TimeoutUtil;
+import com.intellij.util.ThreeState;
+import com.intellij.util.concurrency.AppScheduledExecutorService;
 import com.intellij.util.concurrency.Semaphore;
 import com.intellij.util.containers.ContainerUtil;
 import com.intellij.util.containers.Stack;
+import com.intellij.util.containers.TreeNodeProcessingResult;
+import com.intellij.util.io.URLUtil;
+import com.intellij.workspaceModel.core.fileIndex.WorkspaceFileIndex;
+import com.intellij.workspaceModel.core.fileIndex.WorkspaceFileSet;
+import com.intellij.workspaceModel.core.fileIndex.WorkspaceFileSetWithCustomData;
+import com.intellij.workspaceModel.core.fileIndex.impl.WorkspaceFileIndexEx;
+import com.intellij.workspaceModel.ide.VirtualFileUrlManagerUtil;
 import it.unimi.dsi.fastutil.objects.ObjectOpenCustomHashSet;
 import kotlinx.coroutines.Dispatchers;
 import kotlinx.coroutines.ExecutorsKt;
@@ -41,15 +62,34 @@ import org.jetbrains.annotations.Nullable;
 import org.jetbrains.annotations.Unmodifiable;
 
 import java.io.IOException;
-import java.nio.file.*;
+import java.nio.file.FileVisitResult;
+import java.nio.file.FileVisitor;
+import java.nio.file.Files;
+import java.nio.file.InvalidPathException;
+import java.nio.file.LinkOption;
+import java.nio.file.Path;
+import java.nio.file.SimpleFileVisitor;
 import java.nio.file.attribute.BasicFileAttributes;
-import java.util.*;
-import java.util.concurrent.*;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collection;
+import java.util.HashSet;
+import java.util.LinkedHashMap;
+import java.util.LinkedHashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Queue;
+import java.util.Set;
+import java.util.concurrent.CancellationException;
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.ExecutionException;
+import java.util.concurrent.Executor;
+import java.util.concurrent.LinkedBlockingQueue;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicLong;
 import java.util.function.Consumer;
 
-import static com.intellij.util.SystemProperties.getBooleanProperty;
 import static com.intellij.util.containers.CollectionFactory.createFilePathMap;
 import static com.intellij.util.containers.CollectionFactory.createFilePathSet;
 import static com.intellij.util.containers.FastUtilHashingStrategies.getCaseInsensitiveStringStrategy;
@@ -63,18 +103,14 @@ final class RefreshWorker {
     1, Runtime.getRuntime().availableProcessors()
   );
 
-  private static final Executor executor = ExecutorsKt.asExecutor(
-    Dispatchers.getIO().limitedParallelism(PARALLELISM, "RefreshWorkerDispatcher")
+  private static final Executor rawExecutor = ExecutorsKt.asExecutor(
+      Dispatchers.getIO().limitedParallelism(PARALLELISM, "RefreshWorkerDispatcher")
   );
 
-  /**
-   * Use legacy {@link LocalFileSystemImpl#listWithCaching(VirtualFile, Set)} method instead of new, more generic
-   * {@link BatchingFileSystem#listWithAttributes(VirtualFile, Set)}
-   * Temporary flag, to investigate performance issues linked to the transition to {@link BatchingFileSystem},
-   * remove afterward.
-   */
-  private static final boolean USE_LEGACY_LOCAL_FS_METHOD = getBooleanProperty("vfs.RefreshWorker.USE_LEGACY_LOCAL_FS_METHOD", false);
-
+  /** Wraps {@link #rawExecutor} to propagate IntelliJ thread context to worker threads. */
+  private static final Executor executor = command -> rawExecutor.execute(
+    AppScheduledExecutorService.capturePropagationAndCancellationContext(command)
+  );
 
   private static final Object REQUESTOR = VFileEvent.REFRESH_REQUESTOR;
 
@@ -177,7 +213,7 @@ final class RefreshWorker {
     }
   }
 
-  private void processQueue(List<VFileEvent> events) throws RefreshCancelledException {
+  private void processQueue(/*OutParam*/ List<VFileEvent> events) throws RefreshCancelledException {
     nextDir:
     while (!semaphore.isUp()) {
       var file = refreshQueue.poll();
@@ -187,6 +223,16 @@ final class RefreshWorker {
       }
 
       var fs = file.getFileSystem();
+
+      if (fs instanceof AsyncableFileSystem afs) {
+        //can't refresh file that has async ops still in flight => flush them:
+        try {
+          afs.fsync(file);
+        }
+        catch (IOException e) {
+          continue;
+        }
+      }
 
       try {
         if (roots.contains(file)) {
@@ -229,9 +275,6 @@ final class RefreshWorker {
             events.subList(mark, events.size()).clear();
             continue nextDir;
           }
-          finally {
-            clearFsCache(fs);
-          }
         }
         queryItemsProcessed.incrementAndGet();
 
@@ -247,7 +290,7 @@ final class RefreshWorker {
 
   private boolean fullDirRefresh(List<VFileEvent> events, NewVirtualFileSystem fs, VirtualDirectoryImpl dir) {
     var t = System.nanoTime();
-    Pair<VirtualFile[], List<String>> snapshot = ReadAction.compute(() -> {
+    Pair<VirtualFile[], List<String>> snapshot = ReadAction.computeBlocking(() -> {
       VirtualFile[] children = dir.getChildren();
       return new Pair<>(children, getNames(children));
     });
@@ -314,7 +357,6 @@ final class RefreshWorker {
       }
     }
 
-    clearFsCache(fs);
     checkCancelled(dir);
     if (isDirectoryChanged(dir, vfsChildren, vfsNames)) {
       return false;
@@ -336,7 +378,7 @@ final class RefreshWorker {
 
   private boolean isDirectoryChanged(VirtualDirectoryImpl dir, VirtualFile[] children, List<String> names) {
     var t = System.nanoTime();
-    var changed = ReadAction.compute(() -> {
+    var changed = ReadAction.computeBlocking(() -> {
       VirtualFile[] currentChildren = dir.getChildren();
       return !Arrays.equals(children, currentChildren) || !names.equals(getNames(currentChildren));
     });
@@ -346,7 +388,7 @@ final class RefreshWorker {
 
   private boolean partialDirRefresh(List<VFileEvent> events, NewVirtualFileSystem fs, VirtualDirectoryImpl dir) {
     var t = System.nanoTime();
-    Pair<List<VirtualFile>, List<String>> snapshot = ReadAction.compute(
+    Pair<List<VirtualFile>, List<String>> snapshot = ReadAction.computeBlocking(
       () -> new Pair<>(dir.getCachedChildren(), dir.getSuspiciousNames())
     );
     vfsTime.addAndGet(System.nanoTime() - t);
@@ -400,7 +442,6 @@ final class RefreshWorker {
       existingMap.add(new Pair<>(child, getAttributes(fs, childrenWithAttributes, child)));
     }
 
-    clearFsCache(fs);
     checkCancelled(dir);
     if (isDirectoryChanged(dir, cached, wanted)) {
       return false;
@@ -416,7 +457,7 @@ final class RefreshWorker {
 
   private boolean isDirectoryChanged(VirtualDirectoryImpl dir, List<VirtualFile> cached, List<String> wanted) {
     var t = System.nanoTime();
-    var changed = ReadAction.compute(() -> !cached.equals(dir.getCachedChildren()) || !wanted.equals(dir.getSuspiciousNames()));
+    var changed = ReadAction.computeBlocking(() -> !cached.equals(dir.getCachedChildren()) || !wanted.equals(dir.getSuspiciousNames()));
     vfsTime.addAndGet(System.nanoTime() - t);
     return changed;
   }
@@ -452,12 +493,7 @@ final class RefreshWorker {
     if (dirList != null) {
       attributes = dirList.get(child.getName());
     }
-    if (
-      attributes == null && (
-        (USE_LEGACY_LOCAL_FS_METHOD && fs instanceof LocalFileSystemImpl)
-        || !(fs instanceof BatchingFileSystem)
-      )
-    ) {
+    if (attributes == null && !(fs instanceof BatchingFileSystem)) {
       var t = System.nanoTime();
       attributes = computeAttributesForFile(fs, child);
       ioTime.addAndGet(System.nanoTime() - t);
@@ -481,19 +517,7 @@ final class RefreshWorker {
   private static Map<String, FileAttributes> computeAllChildrenAttributes(@NotNull BatchingFileSystem fs,
                                                                           @NotNull VirtualFile dir,
                                                                           @Nullable Set<String> filter) {
-    if (USE_LEGACY_LOCAL_FS_METHOD
-        && (fs instanceof LocalFileSystemImpl localFileSystem) ) {
-      String[] childrenNames = Cancellation.computeInNonCancelableSection(() -> localFileSystem.listWithCaching(dir, filter));
-      //map will be transformed to case-(in)sensitive up-the-stack anyway:
-      Map<String, FileAttributes> childrenWithAttributes = new HashMap<>(childrenNames.length);
-      for (String childName : childrenNames) {
-        childrenWithAttributes.put(childName, null);
-      }
-      return childrenWithAttributes;
-    }
-    else {
-      return Cancellation.computeInNonCancelableSection(() -> fs.listWithAttributes(dir, filter));
-    }
+    return Cancellation.computeInNonCancelableSection(() -> fs.listWithAttributes(dir, filter));
   }
 
   private ChildInfo childRecord(NewVirtualFileSystem fs, FakeVirtualFile child, FileAttributes attributes, boolean canonicalize) {
@@ -503,7 +527,7 @@ final class RefreshWorker {
     String symlinkTarget = attributes.isSymLink() ? fs.resolveSymLink(child) : null;
     ioTime.addAndGet(System.nanoTime() - t);
     int nameId = vfsPeer.getNameId(name);
-    return new ChildInfoImpl(nameId, attributes, isEmptyDir ? ChildInfo.EMPTY_ARRAY : null, symlinkTarget);
+    return new ChildInfoImpl(nameId, attributes, isEmptyDir ? ChildInfo.EMPTY_ARRAY : null, symlinkTarget, isEmptyDir);
   }
 
   private void generateDeleteEvents(List<VFileEvent> events,
@@ -548,15 +572,9 @@ final class RefreshWorker {
     }
   }
 
-  private static void clearFsCache(NewVirtualFileSystem fs) {
-    if (USE_LEGACY_LOCAL_FS_METHOD && (fs instanceof LocalFileSystemImpl) ) {
-      ((LocalFileSystemImpl)fs).clearListCache();
-    }
-  }
-
   private static final class RefreshCancelledException extends RuntimeException {
     @Override
-    public synchronized Throwable fillInStackTrace() {
+    public Throwable fillInStackTrace() {
       return this;
     }
   }
@@ -595,17 +613,17 @@ final class RefreshWorker {
       LOG.trace("create parent=" + parent + " name=" + childName + " attr=" + attributes);
     }
 
-    ChildInfo[] children = null;
+    ScannedChildren scannedChildren = null;
     if (attributes.isDirectory() && !attributes.isSymLink() && parent.getFileSystem() instanceof LocalFileSystem) {
       try {
-        Path childPath = getChildPath(parent.getPath(), childName);
+        var childPath = getChildPath(parent.getPath(), childName);
         if (childPath != null && shouldScanDirectory(parent, childPath, childName)) {
-          List<Path> relevantExcluded = ContainerUtil.mapNotNull(ProjectManagerEx.getInstanceEx().getAllExcludedUrls(), url -> {
-            Path path = Path.of(VirtualFileManager.extractPath(url));
+          var relevantExcluded = ContainerUtil.mapNotNull(ProjectManagerEx.getInstanceEx().getAllExcludedUrls(null), url -> {
+            var path = Path.of(VirtualFileManager.extractPath(url));
             return path.startsWith(childPath) ? path : null;
           });
           var t = System.nanoTime();
-          children = scanChildren(childPath, relevantExcluded, parent);
+          scannedChildren = scanChildren(childPath, relevantExcluded, parent);
           ioTime.addAndGet(System.nanoTime() - t);
         }
       }
@@ -614,7 +632,9 @@ final class RefreshWorker {
       }
     }
 
-    events.add(new VFileCreateEvent(REQUESTOR, parent, childName, attributes.isDirectory(), attributes, symlinkTarget, children));
+    ChildInfo[] children = scannedChildren == null ? null : scannedChildren.children();
+    boolean childrenComplete = scannedChildren != null && scannedChildren.childrenComplete();
+    events.add(new VFileCreateEvent(REQUESTOR, parent, childName, attributes.isDirectory(), attributes, symlinkTarget, children, childrenComplete));
 
     VFileEvent caseSensitivityChangingEvent = ((PersistentFSImpl)persistentFS).determineCaseSensitivityAndPrepareUpdate(parent, childName);
     if (caseSensitivityChangingEvent != null) {
@@ -635,26 +655,79 @@ final class RefreshWorker {
   private static boolean shouldScanDirectory(VirtualFile parent, Path child, String childName) {
     if (FileTypeManager.getInstance().isFileIgnored(childName)) return false;
     for (Project openProject : ProjectManager.getInstance().getOpenProjects()) {
-      if (ReadAction.compute(() -> ProjectFileIndex.getInstance(openProject).isUnderIgnored(parent))) {
-        return false;
-      }
-      String projectRootPath = openProject.getBasePath();
-      if (projectRootPath != null) {
-        Path path = Path.of(projectRootPath);
-        if (child.startsWith(path)) return true;
+      if (ReadAction.computeBlocking(() -> {
+        List<WorkspaceFileSet> indexableFileSet = WorkspaceFileIndex.getInstance(openProject)
+          .findFileSets(parent, true, true, /*includeContentNonIndexableSets*/ false, true, true, /*includeExternalNonIndexableSets*/ false, true);
+        return ContainerUtil.exists(indexableFileSet, set -> set instanceof WorkspaceFileSetWithCustomData && ((WorkspaceFileSetWithCustomData<?>)set).getRecursive());
+      })) {
+        return true;
       }
     }
-    return false;
+    return isInContent(child) || !contentRootsUnderExcluded(child).isEmpty();
   }
 
-  // scan all children of "root" (except excluded dirs) recursively and return them in the ChildInfo[] array
+  private static boolean isInContent(Path directoryOrFile) {
+    String url = toUrl(directoryOrFile);
+    var openProjects = ProjectManager.getInstance().getOpenProjects();
+    return ContainerUtil.exists(openProjects, project -> ReadAction.computeBlocking(
+      () -> WorkspaceFileIndexEx.getInstance(project).isUrlIndexable(url, false) == ThreeState.YES));
+  }
+
+  private static List<Path> contentRootsUnderExcluded(Path directory) {
+    var roots = new LinkedHashSet<Path>();
+    String url = toUrl(directory);
+    for (Project openProject : ProjectManager.getInstance().getOpenProjects()) {
+      ReadAction.runBlocking(() -> {
+        var workspaceFileIndex = WorkspaceFileIndexEx.getInstance(openProject);
+        var vfuManager = (VirtualFileUrlManagerImpl)WorkspaceModel.getInstance(openProject).getVirtualFileUrlManager();
+        var vfu = vfuManager.findByUrl(url);
+        if (vfu == null) return;
+        vfuManager.processChildrenRecursively(vfu, child -> {
+          if (workspaceFileIndex.isUrlIndexable(child.getUrl(), false) == ThreeState.YES) {
+            roots.add(VirtualFileUrlManagerUtil.toPath(child));
+            return TreeNodeProcessingResult.SKIP_CHILDREN;
+          }
+          return TreeNodeProcessingResult.CONTINUE;
+        });
+      });
+    }
+    return ContainerUtil.filter(roots, root -> Files.exists(root));
+  }
+
+  private static @NotNull String toUrl(Path directory) {
+    return URLUtil.FILE_PROTOCOL + URLUtil.SCHEME_SEPARATOR + FileUtilRt.toSystemIndependentName(directory.toString());
+  }
+
+  private record ScannedChildren(ChildInfo @NotNull [] children, boolean childrenComplete) {
+  }
+
+  // scan all children of "root" (except excluded dirs) recursively and return them in a ScannedChildren record
   // `null` means error during scan
-  private ChildInfo @Nullable [] scanChildren(Path root, List<Path> excluded, NewVirtualFile currentDir) {
+  private @Nullable ScannedChildren scanChildren(Path root, List<Path> excluded, NewVirtualFile currentDir) {
     // the stack contains a list of children found so far in the current directory
     Stack<List<ChildInfo>> stack = new Stack<>();
     int nameId = vfsPeer.getNameId("");
-    ChildInfo fakeRoot = new ChildInfoImpl(nameId, null, null, null);
+    ChildInfo fakeRoot = new ChildInfoImpl(nameId, null, null, null, false);
     stack.push(new SmartList<>(fakeRoot));
+    /*
+    1. (if file) `visitFile`: on top of the stack lays a list of children of the parent directory.
+    Add fileInfo of the current file to the list. Skip steps 2-4
+
+    1. (if directory) `preVisitDirectory`
+      calls `visitFile` (same as for a file)
+      a) (if not excluded) push an empty list on the stack if the directory
+      b) (if excluded) skip steps 2-4
+      c) (if excluded but has included files underneath) collect info about those includes.
+      Add this info into the last childInfo in the list on top of the stack (this child info is placed in `visitFile`)
+
+    2. `visitFile`: append a fileInfo to the list on top of the stack
+    3. (if directory) visit children, perform steps 1-4 on each of them
+
+    4. (if directory) `postVisitDirectory`
+    At this point on top of the stack is a list of children of the current directory.
+    Underneath is a list of children of the parent directory. At the end of this list is our directory info from step 2 without children.
+    Add children to this info
+     */
     FileVisitor<Path> visitor = new SimpleFileVisitor<>() {
       private int checkCanceledCount;
 
@@ -667,9 +740,19 @@ final class RefreshWorker {
           return FileVisitResult.SKIP_SUBTREE;  // bypassing NTFS reparse points
         }
         // on average, this "excluded" array is small for any particular root, so linear search it is.
-        if (excluded.contains(dir)) {
-          // skipping excluded roots (record its attributes nevertheless), even if we have content roots beneath
-          // stop optimization right here - it's too much pain to track all these nested content/excluded/content otherwise
+        if (excluded.contains(dir) && !isInContent(dir)) {
+          List<Path> contentUnderExcluded = contentRootsUnderExcluded(dir);
+          if (contentUnderExcluded.isEmpty()) {
+            return FileVisitResult.SKIP_SUBTREE;
+          }
+          // `dir` is excluded but has registered content roots beneath. Replace the ChildInfo for `dir`
+          // (recorded by `visitFile(dir, attrs)` above when `dir != root`, or the pre-seeded fakeRoot otherwise)
+          // with one whose children contain shared intermediate dirs down to the scanned content roots.
+          // We do not push to the stack because `postVisitDirectory` will not fire after `SKIP_SUBTREE`.
+          List<ChildInfo> parentChildren = stack.peek();
+          ChildInfo dirInfo = ContainerUtil.getLastItem(parentChildren);
+          PathTreeNode rootPathNode = new PathTreeNode(dir, contentUnderExcluded);
+          parentChildren.set(parentChildren.size() - 1, withChildrenUnderExcluded(rootPathNode, dirInfo, excluded, currentDir));
           return FileVisitResult.SKIP_SUBTREE;
         }
         stack.push(new ArrayList<>());
@@ -681,11 +764,7 @@ final class RefreshWorker {
         if ((++checkCanceledCount & 0xf) == 0) {
           checkCancelled(currentDir);
         }
-        FileAttributes attributes = FileAttributes.fromNio(file, attrs);
-        String symLinkTarget = attrs.isSymbolicLink() ? FileUtilRt.toSystemIndependentName(file.toRealPath().toString()) : null;
-        int nameId = vfsPeer.getNameId(file.getFileName().toString());
-        ChildInfo info = new ChildInfoImpl(nameId, attributes, null, symLinkTarget);
-        stack.peek().add(info);
+        stack.peek().add(createChildInfo(file, attrs));
         return FileVisitResult.CONTINUE;
       }
 
@@ -696,7 +775,7 @@ final class RefreshWorker {
         // store children back
         ChildInfo parentInfo = ContainerUtil.getLastItem(parentInfos);
         ChildInfo[] children = childInfos.toArray(ChildInfo.EMPTY_ARRAY);
-        ChildInfo newInfo = ((ChildInfoImpl)parentInfo).withChildren(children);
+        ChildInfo newInfo = ((ChildInfoImpl)parentInfo).withChildren(children, true);
         parentInfos.set(parentInfos.size() - 1, newInfo);
         return FileVisitResult.CONTINUE;
       }
@@ -715,7 +794,75 @@ final class RefreshWorker {
       return null;  // tell the client we didn't find any children, abandon the optimization altogether
     }
 
-    return stack.pop().get(0).getChildren();
+    ChildInfo rootInfo = stack.pop().getFirst();
+    ChildInfo[] children = rootInfo.getChildren();
+    return children == null ? null : new ScannedChildren(children, rootInfo.isAllChildren());
+  }
+
+  private ChildInfo readChildInfo(Path file) throws IOException {
+    BasicFileAttributes attrs = Files.readAttributes(file, BasicFileAttributes.class, LinkOption.NOFOLLOW_LINKS);
+    return createChildInfo(file, attrs);
+  }
+
+  private ChildInfo createChildInfo(Path file, BasicFileAttributes attrs) throws IOException {
+    FileAttributes attributes = FileAttributes.fromNio(file, attrs);
+    String symLinkTarget = attrs.isSymbolicLink() ? FileUtilRt.toSystemIndependentName(file.toRealPath().toString()) : null;
+    int nameId = vfsPeer.getNameId(file.getFileName().toString());
+    return new ChildInfoImpl(nameId, attributes, null, symLinkTarget, false);
+  }
+
+  private ChildInfo withChildrenUnderExcluded(PathTreeNode node, ChildInfo info, List<Path> nestedExcluded, NewVirtualFile currentDir) {
+    if (node.isContentRoot) {
+      ScannedChildren children = scanChildren(node.path, nestedExcluded, currentDir);
+      return children == null ? info : ((ChildInfoImpl)info).withChildren(children.children(), children.childrenComplete());
+    }
+
+    List<ChildInfo> children = new ArrayList<>(node.children.size());
+    for (PathTreeNode childNode : node.children.values()) {
+      try {
+        ChildInfo childInfo = readChildInfo(childNode.path);
+        ChildInfo childInfoWithChildren = withChildrenUnderExcluded(childNode, childInfo, nestedExcluded, currentDir);
+        children.add(childInfoWithChildren);
+      }
+      catch (IOException e) {
+        LOG.warn(e);
+      }
+    }
+    return ((ChildInfoImpl)info).withChildren(children.toArray(ChildInfo.EMPTY_ARRAY), false);
+  }
+
+  private static final class PathTreeNode {
+    private final Path path;
+    private final Map<Path, PathTreeNode> children = new LinkedHashMap<>();
+    private boolean isContentRoot;
+
+    private PathTreeNode(Path path) {
+      this.path = path;
+    }
+
+    private PathTreeNode(Path dir, List<Path> contentRootsUnder) {
+      this(dir);
+      for (var root : contentRootsUnder) {
+        addContentRoot(dir.relativize(root));
+      }
+    }
+
+    private void addContentRoot(Path relativePath) {
+      if (relativePath.toString().isEmpty()) {
+        isContentRoot = true;
+        children.clear();
+        return;
+      }
+
+      PathTreeNode node = this;
+      for (Path path : relativePath) {
+        Path childPath = node.path.resolve(path);
+        node = node.children.computeIfAbsent(childPath, child -> new PathTreeNode(child));
+        if (node.isContentRoot) return;
+      }
+      node.isContentRoot = true;
+      node.children.clear();
+    }
   }
 
   private void checkAndScheduleChildRefresh(List<VFileEvent> events,
@@ -752,11 +899,15 @@ final class RefreshWorker {
       long oldTimestamp = persistentFS.getTimeStamp(child), newTimestamp = childAttributes.lastModified;
       long oldLength = persistentFS.getLastRecordedLength(child), newLength = childAttributes.length;
       if (oldTimestamp != newTimestamp || oldLength != newLength) {
-        if (LOG.isTraceEnabled()) LOG.trace(
-          "update file=" + child +
-          (oldTimestamp != newTimestamp ? " TS=" + oldTimestamp + "->" + newTimestamp : "") +
-          (oldLength != newLength ? " len=" + oldLength + "->" + newLength : ""));
-        events.add(new VFileContentChangeEvent(REQUESTOR, child, child.getModificationStamp(), VFileContentChangeEvent.UNDEFINED_TIMESTAMP_OR_LENGTH, oldTimestamp, newTimestamp, oldLength, newLength));
+        if (LOG.isTraceEnabled()) {
+          LOG.trace("update file=" + child +
+                    (oldTimestamp != newTimestamp ? " TS=" + oldTimestamp + "->" + newTimestamp : "") +
+                    (oldLength != newLength ? " len=" + oldLength + "->" + newLength : ""));
+        }
+
+        events.add(new VFileContentChangeEvent(REQUESTOR, child, child.getModificationStamp(),
+                                               VFileContentChangeEvent.UNDEFINED_TIMESTAMP_OR_LENGTH, oldTimestamp, newTimestamp,
+                                               oldLength, newLength));
       }
       child.markClean();
     }
