@@ -1,17 +1,44 @@
-// Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
+// Copyright 2000-2026 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.usages.impl;
 
 import com.intellij.concurrency.ConcurrentCollectionFactory;
 import com.intellij.concurrency.JobSchedulerImpl;
 import com.intellij.find.FindManager;
 import com.intellij.icons.AllIcons;
-import com.intellij.ide.*;
+import com.intellij.ide.CommonActionsManager;
+import com.intellij.ide.CopyProvider;
+import com.intellij.ide.DataManager;
+import com.intellij.ide.OccurenceNavigator;
+import com.intellij.ide.OccurenceNavigatorSupport;
+import com.intellij.ide.TextCopyProvider;
+import com.intellij.ide.TreeExpander;
 import com.intellij.ide.actions.exclusion.ExclusionHandler;
 import com.intellij.lang.Language;
 import com.intellij.navigation.NavigationItem;
 import com.intellij.openapi.Disposable;
-import com.intellij.openapi.actionSystem.*;
-import com.intellij.openapi.application.*;
+import com.intellij.openapi.actionSystem.ActionManager;
+import com.intellij.openapi.actionSystem.ActionPlaces;
+import com.intellij.openapi.actionSystem.ActionToolbar;
+import com.intellij.openapi.actionSystem.ActionUpdateThread;
+import com.intellij.openapi.actionSystem.AnAction;
+import com.intellij.openapi.actionSystem.AnActionEvent;
+import com.intellij.openapi.actionSystem.CommonDataKeys;
+import com.intellij.openapi.actionSystem.CustomShortcutSet;
+import com.intellij.openapi.actionSystem.DataContext;
+import com.intellij.openapi.actionSystem.DataSink;
+import com.intellij.openapi.actionSystem.DefaultActionGroup;
+import com.intellij.openapi.actionSystem.IdeActions;
+import com.intellij.openapi.actionSystem.KeyboardShortcut;
+import com.intellij.openapi.actionSystem.PlatformCoreDataKeys;
+import com.intellij.openapi.actionSystem.PlatformDataKeys;
+import com.intellij.openapi.actionSystem.Separator;
+import com.intellij.openapi.actionSystem.UiDataProvider;
+import com.intellij.openapi.application.AccessToken;
+import com.intellij.openapi.application.ApplicationManager;
+import com.intellij.openapi.application.CoroutineSupport;
+import com.intellij.openapi.application.ModalityState;
+import com.intellij.openapi.application.ReadAction;
+import com.intellij.openapi.application.WriteIntentReadAction;
 import com.intellij.openapi.command.CommandProcessor;
 import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.progress.ProgressIndicator;
@@ -22,14 +49,31 @@ import com.intellij.openapi.project.Project;
 import com.intellij.openapi.ui.Messages;
 import com.intellij.openapi.ui.SimpleToolWindowPanel;
 import com.intellij.openapi.ui.Splitter;
-import com.intellij.openapi.util.*;
+import com.intellij.openapi.util.Comparing;
+import com.intellij.openapi.util.Disposer;
+import com.intellij.openapi.util.EmptyRunnable;
+import com.intellij.openapi.util.IntellijInternalApi;
+import com.intellij.openapi.util.NlsContexts;
+import com.intellij.openapi.util.Pair;
+import com.intellij.openapi.util.SystemInfo;
 import com.intellij.openapi.util.registry.Registry;
 import com.intellij.openapi.vfs.ReadonlyStatusHandler;
 import com.intellij.openapi.vfs.VfsUtilCore;
 import com.intellij.openapi.vfs.VirtualFile;
 import com.intellij.pom.Navigatable;
-import com.intellij.psi.*;
-import com.intellij.ui.*;
+import com.intellij.psi.PsiDocumentManager;
+import com.intellij.psi.PsiElement;
+import com.intellij.psi.PsiInvalidElementAccessException;
+import com.intellij.psi.PsiReference;
+import com.intellij.psi.SmartPointerManager;
+import com.intellij.psi.SmartPsiElementPointer;
+import com.intellij.ui.IdeBorderFactory;
+import com.intellij.ui.OnePixelSplitter;
+import com.intellij.ui.PopupHandler;
+import com.intellij.ui.ScrollPaneFactory;
+import com.intellij.ui.SideBorder;
+import com.intellij.ui.SmartExpander;
+import com.intellij.ui.TreeUIHelper;
 import com.intellij.ui.components.JBLabel;
 import com.intellij.ui.components.JBPanelWithEmptyText;
 import com.intellij.ui.components.JBTabbedPane;
@@ -39,16 +83,39 @@ import com.intellij.usageView.UsageInfo;
 import com.intellij.usageView.UsageViewBundle;
 import com.intellij.usageView.UsageViewContentManager;
 import com.intellij.usageView.UsageViewUtil;
-import com.intellij.usages.*;
+import com.intellij.usages.ConfigurableUsageTarget;
+import com.intellij.usages.Usage;
+import com.intellij.usages.UsageContextPanel;
+import com.intellij.usages.UsageInfo2UsageAdapter;
+import com.intellij.usages.UsageSearcher;
+import com.intellij.usages.UsageTarget;
+import com.intellij.usages.UsageView;
+import com.intellij.usages.UsageViewManager;
+import com.intellij.usages.UsageViewPresentation;
+import com.intellij.usages.UsageViewSettings;
 import com.intellij.usages.impl.actions.MergeSameLineUsagesAction;
 import com.intellij.usages.impl.rules.UsageFilteringRules;
-import com.intellij.usages.rules.*;
+import com.intellij.usages.rules.MergeableUsage;
+import com.intellij.usages.rules.PsiElementUsage;
+import com.intellij.usages.rules.UsageFilteringRule;
+import com.intellij.usages.rules.UsageFilteringRuleProvider;
+import com.intellij.usages.rules.UsageGroupingRule;
+import com.intellij.usages.rules.UsageGroupingRuleProvider;
+import com.intellij.usages.rules.UsageInFile;
+import com.intellij.usages.rules.UsageInFiles;
 import com.intellij.usages.similarity.usageAdapter.SimilarUsage;
-import com.intellij.util.*;
+import com.intellij.util.Consumer;
+import com.intellij.util.EditSourceOnDoubleClickHandler;
+import com.intellij.util.EditSourceOnEnterKeyHandler;
+import com.intellij.util.ObjectUtils;
+import com.intellij.util.SlowOperations;
 import com.intellij.util.concurrency.AppJavaExecutorUtil;
 import com.intellij.util.concurrency.CoroutineDispatcherBackedExecutor;
 import com.intellij.util.concurrency.EdtExecutorService;
 import com.intellij.util.concurrency.ThreadingAssertions;
+import com.intellij.util.concurrency.annotations.RequiresBackgroundThread;
+import com.intellij.util.concurrency.annotations.RequiresEdt;
+import com.intellij.util.concurrency.annotations.RequiresReadLock;
 import com.intellij.util.containers.ContainerUtil;
 import com.intellij.util.containers.JBIterable;
 import com.intellij.util.containers.MultiMap;
@@ -57,25 +124,68 @@ import com.intellij.util.ui.JBUI;
 import com.intellij.util.ui.UIUtil;
 import com.intellij.util.ui.tree.TreeModelAdapter;
 import com.intellij.util.ui.tree.TreeUtil;
+import com.intellij.util.ui.update.DebouncedUpdates;
+import com.intellij.util.ui.update.UpdateQueue;
 import it.unimi.dsi.fastutil.ints.IntArrayList;
 import it.unimi.dsi.fastutil.ints.IntList;
+import kotlin.Unit;
+import kotlin.coroutines.CoroutineContext;
 import kotlinx.coroutines.CoroutineScope;
 import kotlinx.coroutines.JobKt;
-import org.jetbrains.annotations.*;
+import org.jetbrains.annotations.ApiStatus;
+import org.jetbrains.annotations.Contract;
+import org.jetbrains.annotations.NonNls;
+import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
+import org.jetbrains.annotations.TestOnly;
+import org.jetbrains.annotations.Unmodifiable;
+import org.jetbrains.annotations.VisibleForTesting;
 
-import javax.swing.*;
+import javax.swing.AbstractAction;
+import javax.swing.Action;
+import javax.swing.JButton;
+import javax.swing.JComponent;
+import javax.swing.JLabel;
+import javax.swing.JPanel;
+import javax.swing.JScrollPane;
+import javax.swing.JTree;
+import javax.swing.KeyStroke;
+import javax.swing.SwingConstants;
+import javax.swing.SwingUtilities;
+import javax.swing.ToolTipManager;
 import javax.swing.event.TreeExpansionEvent;
 import javax.swing.event.TreeExpansionListener;
 import javax.swing.event.TreeModelEvent;
-import javax.swing.tree.*;
-import java.awt.*;
+import javax.swing.tree.DefaultMutableTreeNode;
+import javax.swing.tree.DefaultTreeModel;
+import javax.swing.tree.TreeCellRenderer;
+import javax.swing.tree.TreeNode;
+import javax.swing.tree.TreePath;
+import java.awt.BorderLayout;
+import java.awt.Component;
+import java.awt.FlowLayout;
 import java.awt.event.ActionEvent;
 import java.awt.event.FocusAdapter;
 import java.awt.event.FocusEvent;
 import java.awt.event.MouseEvent;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.Comparator;
+import java.util.Enumeration;
+import java.util.HashSet;
+import java.util.LinkedHashMap;
+import java.util.LinkedHashSet;
 import java.util.List;
-import java.util.concurrent.*;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Set;
+import java.util.concurrent.Callable;
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.ScheduledFuture;
+import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.Supplier;
 import java.util.stream.Collectors;
@@ -85,8 +195,9 @@ import static com.intellij.openapi.actionSystem.impl.Utils.createAsyncDataContex
 import static com.intellij.usages.impl.UsageFilteringRuleActions.usageFilteringRuleActions;
 
 public class UsageViewImpl implements UsageViewEx {
+  private static final String DUMB_AWARE_KEY = "DumbAware";
   private final int myUniqueIdentifier;
-  private static final GroupNode.NodeComparator COMPARATOR = new GroupNode.NodeComparator();
+  private static final GroupNode.NodeComparator NODE_COMPARATOR = new GroupNode.NodeComparator();
   private static final Logger LOG = Logger.getInstance(UsageViewImpl.class);
   public static final @NonNls String SHOW_RECENT_FIND_USAGES_ACTION_ID = "UsageView.ShowRecentFindUsages";
 
@@ -107,7 +218,7 @@ public class UsageViewImpl implements UsageViewEx {
 
   private volatile boolean mySearchInProgress = true;
   private final ExporterToTextFile myTextFileExporter = new ExporterToTextFile(this, getUsageViewSettings());
-  private final SingleAlarm updateAlarm;
+  private final @NotNull UpdateQueue<Object> updateAlarm;
 
   private final ExclusionHandlerEx<DefaultMutableTreeNode> myExclusionHandler;
   private final Map<Usage, UsageNode> myUsageNodes = new ConcurrentHashMap<>();
@@ -177,7 +288,9 @@ public class UsageViewImpl implements UsageViewEx {
     = ConcurrentCollectionFactory.createConcurrentSet();
 
   private Runnable fusRunnable = () -> {
-    if (myTree == null) return;
+    if (myTree == null) {
+      return;
+    }
     DataContext dc = DataManager.getInstance().getDataContext(myTree);
     Navigatable[] navigatables = CommonDataKeys.NAVIGATABLE_ARRAY.getData(dc);
     if (navigatables != null) {
@@ -188,7 +301,7 @@ public class UsageViewImpl implements UsageViewEx {
             UsageViewStatisticsCollector.logItemChosen(getProject(), this, CodeNavigateSource.FindToolWindow, psiElement.getLanguage(),
                                                        n instanceof SimilarUsage);
           }
-      });
+        });
     }
   };
 
@@ -221,20 +334,23 @@ public class UsageViewImpl implements UsageViewEx {
 
     myUsageViewTreeCellRenderer = new UsageViewTreeCellRenderer(this);
     if (!myPresentation.isDetachedMode()) {
-      UIUtil.invokeLaterIfNeeded(() -> WriteIntentReadAction.run((Runnable)() -> initInEDT()));
+      UIUtil.invokeLaterIfNeeded(() -> WriteIntentReadAction.run(() -> initInEDT()));
     }
     myExclusionHandler = new ExclusionHandlerEx<>() {
       @Override
+      @RequiresEdt
       public boolean isNodeExclusionAvailable(@NotNull DefaultMutableTreeNode node) {
         return node instanceof UsageNode;
       }
 
       @Override
+      @RequiresEdt
       public boolean isNodeExcluded(@NotNull DefaultMutableTreeNode node) {
         return ((UsageNode)node).isDataExcluded();
       }
 
       @Override
+      @RequiresEdt
       public void excludeNode(@NotNull DefaultMutableTreeNode node) {
         Set<Node> nodes = new HashSet<>();
         TreeUtil.treeNodeTraverser(node).traverse().filter(Node.class).addAllTo(nodes);
@@ -243,6 +359,7 @@ public class UsageViewImpl implements UsageViewEx {
       }
 
       @Override
+      @RequiresEdt
       public void excludeNodeSilently(@NotNull DefaultMutableTreeNode node) {
         Set<Node> nodes = new HashSet<>();
         TreeUtil.treeNodeTraverser(node).traverse().filter(Node.class).addAllTo(nodes);
@@ -251,21 +368,25 @@ public class UsageViewImpl implements UsageViewEx {
       }
 
       // include the parent if all its children (except the "node" itself) excluded flags are "almostAllChildrenExcluded"
+      @RequiresEdt
       private void collectParentNodes(@NotNull DefaultMutableTreeNode node,
                                       boolean almostAllChildrenExcluded,
                                       @NotNull Set<? super Node> nodes) {
         TreeNode parent = node.getParent();
-        if (parent == myRoot || !(parent instanceof GroupNode parentNode)) return;
+        if (parent == myRoot || !(parent instanceof GroupNode parentNode)) {
+          return;
+        }
         List<Node> otherNodes;
         synchronized (parentNode) {
           otherNodes = ContainerUtil.filter(parentNode.getChildren(), n -> n.isExcluded() != almostAllChildrenExcluded);
         }
-        if (otherNodes.size() == 1 && otherNodes.get(0) == node) {
+        if (otherNodes.size() == 1 && otherNodes.getFirst() == node) {
           nodes.add(parentNode);
           collectParentNodes(parentNode, almostAllChildrenExcluded, nodes);
         }
       }
 
+      @RequiresEdt
       private void setExcludeNodes(@NotNull Set<? extends Node> nodes, boolean excluded, boolean updateImmediately) {
         Set<Usage> affectedUsages = new LinkedHashSet<>();
         for (Node node : nodes) {
@@ -286,6 +407,7 @@ public class UsageViewImpl implements UsageViewEx {
       }
 
       @Override
+      @RequiresEdt
       public void includeNode(@NotNull DefaultMutableTreeNode node) {
         Set<Node> nodes = new HashSet<>();
         TreeUtil.treeNodeTraverser(node).traverse().filter(Node.class).addAllTo(nodes);
@@ -294,11 +416,13 @@ public class UsageViewImpl implements UsageViewEx {
       }
 
       @Override
+      @RequiresEdt
       public boolean isActionEnabled(boolean isExcludeAction) {
         return getPresentation().isExcludeAvailable();
       }
 
       @Override
+      @RequiresEdt
       public void onDone(boolean isExcludeAction) {
         ThreadingAssertions.assertEventDispatchThread();
         if (myRootPanel.hasNextOccurence()) {
@@ -308,11 +432,14 @@ public class UsageViewImpl implements UsageViewEx {
     };
     updateRequests = AppJavaExecutorUtil
       .createBoundedTaskExecutor("Usage View Update Requests", coroutineScope, JobSchedulerImpl.getJobPoolParallelism());
-    updateAlarm = SingleAlarm.singleEdtAlarm(300, coroutineScope, () -> {
-      if (!isDisposed()) {
-        updateImmediately();
-      }
-    });
+    CoroutineContext edtDispatcher = ApplicationManager.getApplication().getService(CoroutineSupport.class).uiDispatcher(CoroutineSupport.UiDispatcherKind.LEGACY, false);
+    updateAlarm = DebouncedUpdates.forScope(coroutineScope, "Usage View Update Requests", 300)
+      .withContext(edtDispatcher)
+      .runLatest(_ -> {
+        if (!isDisposed()) {
+          updateImmediately();
+        }
+      });
   }
 
   @Override
@@ -323,13 +450,18 @@ public class UsageViewImpl implements UsageViewEx {
   }
 
   @ApiStatus.Internal
+  @RequiresEdt
   public JTree getTree() {
+    ThreadingAssertions.assertEventDispatchThread();
     return myTree;
   }
 
+  @RequiresEdt
   private void initInEDT() {
     ThreadingAssertions.assertEventDispatchThread();
-    if (isDisposed()) return;
+    if (isDisposed()) {
+      return;
+    }
     myTree = new MyTree(myModel);
     myTree.setName("UsageViewTree");
     myTree.getAccessibleContext().setAccessibleName(UsageViewBundle.message("usages.tree.accessible.name"));
@@ -353,9 +485,9 @@ public class UsageViewImpl implements UsageViewEx {
 
     myTree.setCellRenderer(myUsageViewTreeCellRenderer);
     //noinspection SSBasedInspection
-    SwingUtilities.invokeLater(() -> {
+    ApplicationManager.getApplication().invokeLater(() -> {
       if (!isDisposed()) {
-        collapseAll();
+        collapseAll(-1);
       }
     });
 
@@ -370,10 +502,10 @@ public class UsageViewImpl implements UsageViewEx {
     }, this);
 
     if (myPresentation.isShowCancelButton()) {
-      addButtonToLowerPane(() -> close(), UsageViewBundle.message("usage.view.cancel.button"));
+      addButtonToLowerPane(() -> close(), UsageViewBundle.message("usage.view.cancel.button"), true);
     }
 
-    myTree.getSelectionModel().addTreeSelectionListener(__ -> {
+    myTree.getSelectionModel().addTreeSelectionListener(_ -> {
       //noinspection SSBasedInspection
       ApplicationManager.getApplication().invokeLater(() -> {
         if (!isDisposed()) {
@@ -433,44 +565,17 @@ public class UsageViewImpl implements UsageViewEx {
    * Collection of info about a change that occurs in the GroupNode.myChildren
    * and has to be applied to the swing children list including affected nodes and the type of the change
    */
-  static class NodeChange {
-    private final @NotNull NodeChangeType nodeChangeType;
-    /**
+  record NodeChange(
+    @NotNull NodeChangeType nodeChangeType,
+    /*
      * The one that was replaced or removed, or a parent for the added node
      */
-    private final @NotNull Node parentNode;
-
-    /**
+    @NotNull Node parentNode,
+    /*
      * The one that was added or the one that replaced the first
      */
-    private final @Nullable Node childNode;
-
-    NodeChange(@NotNull NodeChangeType nodeChangeType, @NotNull Node parentNode, @Nullable Node childNode) {
-      this.nodeChangeType = nodeChangeType;
-      this.parentNode = parentNode;
-      this.childNode = childNode;
-    }
-
-    @NotNull Node getParentNode() {
-      return parentNode;
-    }
-
-    @Override
-    public boolean equals(Object o) {
-      if (this == o) return true;
-      if (o == null || getClass() != o.getClass()) return false;
-      NodeChange that = (NodeChange)o;
-      return nodeChangeType == that.nodeChangeType &&
-             Objects.equals(parentNode, that.parentNode) &&
-             Objects.equals(childNode, that.childNode);
-    }
-
-    @Override
-    public int hashCode() {
-      return Objects.hash(nodeChangeType, parentNode, childNode);
-    }
-  }
-
+    @Nullable Node childNode
+  ) {}
 
   /**
    * Set of node changes coming from the model to be applied to the Swing elements
@@ -493,10 +598,11 @@ public class UsageViewImpl implements UsageViewEx {
    * (fireTreeNodesInserted/nodesWereRemoved/fireTreeStructureChanged)
    * this method is called regularly every 50ms to fire events in batch
    */
+  @RequiresEdt
   private void fireEvents() {
     ThreadingAssertions.assertEventDispatchThread();
 
-    syncModelWithSwingNodes();
+    ReadAction.runBlocking(() -> syncModelWithSwingNodes());
     fireEventsForChangedNodes();
   }
 
@@ -535,7 +641,11 @@ public class UsageViewImpl implements UsageViewEx {
    * Iterating over all changes that come from the model children list in a GroupNode
    * and applying all those changes to the swing list of children to synchronize those
    */
+  @RequiresEdt
+  @RequiresReadLock
   private void syncModelWithSwingNodes() {
+    ThreadingAssertions.assertEventDispatchThread();
+    ThreadingAssertions.assertReadAccess();
     List<NodeChange> nodeChanges;
     synchronized (modelToSwingNodeChanges) {
       nodeChanges = new ArrayList<>(modelToSwingNodeChanges);
@@ -546,7 +656,7 @@ public class UsageViewImpl implements UsageViewEx {
     List<Node> nodesToFire = new ArrayList<>();
 
     //first grouping changes by parent node
-    Map<Node, List<NodeChange>> groupByParent = nodeChanges.stream().collect(Collectors.groupingBy(change1 -> change1.getParentNode()));
+    Map<Node, List<NodeChange>> groupByParent = nodeChanges.stream().collect(Collectors.groupingBy(change1 -> change1.parentNode()));
     for (Map.Entry<Node, List<NodeChange>> entry : groupByParent.entrySet()) {
       Node parentNode = entry.getKey();
       synchronized (parentNode) {
@@ -588,7 +698,7 @@ public class UsageViewImpl implements UsageViewEx {
                 nodesToFire.add(childNode);
 
                 parentNode.insertNewNode(childNode, 0);
-                swingChildren.sort(COMPARATOR);
+                swingChildren.sort(NODE_COMPARATOR);
                 indicesToFire.add(swingChildren.indexOf(change.childNode));
 
                 if (childNode instanceof UsageNode) {
@@ -628,6 +738,7 @@ public class UsageViewImpl implements UsageViewEx {
     }
   }
 
+  @RequiresEdt
   private void setupCentralPanel() {
     ThreadingAssertions.assertEventDispatchThread();
 
@@ -643,6 +754,7 @@ public class UsageViewImpl implements UsageViewEx {
     myAdditionalComponent.add(myButtonPanel, BorderLayout.SOUTH);
   }
 
+  @RequiresEdt
   private void updateUsagesContextPanels() {
     ThreadingAssertions.assertEventDispatchThread();
     disposeUsageContextPanels();
@@ -653,7 +765,7 @@ public class UsageViewImpl implements UsageViewEx {
 
       UsageContextPanel.Provider[] extensions = UsageContextPanel.Provider.EP_NAME.getExtensions(myProject);
       List<UsageContextPanel.Provider> myUsageContextPanelProviders =
-        ContainerUtil.filter(extensions, provider -> ReadAction.compute(() -> provider.isAvailableFor(this)));
+        ContainerUtil.filter(extensions, provider -> ReadAction.computeBlocking(() -> provider.isAvailableFor(this)));
       Map<@NlsContexts.TabTitle String, JComponent> components = new LinkedHashMap<>();
       for (UsageContextPanel.Provider provider : myUsageContextPanelProviders) {
         JComponent component;
@@ -679,7 +791,7 @@ public class UsageViewImpl implements UsageViewEx {
         }
         int index = myUsageContextPanelProviders.indexOf(myCurrentUsageContextProvider);
         tabbedPane.setSelectedIndex(index);
-        tabbedPane.addChangeListener(e -> {
+        tabbedPane.addChangeListener(_ -> {
           int currentIndex = tabbedPane.getSelectedIndex();
           UsageContextPanel.Provider selectedProvider = myUsageContextPanelProviders.get(currentIndex);
           if (selectedProvider != myCurrentUsageContextProvider) {
@@ -700,6 +812,7 @@ public class UsageViewImpl implements UsageViewEx {
     myRootPanel.repaint();
   }
 
+  @RequiresEdt
   private void tabSelected(@NotNull UsageContextPanel.Provider provider) {
     ThreadingAssertions.assertEventDispatchThread();
     myCurrentUsageContextProvider = provider;
@@ -707,6 +820,7 @@ public class UsageViewImpl implements UsageViewEx {
     updateOnSelectionChanged(myProject);
   }
 
+  @RequiresEdt
   private void disposeUsageContextPanels() {
     ThreadingAssertions.assertEventDispatchThread();
     if (!myAllUsageContextPanels.isEmpty()) {
@@ -763,6 +877,7 @@ public class UsageViewImpl implements UsageViewEx {
     return list.toArray(UsageGroupingRule.EMPTY_ARRAY);
   }
 
+  @RequiresEdt
   private void initTree() {
     ThreadingAssertions.assertEventDispatchThread();
     myTree.setShowsRootHandles(true);
@@ -803,6 +918,7 @@ public class UsageViewImpl implements UsageViewEx {
     }, true);
   }
 
+  @RequiresEdt
   private @NotNull JComponent createActionsToolbar() {
     ThreadingAssertions.assertEventDispatchThread();
 
@@ -833,6 +949,7 @@ public class UsageViewImpl implements UsageViewEx {
     return toUsageViewToolbar(group);
   }
 
+  @RequiresEdt
   private @NotNull JComponent toUsageViewToolbar(@NotNull DefaultActionGroup group) {
     ThreadingAssertions.assertEventDispatchThread();
     ActionToolbar actionToolbar = ActionManager.getInstance().createActionToolbar(ActionPlaces.USAGE_VIEW_TOOLBAR, group, false);
@@ -845,6 +962,7 @@ public class UsageViewImpl implements UsageViewEx {
     return true;
   }
 
+  @RequiresEdt
   public void addFilteringActions(@NotNull DefaultActionGroup group) {
     ThreadingAssertions.assertEventDispatchThread();
     addFilteringActions(group, true);
@@ -899,7 +1017,7 @@ public class UsageViewImpl implements UsageViewEx {
 
     @Override
     public void collapseAll() {
-      UsageViewImpl.this.collapseAll();
+      UsageViewImpl.this.collapseAll(3);
       getUsageViewSettings().setExpanded(false);
     }
 
@@ -909,6 +1027,7 @@ public class UsageViewImpl implements UsageViewEx {
     }
   };
 
+  @RequiresEdt
   protected AnAction @NotNull [] createActions() {
     ThreadingAssertions.assertEventDispatchThread();
 
@@ -957,7 +1076,9 @@ public class UsageViewImpl implements UsageViewEx {
   }
 
   protected boolean canShowSettings() {
-    if (myTargets.length == 0) return false;
+    if (myTargets.length == 0) {
+      return false;
+    }
     NavigationItem target = myTargets[0];
     return target instanceof ConfigurableUsageTarget;
   }
@@ -1040,6 +1161,7 @@ public class UsageViewImpl implements UsageViewEx {
     actions.sort((o1, o2) -> Comparing.compare(o1.getTemplateText(), o2.getTemplateText()));
   }
 
+  @RequiresEdt
   private boolean shouldTreeReactNowToRuleChanges() {
     ThreadingAssertions.assertEventDispatchThread();
     return myPresentation.isDetachedMode() || myTree.isShowing();
@@ -1049,10 +1171,13 @@ public class UsageViewImpl implements UsageViewEx {
 
   private void rulesChanged() {
     try (AccessToken ignore = SlowOperations.knownIssue("IJPL-164976")) {
-      rulesChangedImpl();
+      ReadAction.runBlocking(() -> {
+        rulesChangedImpl();
+      });
     }
   }
 
+  @RequiresEdt
   private void rulesChangedImpl() {
     ThreadingAssertions.assertEventDispatchThread();
     if (!shouldTreeReactNowToRuleChanges()) {
@@ -1084,8 +1209,13 @@ public class UsageViewImpl implements UsageViewEx {
       }
     }
     appendUsagesInBulk(allUsages).thenRun(() -> SwingUtilities.invokeLater(() -> {
-      if (isDisposed()) return;
+      if (isDisposed()) {
+        return;
+      }
       if (myTree != null) {
+        if (!myPresentation.isDetachedMode()) {
+          expandTreeAfterReset();
+        }
         excludeUsages(excludedUsages.toArray(Usage.EMPTY_ARRAY));
         restoreUsageExpandState(states);
         updateImmediately();
@@ -1096,6 +1226,7 @@ public class UsageViewImpl implements UsageViewEx {
     }));
   }
 
+  @RequiresEdt
   private void captureUsagesExpandState(@NotNull TreePath pathFrom, @NotNull Collection<? super UsageState> states) {
     ThreadingAssertions.assertEventDispatchThread();
     if (!myTree.isExpanded(pathFrom)) {
@@ -1115,6 +1246,7 @@ public class UsageViewImpl implements UsageViewEx {
     }
   }
 
+  @RequiresEdt
   private void restoreUsageExpandState(@NotNull Collection<? extends UsageState> states) {
     ThreadingAssertions.assertEventDispatchThread();
     //always expand the last level group
@@ -1132,7 +1264,7 @@ public class UsageViewImpl implements UsageViewEx {
       }
       myTree.getSelectionModel().clearSelection();
       for (UsageState usageState : states) {
-        usageState.restore();
+        usageState.restore(this);
       }
     }
     finally {
@@ -1150,8 +1282,15 @@ public class UsageViewImpl implements UsageViewEx {
     doExpandingCollapsing(() -> TreeUtil.expand(myTree, levels));
   }
 
+  private void expandTreeAfterReset() {
+    expandTree(2);
+  }
+
+  @RequiresEdt
   private void doExpandingCollapsing(@NotNull Runnable task) {
-    if (isDisposed()) return;
+    if (isDisposed()) {
+      return;
+    }
     ThreadingAssertions.assertEventDispatchThread();
     fireEvents();  // drain all remaining insertion events in the queue
 
@@ -1164,9 +1303,9 @@ public class UsageViewImpl implements UsageViewEx {
     }
   }
 
-  private void collapseAll() {
+  private void collapseAll(int keepSelectionLevel) {
     doExpandingCollapsing(() -> {
-      TreeUtil.collapseAll(myTree, 3);
+      TreeUtil.collapseAll(myTree, keepSelectionLevel);
       myTree.expandRow(0);
     });
   }
@@ -1175,12 +1314,14 @@ public class UsageViewImpl implements UsageViewEx {
     expandTree(1);
   }
 
+  @RequiresEdt
   @NotNull
   DefaultMutableTreeNode getModelRoot() {
     ThreadingAssertions.assertEventDispatchThread();
     return (DefaultMutableTreeNode)myTree.getModel().getRoot();
   }
 
+  @RequiresEdt
   public void select() {
     ThreadingAssertions.assertEventDispatchThread();
     // can be null during ctr execution
@@ -1247,6 +1388,9 @@ public class UsageViewImpl implements UsageViewEx {
 
   public void refreshUsages() {
     reset();
+    if (!myPresentation.isDetachedMode()) {
+      SwingUtilities.invokeLater(() -> expandTreeAfterReset());
+    }
     doReRun();
   }
 
@@ -1271,6 +1415,7 @@ public class UsageViewImpl implements UsageViewEx {
     return doReRun();
   }
 
+  @RequiresEdt
   private void reset() {
     ThreadingAssertions.assertEventDispatchThread();
     myUsageNodes.clear();
@@ -1279,23 +1424,20 @@ public class UsageViewImpl implements UsageViewEx {
     synchronized (modelToSwingNodeChanges) {
       modelToSwingNodeChanges.clear();
     }
-
-    if (!myPresentation.isDetachedMode()) {
-      SwingUtilities.invokeLater(() -> expandTree(2));
-    }
   }
 
   @ApiStatus.Internal
   @VisibleForTesting
+  @RequiresBackgroundThread
   public void drainQueuedUsageNodes() {
-    ApplicationManager.getApplication().assertIsNonDispatchThread();
+    ThreadingAssertions.assertBackgroundThread();
     UIUtil.invokeAndWaitIfNeeded(() -> fireEvents());
   }
 
   @Override
   public void appendUsage(@NotNull Usage usage) {
     if (ApplicationManager.getApplication().isDispatchThread()) {
-      addUpdateRequest(() -> ReadAction.run(() -> doAppendUsage(usage)));
+      addUpdateRequest(() -> ReadAction.runBlocking(() -> doAppendUsage(usage)));
     }
     else {
       doAppendUsage(usage);
@@ -1307,8 +1449,9 @@ public class UsageViewImpl implements UsageViewEx {
   }
 
   @Override
+  @RequiresBackgroundThread
   public void waitForUpdateRequestsCompletion() {
-    ApplicationManager.getApplication().assertIsNonDispatchThread();
+    ThreadingAssertions.assertBackgroundThread();
     try {
       updateRequests.waitAllTasksExecuted(10, TimeUnit.MINUTES);
     }
@@ -1320,7 +1463,7 @@ public class UsageViewImpl implements UsageViewEx {
   @Override
   public @NotNull CompletableFuture<?> appendUsagesInBulk(@NotNull Collection<? extends Usage> usages) {
     CompletableFuture<Object> result = new CompletableFuture<>();
-    addUpdateRequest(() -> ReadAction.run(() -> {
+    addUpdateRequest(() -> ReadAction.runBlocking(() -> {
       try {
         for (Usage usage : usages) {
           doAppendUsage(usage);
@@ -1335,10 +1478,12 @@ public class UsageViewImpl implements UsageViewEx {
     return result;
   }
 
+  @RequiresBackgroundThread
+  @RequiresReadLock
   public UsageNode doAppendUsage(@NotNull Usage usage) {
-    ApplicationManager.getApplication().assertIsNonDispatchThread();
+    ThreadingAssertions.assertBackgroundThread();
     // invoke in ReadAction to be sure that usages are not invalidated while the tree is being built
-    ApplicationManager.getApplication().assertReadAccessAllowed();
+    ThreadingAssertions.assertReadAccess();
     if (!usage.isValid()) {
       // because the view is built incrementally, the usage may be already invalid, so need to filter such cases
       return null;
@@ -1398,6 +1543,7 @@ public class UsageViewImpl implements UsageViewEx {
   }
 
   @Override
+  @RequiresEdt
   public void removeUsagesBulk(@NotNull Collection<? extends Usage> usages) {
     Usage toSelect = getNextToSelect(usages);
     UsageNode nodeToSelect = toSelect != null ? myUsageNodes.get(toSelect) : null;
@@ -1417,7 +1563,9 @@ public class UsageViewImpl implements UsageViewEx {
 
     if (!nodes.isEmpty() && !myPresentation.isDetachedMode()) {
       UIUtil.invokeLaterIfNeeded(() -> {
-        if (isDisposed()) return;
+        if (isDisposed()) {
+          return;
+        }
         DefaultTreeModel treeModel = (DefaultTreeModel)myTree.getModel();
         ((GroupNode)treeModel.getRoot()).removeUsagesBulk(nodes, treeModel);
         if (nodeToSelect != null) {
@@ -1447,6 +1595,7 @@ public class UsageViewImpl implements UsageViewEx {
   }
 
   @Override
+  @RequiresEdt
   public void selectUsages(Usage @NotNull [] usages) {
     ThreadingAssertions.assertEventDispatchThread();
     TreePath[] paths = usagesToNodes(Arrays.stream(usages))
@@ -1458,12 +1607,14 @@ public class UsageViewImpl implements UsageViewEx {
   }
 
   @Override
+  @RequiresEdt
   public @NotNull JComponent getPreferredFocusableComponent() {
     ThreadingAssertions.assertEventDispatchThread();
     return myTree != null ? myTree : getComponent();
   }
 
   @Override
+  @RequiresEdt
   public @NotNull JComponent getComponent() {
     ThreadingAssertions.assertEventDispatchThread();
     return myRootPanel == null ? new JLabel() : myRootPanel;
@@ -1485,9 +1636,12 @@ public class UsageViewImpl implements UsageViewEx {
     content.setDisposer(this);
   }
 
+  @RequiresEdt
   private void updateImmediately() {
     ThreadingAssertions.assertEventDispatchThread();
-    if (isDisposed()) return;
+    if (isDisposed()) {
+      return;
+    }
     TreeNode root = (TreeNode)myTree.getModel().getRoot();
     List<Node> toUpdate = new ArrayList<>();
     checkNodeValidity(root, new TreePath(root), toUpdate);
@@ -1496,7 +1650,9 @@ public class UsageViewImpl implements UsageViewEx {
   }
 
   private void queueUpdateBulk(@NotNull List<? extends Node> toUpdate, @NotNull Runnable onCompletedInEdt) {
-    if (toUpdate.isEmpty() || isDisposed()) return;
+    if (toUpdate.isEmpty() || isDisposed()) {
+      return;
+    }
     ReadAction.nonBlocking((Callable<?>)() -> {
         for (Node node : toUpdate) {
           try {
@@ -1508,13 +1664,16 @@ public class UsageViewImpl implements UsageViewEx {
         return null;
       })
       .expireWith(this)
-      .finishOnUiThread(ModalityState.defaultModalityState(), __ -> onCompletedInEdt.run())
+      .finishOnUiThread(ModalityState.defaultModalityState(), _ -> onCompletedInEdt.run())
       .submit(updateRequests);
   }
 
+  @RequiresEdt
   private void updateImmediatelyNodesUpToRoot(@NotNull Collection<? extends Node> nodes) {
     ThreadingAssertions.assertEventDispatchThread();
-    if (isDisposed()) return;
+    if (isDisposed()) {
+      return;
+    }
     TreeNode root = (TreeNode)myTree.getModel().getRoot();
     Set<Node> queued = new HashSet<>();
     List<Node> toUpdate = new ArrayList<>();
@@ -1535,6 +1694,7 @@ public class UsageViewImpl implements UsageViewEx {
   }
 
 
+  @RequiresEdt
   private void updateOnSelectionChanged(@NotNull Project project) {
     ThreadingAssertions.assertEventDispatchThread();
     if (myCurrentUsageContextPanel != null) {
@@ -1555,6 +1715,7 @@ public class UsageViewImpl implements UsageViewEx {
     }
   }
 
+  @RequiresEdt
   private void checkNodeValidity(@NotNull TreeNode node, @NotNull TreePath path, @NotNull List<? super Node> result) {
     ThreadingAssertions.assertEventDispatchThread();
     boolean shouldCheckChildren = true;
@@ -1584,10 +1745,11 @@ public class UsageViewImpl implements UsageViewEx {
   }
 
   void updateLater() {
-    updateAlarm.cancelAndRequest();
+    updateAlarm.queue(Unit.INSTANCE);
   }
 
   @Override
+  @RequiresEdt
   public void close() {
     cancelCurrentSearch();
     if (myContent != null) {
@@ -1595,18 +1757,20 @@ public class UsageViewImpl implements UsageViewEx {
     }
   }
 
+  @RequiresEdt
   private void saveSplitterProportions() {
     ThreadingAssertions.assertEventDispatchThread();
     getUsageViewSettings().setPreviewUsagesSplitterProportion(myPreviewSplitter.getProportion());
   }
 
   @Override
+  @RequiresEdt
   public void dispose() {
     try {
       ThreadingAssertions.assertEventDispatchThread();
       disposeUsageContextPanels();
       isDisposed = true;
-      updateAlarm.cancelAllRequests();
+      updateAlarm.queue(Unit.INSTANCE);
       fusRunnable = null; // Release reference to this
 
       cancelCurrentSearch();
@@ -1672,13 +1836,19 @@ public class UsageViewImpl implements UsageViewEx {
     mySearchInProgress = searchInProgress;
     if (!myPresentation.isDetachedMode()) {
       UIUtil.invokeLaterIfNeeded(() -> {
-        if (isDisposed()) return;
+        if (isDisposed()) {
+          return;
+        }
         if (getUsageViewSettings().isExpanded() && myUsageNodes.size() < 10000) {
           expandAll();
         }
-        if (userHasSelectedNode()) return;
+        if (userHasSelectedNode()) {
+          return;
+        }
         Node nodeToSelect = ObjectUtils.coalesce(myAutoSelectedGroupNode, myModel.getFirstUsageNode());
-        if (nodeToSelect == null) return;
+        if (nodeToSelect == null) {
+          return;
+        }
         showNode(nodeToSelect);
       });
     }
@@ -1699,6 +1869,7 @@ public class UsageViewImpl implements UsageViewEx {
     return isDisposed || myProject.isDisposed();
   }
 
+  @RequiresEdt
   private void showNode(@NotNull Node node) {
     ThreadingAssertions.assertEventDispatchThread();
     if (!isDisposed() && !myPresentation.isDetachedMode()) {
@@ -1715,6 +1886,7 @@ public class UsageViewImpl implements UsageViewEx {
   }
 
   @Override
+  @RequiresEdt
   public void addButtonToLowerPane(@NotNull Action action) {
     ThreadingAssertions.assertEventDispatchThread();
     int index = myButtonPanel.getComponentCount();
@@ -1728,25 +1900,37 @@ public class UsageViewImpl implements UsageViewEx {
 
   @Override
   public void addButtonToLowerPane(@NotNull Runnable runnable, @NotNull @NlsContexts.Button String text) {
-    addButtonToLowerPane(new AbstractAction(UIUtil.replaceMnemonicAmpersand(text)) {
-      @Override
-      public void actionPerformed(ActionEvent e) {
-        runnable.run();
-      }
-    });
+    addButtonToLowerPane(runnable, text, false);
   }
 
   @Override
+  @RequiresEdt
+  public void addButtonToLowerPane(@NotNull Runnable runnable, @NotNull @NlsContexts.Button String text, boolean dumbAware) {
+    AbstractAction action = new AbstractAction(UIUtil.replaceMnemonicAmpersand(text)) {
+      @Override
+      public void actionPerformed(ActionEvent e) {
+        WriteIntentReadAction.run(runnable);
+      }
+    };
+    action.putValue(DUMB_AWARE_KEY, dumbAware);
+    addButtonToLowerPane(action);
+  }
+
+  @Override
+  @RequiresEdt
   public void setAdditionalComponent(@Nullable JComponent comp) {
     BorderLayout layout = (BorderLayout)myAdditionalComponent.getLayout();
     Component prev = layout.getLayoutComponent(myAdditionalComponent, BorderLayout.CENTER);
-    if (prev == comp) return;
+    if (prev == comp) {
+      return;
+    }
     if (prev != null) myAdditionalComponent.remove(prev);
     if (comp != null) myAdditionalComponent.add(comp, BorderLayout.CENTER);
     myAdditionalComponent.revalidate();
   }
 
   @Override
+  @RequiresEdt
   public void addPerformOperationAction(@NotNull Runnable processRunnable,
                                         @Nullable @NlsContexts.Command String commandName,
                                         @NotNull @NlsContexts.DialogMessage String cannotMakeString,
@@ -1755,13 +1939,25 @@ public class UsageViewImpl implements UsageViewEx {
   }
 
   @Override
+  @RequiresEdt
   public void addPerformOperationAction(@NotNull Runnable processRunnable,
                                         @Nullable @NlsContexts.Command String commandName,
                                         @NotNull @NlsContexts.DialogMessage String cannotMakeString,
                                         @NotNull @NlsContexts.Button String shortDescription,
                                         boolean checkReadOnlyStatus) {
+    addPerformOperationAction(processRunnable, commandName, cannotMakeString, shortDescription, checkReadOnlyStatus, false);
+  }
+
+  @Override
+  @RequiresEdt
+  public void addPerformOperationAction(@NotNull Runnable processRunnable,
+                                        @Nullable @NlsContexts.Command String commandName,
+                                        @NotNull @NlsContexts.DialogMessage String cannotMakeString,
+                                        @NotNull @NlsContexts.Button String shortDescription,
+                                        boolean checkReadOnlyStatus,
+                                        boolean dumbAware) {
     Runnable runnable = new MyPerformOperationRunnable(processRunnable, commandName, cannotMakeString, checkReadOnlyStatus);
-    addButtonToLowerPane(runnable, shortDescription);
+    addButtonToLowerPane(runnable, shortDescription, dumbAware);
   }
 
   private boolean allTargetsAreValid() {
@@ -1781,7 +1977,9 @@ public class UsageViewImpl implements UsageViewEx {
 
   @ApiStatus.Internal
   public boolean canPerformReRun() {
-    if (myRerunAction != null && myRerunAction.isEnabled()) return allTargetsAreValid();
+    if (myRerunAction != null && myRerunAction.isEnabled()) {
+      return allTargetsAreValid();
+    }
     try {
       return myUsageSearcherFactory != null && allTargetsAreValid() && myUsageSearcherFactory.get() != null;
     }
@@ -1849,6 +2047,7 @@ public class UsageViewImpl implements UsageViewEx {
   }
 
 
+  @RequiresEdt
   private @Nullable Node getSelectedNode() {
     ThreadingAssertions.assertEventDispatchThread();
     TreePath path = myTree.getLeadSelectionPath();
@@ -1860,6 +2059,7 @@ public class UsageViewImpl implements UsageViewEx {
     return selectedNodes(myTree);
   }
 
+  @RequiresEdt
   private static @NotNull List<TreeNode> selectedNodes(@NotNull MyTree tree) {
     ThreadingAssertions.assertEventDispatchThread();
     TreePath[] selectionPaths = tree.getSelectionPaths();
@@ -1868,14 +2068,15 @@ public class UsageViewImpl implements UsageViewEx {
            : ContainerUtil.mapNotNull(selectionPaths, p -> ObjectUtils.tryCast(p.getLastPathComponent(), TreeNode.class));
   }
 
-  private @NotNull JBIterable<TreeNode> traverseNodesRecursively(@NotNull List<? extends TreeNode> roots) {
+  private static @NotNull JBIterable<TreeNode> traverseNodesRecursively(@NotNull List<? extends TreeNode> roots) {
     return TreeUtil.treeNodeTraverser(null).withRoots(roots).traverse();
   }
 
   @Override
-  public @NotNull Set<Usage> getSelectedUsages() {
+  @RequiresEdt
+  public @Unmodifiable @NotNull Set<Usage> getSelectedUsages() {
     ThreadingAssertions.assertEventDispatchThread();
-    return new HashSet<>(allUsagesRecursive(selectedNodes()));
+    return Set.copyOf(allUsagesRecursive(selectedNodes()));
   }
 
   private static @Unmodifiable @NotNull List<@NotNull Usage> allUsagesRecursive(@NotNull List<? extends TreeNode> selection) {
@@ -1896,8 +2097,11 @@ public class UsageViewImpl implements UsageViewEx {
   }
 
   private @Nullable Navigatable getNavigatableForNode(@NotNull DefaultMutableTreeNode node, boolean allowRequestFocus) {
-    Object userObject = node.getUserObject();
-    if (userObject instanceof Navigatable navigatable) {
+    Object maybeNavigatable = node;
+    if (!(maybeNavigatable instanceof Navigatable)) {
+      maybeNavigatable = node.getUserObject();
+    }
+    if (maybeNavigatable instanceof Navigatable navigatable) {
       return navigatable.canNavigate() ? new Navigatable() {
         @Override
         public void navigate(boolean requestFocus) {
@@ -1931,11 +2135,10 @@ public class UsageViewImpl implements UsageViewEx {
       mySupport = new OccurenceNavigatorSupport(tree) {
         @Override
         protected Navigatable createDescriptorForNode(@NotNull DefaultMutableTreeNode node) {
-          if (node.getChildCount() > 0) return null;
-          if (node instanceof Node n && n.isExcluded()) return null;
-          try (AccessToken ignore = SlowOperations.knownIssue("IJPL-162332")) {
-            return getNavigatableForNode(node, !myPresentation.isReplaceMode());
+          if (node.getChildCount() > 0 || node instanceof Node n && n.isExcluded()) {
+            return null;
           }
+          return getNavigatableForNode(node, !myPresentation.isReplaceMode());
         }
 
         @Override
@@ -2149,14 +2352,16 @@ public class UsageViewImpl implements UsageViewEx {
     }
 
     void update() {
-      boolean globallyEnabled = !isSearchInProgress() && !DumbService.isDumb(myProject);
+      boolean isSearchInProgress = isSearchInProgress();
+      boolean isDumb = DumbService.isDumb(myProject);
       for (int i = 0; i < getComponentCount(); ++i) {
         Component component = getComponent(i);
         if (component instanceof JButton button) {
           Action action = button.getAction();
           if (action != null) {
             if (myNeedUpdateButtons) {
-              button.setEnabled(globallyEnabled && action.isEnabled());
+              Boolean isDumbAware = (Boolean)action.getValue(DUMB_AWARE_KEY);
+              button.setEnabled(!isSearchInProgress && action.isEnabled() && (!isDumb || isDumbAware));
             }
             Object name = action.getValue(Action.NAME);
             if (name instanceof String string) {
@@ -2164,7 +2369,7 @@ public class UsageViewImpl implements UsageViewEx {
             }
           }
           else {
-            button.setEnabled(globallyEnabled);
+            button.setEnabled(!isSearchInProgress && !isDumb);
           }
         }
       }
@@ -2172,27 +2377,20 @@ public class UsageViewImpl implements UsageViewEx {
     }
   }
 
-  private final class UsageState {
-    private final Usage myUsage;
-    private final boolean mySelected;
-
-    private UsageState(@NotNull Usage usage, boolean isSelected) {
-      myUsage = usage;
-      mySelected = isSelected;
-    }
-
-    private void restore() {
+  private record UsageState(@NotNull Usage usage, boolean isSelected) {
+    @RequiresEdt
+    private void restore(@NotNull UsageViewImpl usageView) {
       ThreadingAssertions.assertEventDispatchThread();
-      UsageNode node = myUsageNodes.get(myUsage);
+      UsageNode node = usageView.myUsageNodes.get(usage);
       if (node == NULL_NODE || node == null) {
         return;
       }
       DefaultMutableTreeNode parentGroupingNode = (DefaultMutableTreeNode)node.getParent();
       if (parentGroupingNode != null) {
         TreePath treePath = new TreePath(parentGroupingNode.getPath());
-        myTree.expandPath(treePath);
-        if (mySelected) {
-          myTree.addSelectionPath(treePath.pathByAddingChild(node));
+        usageView.myTree.expandPath(treePath);
+        if (isSelected) {
+          usageView.myTree.addSelectionPath(treePath.pathByAddingChild(node));
         }
       }
     }
@@ -2216,7 +2414,9 @@ public class UsageViewImpl implements UsageViewEx {
 
     @Override
     public void run() {
-      if (myCheckReadOnlyStatus && !checkReadonlyUsages()) return;
+      if (myCheckReadOnlyStatus && !checkReadonlyUsages()) {
+        return;
+      }
       PsiDocumentManager.getInstance(myProject).commitAllDocuments();
       if (myCannotMakeString != null && !myCannotMakeString.isEmpty() && myChangesDetected) {
         String title = UsageViewBundle.message("changes.detected.error.title");
@@ -2284,10 +2484,13 @@ public class UsageViewImpl implements UsageViewEx {
   }
 
   @ApiStatus.Internal
+  @RequiresEdt
   public Usage getNextToSelect(@NotNull Usage toDelete) {
     ThreadingAssertions.assertEventDispatchThread();
     UsageNode usageNode = myUsageNodes.get(toDelete);
-    if (usageNode == null || usageNode.getParent().getChildCount() == 0) return null;
+    if (usageNode == null || usageNode.getParent().getChildCount() == 0) {
+      return null;
+    }
 
     DefaultMutableTreeNode node = myRootPanel.mySupport.findNextNodeAfter(myTree, usageNode, true);
     if (node == null) node = myRootPanel.mySupport.findNextNodeAfter(myTree, usageNode, false); // last node
@@ -2295,6 +2498,7 @@ public class UsageViewImpl implements UsageViewEx {
     return node == null ? null : node.getUserObject() instanceof Usage usage ? usage : null;
   }
 
+  @RequiresEdt
   private Usage getNextToSelect(@NotNull Collection<? extends Usage> toDelete) {
     ThreadingAssertions.assertEventDispatchThread();
     Usage toSelect = null;
@@ -2309,6 +2513,7 @@ public class UsageViewImpl implements UsageViewEx {
   }
 
   private interface ExclusionHandlerEx<Node> extends ExclusionHandler<Node> {
+    @RequiresEdt
     void excludeNodeSilently(@NotNull Node node);
   }
 
