@@ -3,7 +3,9 @@ package com.intellij.openapi.vcs.changes.actions.diff.lst;
 
 import com.intellij.diff.contents.DiffContent;
 import com.intellij.diff.contents.DocumentContent;
+import com.intellij.diff.impl.AssignmentTracker;
 import com.intellij.diff.requests.ContentDiffRequest;
+import com.intellij.openapi.application.ReadAction;
 import com.intellij.openapi.editor.Document;
 import com.intellij.openapi.fileEditor.FileDocumentManager;
 import com.intellij.openapi.project.Project;
@@ -29,8 +31,7 @@ public class LocalChangeListDiffRequest extends ContentDiffRequest {
   private final @NotNull @NlsSafe String myChangelistName;
   private final @NotNull ContentDiffRequest myRequest;
 
-  private int myAssignments;
-  private boolean myInstalled;
+  private final AssignmentTracker myAssignmentTracker = new LstAssignmentTracker();
 
   public LocalChangeListDiffRequest(@NotNull Project project,
                                     @NotNull VirtualFile virtualFile,
@@ -103,34 +104,21 @@ public class LocalChangeListDiffRequest extends ContentDiffRequest {
   @RequiresEdt
   public void onAssigned(boolean isAssigned) {
     myRequest.onAssigned(isAssigned);
-
-    if (isAssigned) {
-      if (!myInstalled) {
-        myInstalled = installTracker();
-      }
-      myAssignments++;
-    }
-    else {
-      if (myAssignments == 1 && myInstalled) {
-        releaseTracker();
-        myInstalled = false;
-      }
-      myAssignments--;
-    }
-
-    assert myAssignments >= 0;
+    myAssignmentTracker.onAssigned(isAssigned);
   }
 
   private boolean installTracker() {
-    Document document = FileDocumentManager.getInstance().getDocument(myVirtualFile);
-    if (document == null) return false;
+    return ReadAction.computeBlocking(() -> {
+      Document document = FileDocumentManager.getInstance().getDocument(myVirtualFile);
+      if (document == null) return false;
 
-    LineStatusTrackerManager.getInstance(myProject).requestTrackerFor(document, this);
+      LineStatusTrackerManager.getInstance(myProject).requestTrackerFor(document, this);
 
-    DocumentContent beforeContent = (DocumentContent)getContents().get(0);
-    CharSequence beforeText = beforeContent.getDocument().getImmutableCharSequence();
-    LineStatusTrackerManager.getInstanceImpl(myProject).offerTrackerContent(document, beforeText);
-    return true;
+      DocumentContent beforeContent = (DocumentContent)getContents().getFirst();
+      CharSequence beforeText = beforeContent.getDocument().getImmutableCharSequence();
+      LineStatusTrackerManager.getInstanceImpl(myProject).offerTrackerContent(document, beforeText);
+      return true;
+    });
   }
 
   private void releaseTracker() {
@@ -138,5 +126,24 @@ public class LocalChangeListDiffRequest extends ContentDiffRequest {
     if (document == null) return;
 
     LineStatusTrackerManager.getInstance(myProject).releaseTrackerFor(document, this);
+  }
+
+  private class LstAssignmentTracker extends AssignmentTracker {
+    private boolean myInstalled;
+
+    @Override
+    public void onEachAssignment() {
+      if (!myInstalled) {
+        myInstalled = installTracker();
+      }
+    }
+
+    @Override
+    public void onLastUnassignment() {
+      if (myInstalled) {
+        releaseTracker();
+        myInstalled = false;
+      }
+    }
   }
 }
