@@ -2,14 +2,17 @@
 package com.jetbrains.python.psi.impl;
 
 import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.Iterables;
 import com.intellij.codeInsight.completion.CompletionUtilCoreImpl;
 import com.intellij.lang.ASTNode;
 import com.intellij.navigation.ItemPresentation;
 import com.intellij.openapi.util.Comparing;
 import com.intellij.openapi.util.NotNullLazyValue;
 import com.intellij.openapi.util.Ref;
-import com.intellij.psi.*;
+import com.intellij.psi.PsiElement;
+import com.intellij.psi.PsiFile;
+import com.intellij.psi.PsiReference;
+import com.intellij.psi.ResolveState;
+import com.intellij.psi.StubBasedPsiElement;
 import com.intellij.psi.scope.PsiScopeProcessor;
 import com.intellij.psi.search.LocalSearchScope;
 import com.intellij.psi.search.SearchScope;
@@ -17,7 +20,11 @@ import com.intellij.psi.stubs.IStubElementType;
 import com.intellij.psi.stubs.StubElement;
 import com.intellij.psi.tree.TokenSet;
 import com.intellij.psi.util.CachedValueProvider.Result;
-import com.intellij.psi.util.*;
+import com.intellij.psi.util.CachedValuesManager;
+import com.intellij.psi.util.ParameterizedCachedValue;
+import com.intellij.psi.util.PsiModificationTracker;
+import com.intellij.psi.util.PsiTreeUtil;
+import com.intellij.psi.util.QualifiedName;
 import com.intellij.ui.IconManager;
 import com.intellij.ui.PlatformIcons;
 import com.intellij.util.ArrayFactory;
@@ -26,17 +33,55 @@ import com.intellij.util.IncorrectOperationException;
 import com.intellij.util.Processor;
 import com.intellij.util.containers.ContainerUtil;
 import com.intellij.util.containers.MultiMap;
-import com.jetbrains.python.*;
+import com.jetbrains.python.PyCustomType;
+import com.jetbrains.python.PyElementTypes;
+import com.jetbrains.python.PyLanguageFacadeKt;
+import com.jetbrains.python.PyNames;
+import com.jetbrains.python.PyStubElementTypes;
+import com.jetbrains.python.PythonDialectsTokenSetProvider;
 import com.jetbrains.python.ast.PyAstFunction.Modifier;
 import com.jetbrains.python.ast.impl.PyUtilCore;
 import com.jetbrains.python.codeInsight.PyDataclassParameters;
+import com.jetbrains.python.codeInsight.stdlib.PyDataclassTypeProvider;
 import com.jetbrains.python.codeInsight.controlflow.ControlFlowCache;
 import com.jetbrains.python.codeInsight.controlflow.ScopeOwner;
 import com.jetbrains.python.codeInsight.dataflow.scope.ScopeUtil;
-import com.jetbrains.python.codeInsight.stdlib.PyDataclassTypeProvider;
 import com.jetbrains.python.codeInsight.typing.PyTypingTypeProvider;
 import com.jetbrains.python.documentation.docstrings.DocStringUtil;
-import com.jetbrains.python.psi.*;
+import com.jetbrains.python.psi.AccessDirection;
+import com.jetbrains.python.psi.LanguageLevel;
+import com.jetbrains.python.psi.Property;
+import com.jetbrains.python.psi.PyArgumentList;
+import com.jetbrains.python.psi.PyAssignmentStatement;
+import com.jetbrains.python.psi.PyCallExpression;
+import com.jetbrains.python.psi.PyCallable;
+import com.jetbrains.python.psi.PyClass;
+import com.jetbrains.python.psi.PyDecorator;
+import com.jetbrains.python.psi.PyDecoratorList;
+import com.jetbrains.python.psi.PyElement;
+import com.jetbrains.python.psi.PyElementVisitor;
+import com.jetbrains.python.psi.PyExpression;
+import com.jetbrains.python.psi.PyFile;
+import com.jetbrains.python.psi.PyFunction;
+import com.jetbrains.python.psi.PyKeywordArgument;
+import com.jetbrains.python.psi.PyKnownDecorator;
+import com.jetbrains.python.psi.PyKnownDecoratorUtil;
+import com.jetbrains.python.psi.PyNoneLiteralExpression;
+import com.jetbrains.python.psi.PyParameter;
+import com.jetbrains.python.psi.PyPossibleClassMember;
+import com.jetbrains.python.psi.PyRecursiveElementVisitor;
+import com.jetbrains.python.psi.PyReferenceExpression;
+import com.jetbrains.python.psi.PyStatementList;
+import com.jetbrains.python.psi.PyStringLiteralExpression;
+import com.jetbrains.python.psi.PySubscriptionExpression;
+import com.jetbrains.python.psi.PyTargetExpression;
+import com.jetbrains.python.psi.PyTypeDeclarationStatement;
+import com.jetbrains.python.psi.PyTypeParameterList;
+import com.jetbrains.python.psi.PyTypedElement;
+import com.jetbrains.python.psi.PyUtil;
+import com.jetbrains.python.psi.PyWithItem;
+import com.jetbrains.python.psi.PyWithStatement;
+import com.jetbrains.python.psi.StructuredDocString;
 import com.jetbrains.python.psi.impl.stubs.PyClassElementType;
 import com.jetbrains.python.psi.impl.stubs.PyVersionSpecificStubBaseKt;
 import com.jetbrains.python.psi.resolve.PyResolveContext;
@@ -46,7 +91,13 @@ import com.jetbrains.python.psi.stubs.PropertyStubStorage;
 import com.jetbrains.python.psi.stubs.PyClassStub;
 import com.jetbrains.python.psi.stubs.PyFunctionStub;
 import com.jetbrains.python.psi.stubs.PyTargetExpressionStub;
-import com.jetbrains.python.psi.types.*;
+import com.jetbrains.python.psi.types.PyAnyType;
+import com.jetbrains.python.psi.types.PyCallableParameter;
+import com.jetbrains.python.psi.types.PyClassLikeType;
+import com.jetbrains.python.psi.types.PyClassType;
+import com.jetbrains.python.psi.types.PyClassTypeImpl;
+import com.jetbrains.python.psi.types.PyType;
+import com.jetbrains.python.psi.types.TypeEvalContext;
 import com.jetbrains.python.pyi.PyiUtil;
 import com.jetbrains.python.toolbox.Maybe;
 import one.util.streamex.StreamEx;
@@ -54,8 +105,22 @@ import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
-import javax.swing.*;
-import java.util.*;
+import javax.swing.Icon;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.Deque;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.LinkedHashSet;
+import java.util.LinkedList;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Optional;
+import java.util.Set;
+import java.util.stream.Collectors;
 
 import static com.intellij.openapi.util.text.StringUtil.join;
 import static com.intellij.openapi.util.text.StringUtil.notNullize;
@@ -84,7 +149,7 @@ public class PyClassImpl extends PyBaseElementImpl<PyClassStub> implements PyCla
   @Override
   public PyType getType(@NotNull TypeEvalContext context, @NotNull TypeEvalContext.Key key) {
     if (PyTypingTypeProvider.ANY.equals(getQualifiedName())) {
-      return null;
+      return PyAnyType.getAny();
     }
     return new PyClassTypeImpl(this, true);
   }
@@ -169,7 +234,7 @@ public class PyClassImpl extends PyBaseElementImpl<PyClassStub> implements PyCla
   }
 
   public static boolean isSixWithMetaclassCall(@NotNull PyExpression expression) {
-    if (expression instanceof PyCallExpression){
+    if (expression instanceof PyCallExpression) {
       final PyExpression callee = ((PyCallExpression)expression).getCallee();
 
       if (callee instanceof PyReferenceExpression) {
@@ -231,7 +296,8 @@ public class PyClassImpl extends PyBaseElementImpl<PyClassStub> implements PyCla
     final PyClassType currentType = new PyClassTypeImpl(this, true);
     final TypeEvalContext contextToUse = notNullizeContext(context);
 
-    for (PyClassLikeType type : Iterables.concat(Collections.singletonList(currentType), getAncestorTypes(contextToUse))) {
+    List<PyClassLikeType> meAndAncestors = ContainerUtil.concat(Collections.singletonList(currentType), getAncestorTypes(contextToUse));
+    for (PyClassLikeType type : ContainerUtil.reverse(meAndAncestors)) {
       if (!(type instanceof PyClassType)) return null;
 
       final PyClass cls = ((PyClassType)type).getPyClass();
@@ -241,13 +307,15 @@ public class PyClassImpl extends PyBaseElementImpl<PyClassStub> implements PyCla
 
       if (!cls.isNewStyleClass(contextToUse)) return null;
 
+      result.removeAll(getNamesOfOwnAttributesThatHaveAssignedValues()); // remove slots that are shadowed by class attributes
+
       List<String> ownSlots = cls.getOwnSlots();
       if (ownSlots != null && ownSlots.contains(PyNames.DUNDER_DICT)) {
         return null; // not "viably slotted" due to __dict__ in __slots__
       }
       if (ownSlots == null) {
         // check @dataclass(slots=True)
-        ownSlots = getOwnSlotsSynthesized(contextToUse);
+        ownSlots = getOwnSlotsSynthesized(cls, contextToUse);
       }
       if (ownSlots == null) {
         return null; // not "viably slotted"
@@ -266,16 +334,32 @@ public class PyClassImpl extends PyBaseElementImpl<PyClassStub> implements PyCla
       return stub.getSlots();
     }
 
-    final PyTargetExpression slots = ContainerUtil.find(getClassAttributes(), target -> PyNames.SLOTS.equals(target.getName()));
-    if (slots != null) {
-      final PyExpression value = slots.findAssignedValue();
+    final PyTargetExpression slotsTargetExpr = ContainerUtil.find(getClassAttributes(), target -> PyNames.SLOTS.equals(target.getName()));
+    if (slotsTargetExpr != null) {
+      final PyExpression slotsValue = slotsTargetExpr.findAssignedValue();
+      final LinkedHashSet<String> slots = new LinkedHashSet<>();
+      if (slotsValue instanceof PyStringLiteralExpression) {
+        slots.add(((PyStringLiteralExpression)slotsValue).getStringValue());
+      }
+      else {
+        List<@NotNull String> slotsValues = PyUtilCore.strListValue(slotsValue);
+        if (slotsValues != null) {
+          slots.addAll(slotsValues);
+        }
+      }
 
-      return value instanceof PyStringLiteralExpression
-             ? Collections.singletonList(((PyStringLiteralExpression)value).getStringValue())
-             : PyUtilCore.strListValue(value);
+      slots.removeAll(getNamesOfOwnAttributesThatHaveAssignedValues()); // remove slots that are shadowed by class attributes
+
+      return new ArrayList<>(slots);
     }
 
     return null;
+  }
+
+  private Set<String> getNamesOfOwnAttributesThatHaveAssignedValues() {
+    return getClassAttributes().stream()
+      .filter(target -> target.hasAssignedValue() && target.getName() != null)
+      .map(PyTargetExpression::getName).collect(Collectors.toSet());
   }
 
 
@@ -283,13 +367,14 @@ public class PyClassImpl extends PyBaseElementImpl<PyClassStub> implements PyCla
    * Returns null if this class is not made "viably slotted" via <code>@dataclass(slots=True)</code>.
    * Returns a list of all valid slotted attribute names otherwise.
    */
-  private @Nullable List<@NotNull String> getOwnSlotsSynthesized(@NotNull TypeEvalContext context) {
-    PyDataclassParameters dcParams = parseDataclassParameters(this, context);
+  @ApiStatus.Internal
+  public static @Nullable List<@NotNull String> getOwnSlotsSynthesized(@NotNull PyClass cls, @NotNull TypeEvalContext context) {
+    PyDataclassParameters dcParams = parseDataclassParameters(cls, context);
     if (dcParams != null && dcParams.getSlots()) {
       List<String> result = new ArrayList<>();
-      var initVars = PyDataclassTypeProvider.Companion.getInitVars(this, dcParams, context);
+      var initVars = PyDataclassTypeProvider.Helper.getInitVars(cls, dcParams, context);
       var initVarTargets = initVars == null ? emptySet() : ContainerUtil.map2Set(initVars, iv -> iv.getTargetExpression());
-      var attributes = getClassAttributes();
+      var attributes = cls.getClassAttributes();
 
       for (PyTargetExpression target : attributes) {
         final String name = target.getName();
@@ -383,9 +468,9 @@ public class PyClassImpl extends PyBaseElementImpl<PyClassStub> implements PyCla
       boolean found = false;
       PyClassLikeType head = null; // to keep compiler happy; really head is assigned in the loop at least once.
       for (List<PyClassLikeType> seq : nonBlankSequences) {
-        head = seq.get(0);
+        head = seq.getFirst();
         if (head == null) {
-          seq.remove(0);
+          seq.removeFirst();
           found = true;
           break;
         }
@@ -413,8 +498,8 @@ public class PyClassImpl extends PyBaseElementImpl<PyClassStub> implements PyCla
       // remove it from heads of other sequences
       if (head != null) {
         for (List<PyClassLikeType> seq : nonBlankSequences) {
-          if (Comparing.equal(seq.get(0), head)) {
-            seq.remove(0);
+          if (Comparing.equal(seq.getFirst(), head)) {
+            seq.removeFirst();
           }
         }
       }
@@ -425,7 +510,8 @@ public class PyClassImpl extends PyBaseElementImpl<PyClassStub> implements PyCla
   private static @NotNull List<PyClassLikeType> mroLinearize(@NotNull PyClassLikeType type,
                                                              boolean addThisType,
                                                              @NotNull TypeEvalContext context,
-                                                             @NotNull Map<PyClassLikeType, Ref<List<PyClassLikeType>>> cache) throws MROException {
+                                                             @NotNull Map<PyClassLikeType, Ref<List<PyClassLikeType>>> cache)
+    throws MROException {
     final Ref<List<PyClassLikeType>> computed = cache.get(type);
     if (computed != null) {
       if (computed.isNull()) {
@@ -467,7 +553,7 @@ public class PyClassImpl extends PyBaseElementImpl<PyClassStub> implements PyCla
       }
       result = mroMerge(lines);
       if (addThisType) {
-        result.add(0, type);
+        result.addFirst(type);
       }
       result = Collections.unmodifiableList(result);
     }
@@ -689,8 +775,8 @@ public class PyClassImpl extends PyBaseElementImpl<PyClassStub> implements PyCla
   @Override
   public @NotNull List<PyFunction> multiFindInitOrNew(boolean inherited, @Nullable TypeEvalContext context) {
     final MultiNameFinder<PyFunction> processor = isNewStyleClass(context)
-      ? new MultiNameFinder<>(PyNames.INIT, PyNames.NEW)
-      : new MultiNameFinder<>(PyNames.INIT);
+                                                  ? new MultiNameFinder<>(PyNames.INIT, PyNames.NEW)
+                                                  : new MultiNameFinder<>(PyNames.INIT);
 
     visitMethods(processor, inherited, context);
     return processor.myResult;
@@ -1046,7 +1132,9 @@ public class PyClassImpl extends PyBaseElementImpl<PyClassStub> implements PyCla
   }
 
   @Override
-  public boolean visitClassAttributes(Processor<? super PyTargetExpression> processor, boolean inherited, final @Nullable TypeEvalContext context) {
+  public boolean visitClassAttributes(Processor<? super PyTargetExpression> processor,
+                                      boolean inherited,
+                                      final @Nullable TypeEvalContext context) {
     List<PyTargetExpression> methods = getClassAttributes();
     if (!ContainerUtil.process(methods, processor)) return false;
     if (inherited) {
@@ -1080,7 +1168,7 @@ public class PyClassImpl extends PyBaseElementImpl<PyClassStub> implements PyCla
     }
     else {
       getStatementList().acceptChildren(
-        new PyVersionAwareTopLevelElementVisitor(PyLanguageFacadeKt.getEffectiveLanguageLevel(getContainingFile())) {
+        new PyTypeCheckedTopLevelElementVisitor(PyLanguageFacadeKt.getEffectiveLanguageLevel(getContainingFile())) {
           @Override
           protected void checkAddElement(PsiElement psiElement) {
             if (psiElement instanceof PyAssignmentStatement assignmentStatement) {
@@ -1148,7 +1236,7 @@ public class PyClassImpl extends PyBaseElementImpl<PyClassStub> implements PyCla
     Map<String, ScopeOwner> scopesToSkip = StreamEx.of(getInstanceAttributes())
       .filter(e -> e.getName() != null)
       .mapToEntry(e -> e.getName(), e -> ScopeUtil.getScopeOwner(e))
-      .distinct()
+      .distinctKeys()
       .toMap();
     attributes = collectInstanceAttributes(scopesToSkip);
     myFallbackInstanceAttributes = attributes;
@@ -1257,7 +1345,8 @@ public class PyClassImpl extends PyBaseElementImpl<PyClassStub> implements PyCla
   public boolean isNewStyleClass(@Nullable TypeEvalContext context) {
     return NotNullLazyValue.<ParameterizedCachedValue<Boolean, TypeEvalContext>>lazy(() -> {
       return CachedValuesManager.getManager(getProject())
-        .createParameterizedCachedValue(param -> new Result<>(calculateNewStyleClass(param), PsiModificationTracker.MODIFICATION_COUNT), false);
+        .createParameterizedCachedValue(param -> new Result<>(calculateNewStyleClass(param), PsiModificationTracker.MODIFICATION_COUNT),
+                                        false);
     }).getValue().getValue(context);
   }
 
@@ -1437,12 +1526,12 @@ public class PyClassImpl extends PyBaseElementImpl<PyClassStub> implements PyCla
   private @NotNull List<PyClassLikeType> doGetSuperClassTypes(@NotNull TypeEvalContext context) {
     final List<PyClassLikeType> result = new ArrayList<>();
 
-    // In some cases stub may not provide all information, so we use stubs only if AST access id disabled
-    if (!context.maySwitchToAST(this)) {
-      fillSuperClassesNoSwitchToAst(context, getStub(), result);
+    // In some cases stub may not provide all information, so we use stubs only if AST access is disabled
+    if (context.maySwitchToAST(this)) {
+      fillSuperClassesSwitchingToAst(context, result);
     }
     else {
-      fillSuperClassesSwitchingToAst(context, result);
+      fillSuperClassesNoSwitchToAst(context, getStub(), result);
     }
 
     PyPsiUtils.assertValid(this);
@@ -1790,7 +1879,8 @@ public class PyClassImpl extends PyBaseElementImpl<PyClassStub> implements PyCla
 
   private static @Nullable PyClassLikeType classTypeFromQName(@NotNull QualifiedName qualifiedName, @NotNull PyFile containingFile,
                                                               @NotNull TypeEvalContext context) {
-    final PsiElement element = ContainerUtil.getFirstItem(PyResolveUtil.resolveQualifiedNameInScope(qualifiedName, containingFile, context));
+    final PsiElement element =
+      ContainerUtil.getFirstItem(PyResolveUtil.resolveQualifiedNameInScope(qualifiedName, containingFile, context));
     if (element instanceof PyTypedElement) {
       final PyType type = context.getType((PyTypedElement)element);
       if (type instanceof PyClassLikeType) {
